--- a/documentation/content/ru/books/handbook/audit/_index.adoc
+++ b/documentation/content/ru/books/handbook/audit/_index.adoc
@@ -1,5 +1,5 @@
 ---
-description: 'В FreeBSD поддерживается аудит событий безопасности, обеспечивающий надежное, детализированное и настраиваемое журналирование различных системных событий, связанных с безопасностью, включая входы в систему, изменения конфигурации, а также доступ к файлам и сети'
+description: 'В FreeBSD поддерживается аудит событий безопасности, обеспечивающий надёжное, детализированное и настраиваемое журналирование различных системных событий, связанных с безопасностью, включая входы в систему, изменения конфигурации, а также доступ к файлам и сети'
 next: books/handbook/disks
 params:
   path: /books/handbook/audit/
@@ -52,17 +52,17 @@ endif::[]
 [[audit-synopsis]]
 == Обзор
 
-Операционная система FreeBSD включает поддержку аудита событий безопасности. Аудит событий обеспечивает надежное, детализированное и настраиваемое журналирование различных системных событий, связанных с безопасностью, включая входы в систему, изменения конфигурации, доступ к файлам и сети. Эти записи журнала могут быть неоценимыми для мониторинга системы в реальном времени, обнаружения вторжений и "посмертного" анализа после краха системы. FreeBSD реализует опубликованный Sun(TM) программный интерфейс Basic Security Module (BSM) и формат файлов, и также совместима с реализациями аудита Solaris(TM) и Mac OS(R) X.
+Операционная система FreeBSD включает поддержку аудита событий безопасности. Аудит событий обеспечивает надёжное, детализированное и настраиваемое журналирование различных системных событий, связанных с безопасностью, включая входы в систему, изменения конфигурации, доступ к файлам и сети. Эти записи журнала могут быть неоценимыми для мониторинга системы в реальном времени, обнаружения вторжений и "посмертного" анализа после краха системы. FreeBSD реализует опубликованный Sun(TM) программный интерфейс Basic Security Module (BSM) и формат файлов, и также совместима с реализациями аудита Solaris(TM) и Mac OS(R) X.
 
 Эта глава посвящена установке и настройке аудита событий. В ней объясняются политики аудита и приводится пример конфигурации аудита.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Что такое аудит событий и как он работает.
 * Как настроить аудит событий в FreeBSD для пользователей и процессов.
 * Как просмотреть журнал аудита с использованием инструментов сокращения и просмотра аудита.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Понимать основы UNIX(R) и FreeBSD (crossref:basics[basics,Основы FreeBSD]).
 * Быть знакомым с основами настройки и компиляции ядра (crossref:kernelconfig[kernelconfig,Настройка ядра FreeBSD]).
