--- a/documentation/content/ru/books/handbook/audit/_index.po
+++ b/documentation/content/ru/books/handbook/audit/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-30 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookaudit_index/ru/>\n"
@@ -24,7 +24,7 @@ msgstr ""
 msgid "FreeBSD security event auditing supports reliable, fine-grained, and configurable logging of a variety of security-relevant system events, including logins, configuration changes, and file and network access"
 msgstr ""
 "В FreeBSD поддерживается аудит событий безопасности, обеспечивающий "
-"надежное, детализированное и настраиваемое журналирование различных "
+"надёжное, детализированное и настраиваемое журналирование различных "
 "системных событий, связанных с безопасностью, включая входы в систему, "
 "изменения конфигурации, а также доступ к файлам и сети"
 
@@ -65,7 +65,7 @@ msgid ""
 "interoperable with the Solaris(TM) and Mac OS(R) X audit implementations."
 msgstr ""
 "Операционная система FreeBSD включает поддержку аудита событий безопасности. "
-"Аудит событий обеспечивает надежное, детализированное и настраиваемое "
+"Аудит событий обеспечивает надёжное, детализированное и настраиваемое "
 "журналирование различных системных событий, связанных с безопасностью, "
 "включая входы в систему, изменения конфигурации, доступ к файлам и сети. Эти "
 "записи журнала могут быть неоценимыми для мониторинга системы в реальном "
@@ -86,8 +86,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:64
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:66
@@ -109,8 +109,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:70
-msgid "Before reading this chapter, you should:"
-msgstr "Прежде чем читать эту главу, вы должны:"
+msgid "Before reading this chapter:"
+msgstr "Прежде чем читать эту главу, необходимо:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:72
@@ -123,17 +123,17 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:73
 msgid ""
-"Be familiar with the basics of kernel configuration/compilation "
-"(crossref:kernelconfig[kernelconfig,Configuring the FreeBSD Kernel])."
+"Be familiar with the basics of kernel configuration/compilation (crossref:"
+"kernelconfig[kernelconfig,Configuring the FreeBSD Kernel])."
 msgstr ""
-"Быть знакомым с основами настройки и компиляции ядра (crossref:kernelconfig["
-"kernelconfig,Настройка ядра FreeBSD])."
+"Быть знакомым с основами настройки и компиляции ядра (crossref:"
+"kernelconfig[kernelconfig,Настройка ядра FreeBSD])."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:74
 msgid ""
-"Have some familiarity with security and how it pertains to FreeBSD "
-"(crossref:security[security,Security])."
+"Have some familiarity with security and how it pertains to FreeBSD (crossref:"
+"security[security,Security])."
 msgstr ""
 "Иметь некоторое представление о безопасности и о том, как она относится к "
 "FreeBSD (crossref:security[security,Безопасность])."
@@ -211,8 +211,8 @@ msgid ""
 "\"exec\" (ex), and \"login_logout\" (lo)."
 msgstr ""
 "_класс (class)_: именованный набор связанных событий, используемых в "
-"выражениях выбора. Распространённые классы событий включают \"создание "
-"файла\" (fc), \"выполнение\" (ex) и \"вход/выход\" (lo)."
+"выражениях выбора. Распространённые классы событий включают \"создание файла"
+"\" (fc), \"выполнение\" (ex) и \"вход/выход\" (lo)."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:94
@@ -297,8 +297,8 @@ msgstr "Настройка аудита"
 #: documentation/content/en/books/handbook/audit/_index.adoc:104
 msgid ""
 "User space support for event auditing is installed as part of the base "
-"FreeBSD operating system.  Kernel support is available in the "
-"[.filename]#GENERIC# kernel by default, and man:auditd[8] can be enabled by "
+"FreeBSD operating system.  Kernel support is available in the [."
+"filename]#GENERIC# kernel by default, and man:auditd[8] can be enabled by "
 "adding the following line to [.filename]#/etc/rc.conf#:"
 msgstr ""
 "Поддержка аудита событий в пользовательском пространстве устанавливается как "
@@ -487,10 +487,7 @@ msgstr "exec"
 #: documentation/content/en/books/handbook/audit/_index.adoc:164
 #, no-wrap
 msgid "Audit program execution. Auditing of command line arguments and environmental variables is controlled via man:audit_control[5] using the `argv` and `envv` parameters to the `policy` setting."
-msgstr ""
-"Аудит выполнения программ. Аудит аргументов командной строки и переменных "
-"окружения контролируется через man:audit_control[5] с использованием "
-"параметров `argv` и `envv` в настройке `policy`."
+msgstr "Аудит выполнения программ. Аудит аргументов командной строки и переменных окружения контролируется через man:audit_control[5] с использованием параметров `argv` и `envv` в настройке `policy`."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:165
@@ -508,8 +505,7 @@ msgstr "file attribute access"
 #: documentation/content/en/books/handbook/audit/_index.adoc:168
 #, no-wrap
 msgid "Audit the access of object attributes such as man:stat[1] and man:pathconf[2]."
-msgstr ""
-"Аудит доступа к атрибутам объектов, таким как man:stat[1] и man:pathconf[2]."
+msgstr "Аудит доступа к атрибутам объектов, таким как man:stat[1] и man:pathconf[2]."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:169
@@ -563,9 +559,7 @@ msgstr "file attribute modify"
 #: documentation/content/en/books/handbook/audit/_index.adoc:180
 #, no-wrap
 msgid "Audit events where file attribute modification occurs, such as by man:chown[8], man:chflags[1], and man:flock[2]."
-msgstr ""
-"События аудита, связанные с изменением атрибутов файлов, например, с помощью "
-"man:chown[8], man:chflags[1] и man:flock[2]."
+msgstr "События аудита, связанные с изменением атрибутов файлов, например, с помощью man:chown[8], man:chflags[1] и man:flock[2]."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:181
@@ -583,8 +577,7 @@ msgstr "file read"
 #: documentation/content/en/books/handbook/audit/_index.adoc:184
 #, no-wrap
 msgid "Audit events in which data is read or files are opened for reading."
-msgstr ""
-"События аудита, в которых данные читаются или файлы открываются для чтения."
+msgstr "События аудита, в которых данные читаются или файлы открываются для чтения."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:185
@@ -602,9 +595,7 @@ msgstr "file write"
 #: documentation/content/en/books/handbook/audit/_index.adoc:188
 #, no-wrap
 msgid "Audit events in which data is written or files are written or modified."
-msgstr ""
-"События аудита, в которых данные записываются или файлы создаются либо "
-"изменяются."
+msgstr "События аудита, в которых данные записываются или файлы создаются либо изменяются."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:189
@@ -640,9 +631,7 @@ msgstr "ipc"
 #: documentation/content/en/books/handbook/audit/_index.adoc:196
 #, no-wrap
 msgid "Audit various forms of Inter-Process Communication, including POSIX pipes and System V IPC operations."
-msgstr ""
-"Аудит различных форм межпроцессного взаимодействия, включая POSIX-каналы и "
-"операции System V IPC."
+msgstr "Аудит различных форм межпроцессного взаимодействия, включая POSIX-каналы и операции System V IPC."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:197
@@ -714,9 +703,7 @@ msgstr "network"
 #: documentation/content/en/books/handbook/audit/_index.adoc:212
 #, no-wrap
 msgid "Audit events related to network actions such as man:connect[2] and man:accept[2]."
-msgstr ""
-"События аудита, связанные с сетевыми действиями, такими как man:connect[2] и "
-"man:accept[2]."
+msgstr "События аудита, связанные с сетевыми действиями, такими как man:connect[2] и man:accept[2]."
 
 #. type: Table
 #: documentation/content/en/books/handbook/audit/_index.adoc:213
@@ -757,8 +744,8 @@ msgstr "Аудит операций процессов, таких как man:ex
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:222
 msgid ""
-"These audit event classes may be customized by modifying the "
-"[.filename]#audit_class# and [.filename]#audit_event# configuration files."
+"These audit event classes may be customized by modifying the [."
+"filename]#audit_class# and [.filename]#audit_event# configuration files."
 msgstr ""
 "Эти классы событий аудита могут быть настроены путем изменения "
 "конфигурационных файлов [.filename]#audit_class# и [.filename]#audit_event#."
@@ -768,13 +755,13 @@ msgstr ""
 msgid ""
 "Each audit event class may be combined with a prefix indicating whether "
 "successful/failed operations are matched, and whether the entry is adding or "
-"removing matching for the class and type.  crossref:audit[event-"
-"prefixes,Prefixes for Audit Event Classes] summarizes the available prefixes:"
+"removing matching for the class and type.  crossref:audit[event-prefixes,"
+"Prefixes for Audit Event Classes] summarizes the available prefixes:"
 msgstr ""
 "Каждый класс событий аудита может быть объединен с префиксом, указывающим, "
 "соответствуют ли успешные/неудачные операции, и добавляется или удаляется "
-"запись для соответствия классу и типу. В crossref:audit[event-"
-"prefixes,Префиксы для классов событий аудита] приведены доступные префиксы:"
+"запись для соответствия классу и типу. В crossref:audit[event-prefixes,"
+"Префиксы для классов событий аудита] приведены доступные префиксы:"
 
 #. type: Block title
 #: documentation/content/en/books/handbook/audit/_index.adoc:227
@@ -881,8 +868,8 @@ msgstr "Файлы конфигурации"
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:261
 msgid ""
-"The following configuration files for security event auditing are found in "
-"[.filename]#/etc/security#:"
+"The following configuration files for security event auditing are found in [."
+"filename]#/etc/security#:"
 msgstr ""
 "В каталоге [.filename]#/etc/security# находятся следующие файлы конфигурации "
 "для аудита событий безопасности:"
@@ -930,8 +917,8 @@ msgid ""
 "for audit records is running low or when the audit trail file has been "
 "rotated."
 msgstr ""
-"[.filename]#audit_warn#: настраиваемый сценарий оболочки, используемый "
-"man:auditd[8] для генерации предупреждающих сообщений в исключительных "
+"[.filename]#audit_warn#: настраиваемый сценарий оболочки, используемый man:"
+"auditd[8] для генерации предупреждающих сообщений в исключительных "
 "ситуациях, например, когда заканчивается место для записей аудита или когда "
 "файл журнала аудита был перезаписан."
 
@@ -947,8 +934,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:275
 msgid ""
-"In most cases, administrators will only need to modify "
-"[.filename]#audit_control# and [.filename]#audit_user#.  The first file "
+"In most cases, administrators will only need to modify [."
+"filename]#audit_control# and [.filename]#audit_user#.  The first file "
 "controls system-wide audit properties and policies and the second file may "
 "be used to fine-tune auditing by user."
 msgstr ""
@@ -966,8 +953,8 @@ msgstr "Файл [.filename]#audit_control#"
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:280
 msgid ""
-"A number of defaults for the audit subsystem are specified in "
-"[.filename]#audit_control#:"
+"A number of defaults for the audit subsystem are specified in [."
+"filename]#audit_control#:"
 msgstr ""
 "Некоторые параметры подсистемы аудита по умолчанию указаны в файле [."
 "filename]#audit_control#:"
@@ -1062,8 +1049,8 @@ msgid ""
 msgstr ""
 "Запись `policy` определяет список флагов политики, разделённых запятыми, "
 "которые контролируют различные аспекты поведения аудита. Флаг `cnt` "
-"указывает, что система должна продолжать работу, несмотря на сбой аудита ("
-"этот флаг настоятельно рекомендуется). Другой флаг, `argv`, приводит к "
+"указывает, что система должна продолжать работу, несмотря на сбой аудита "
+"(этот флаг настоятельно рекомендуется). Другой флаг, `argv`, приводит к "
 "аудиту аргументов командной строки системного вызова man:execve[2] как части "
 "выполнения команды."
 
@@ -1274,21 +1261,21 @@ msgstr "# auditreduce -u trhodes /var/audit/AUDITFILE | praudit\n"
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:385
 msgid ""
-"Members of the `audit` group have permission to read audit trails in "
-"[.filename]#/var/audit#.  By default, this group is empty, so only the "
-"`root` user can read audit trails.  Users may be added to the `audit` group "
-"in order to delegate audit review rights.  As the ability to track audit log "
+"Members of the `audit` group have permission to read audit trails in [."
+"filename]#/var/audit#.  By default, this group is empty, so only the `root` "
+"user can read audit trails.  Users may be added to the `audit` group in "
+"order to delegate audit review rights.  As the ability to track audit log "
 "contents provides significant insight into the behavior of users and "
 "processes, it is recommended that the delegation of audit review rights be "
 "performed with caution."
 msgstr ""
 "Участники группы `audit` имеют право читать журналы аудита в [.filename]#/"
-"var/audit#. По умолчанию эта группа пуста, поэтому только пользователь `root`"
-" может читать журналы аудита. Пользователи могут быть добавлены в группу "
-"`audit` для делегирования прав просмотра аудита. Поскольку возможность "
-"отслеживать содержимое журналов аудита дает значительное представление о "
-"поведении пользователей и процессов, рекомендуется делегировать права "
-"просмотра аудита с осторожностью."
+"var/audit#. По умолчанию эта группа пуста, поэтому только пользователь "
+"`root` может читать журналы аудита. Пользователи могут быть добавлены в "
+"группу `audit` для делегирования прав просмотра аудита. Поскольку "
+"возможность отслеживать содержимое журналов аудита дает значительное "
+"представление о поведении пользователей и процессов, рекомендуется "
+"делегировать права просмотра аудита с осторожностью."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/audit/_index.adoc:386
@@ -1344,8 +1331,8 @@ msgid ""
 "See man:devfs.rules[5] for more information on configuring the devfs file "
 "system."
 msgstr ""
-"За дополнительной информацией о настройке файловой системы devfs см. "
-"man:devfs.rules[5]."
+"За дополнительной информацией о настройке файловой системы devfs см. man:"
+"devfs.rules[5]."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/audit/_index.adoc:413
@@ -1376,13 +1363,13 @@ msgstr "Ротация и сжатие файлов журнала аудита"
 #: documentation/content/en/books/handbook/audit/_index.adoc:422
 msgid ""
 "Audit trails are written to by the kernel and managed by the audit daemon, "
-"man:auditd[8].  Administrators should not attempt to use "
-"man:newsyslog.conf[5] or other tools to directly rotate audit logs.  "
-"Instead, `audit` should be used to shut down auditing, reconfigure the audit "
-"system, and perform log rotation.  The following command causes the audit "
-"daemon to create a new audit log and signal the kernel to switch to using "
-"the new log.  The old log will be terminated and renamed, at which point it "
-"may then be manipulated by the administrator:"
+"man:auditd[8].  Administrators should not attempt to use man:newsyslog."
+"conf[5] or other tools to directly rotate audit logs.  Instead, `audit` "
+"should be used to shut down auditing, reconfigure the audit system, and "
+"perform log rotation.  The following command causes the audit daemon to "
+"create a new audit log and signal the kernel to switch to using the new "
+"log.  The old log will be terminated and renamed, at which point it may then "
+"be manipulated by the administrator:"
 msgstr ""
 "Журналы аудита создаются ядром и управляются демоном аудита man:auditd[8]. "
 "Администраторам не следует пытаться использовать man:newsyslog.conf[5] или "
@@ -1434,8 +1421,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/audit/_index.adoc:442
 msgid ""
 "Automatic rotation of the audit trail file based on file size is possible "
-"using `filesz` in [.filename]#audit_control# as described in "
-"crossref:audit[audit-auditcontrol, The audit_control File]."
+"using `filesz` in [.filename]#audit_control# as described in crossref:"
+"audit[audit-auditcontrol, The audit_control File]."
 msgstr ""
 "Автоматическая ротация файла журнала аудита на основе размера файла возможна "
 "с использованием `filesz` в [.filename]#audit_control#, как описано в "
