--- a/documentation/content/ru/books/handbook/basics/_index.po
+++ b/documentation/content/ru/books/handbook/basics/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-08-26 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-20 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookbasics_index/ru/>\n"
@@ -63,8 +63,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/basics/_index.adoc:60
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/basics/_index.adoc:62
@@ -1009,11 +1009,11 @@ msgid ""
 "usage examples."
 msgstr ""
 "FreeBSD предоставляет различные команды для управления учетными записями "
-"пользователей. Наиболее распространенные команды перечислены в crossref:"
-"basics[users-modifying-utilities,Утилиты для управления учетными записями "
-"пользователей], а также приведены примеры их использования. Для получения "
-"дополнительной информации и примеров использования обратитесь к руководству "
-"(man) каждой утилиты."
+"пользователей. Наиболее распространённые команды перечислены в "
+"crossref:basics[users-modifying-utilities,Утилиты для управления учетными "
+"записями пользователей], а также приведены примеры их использования. Для "
+"получения дополнительной информации и примеров использования обратитесь к "
+"руководству (man) каждой утилиты."
 
 #. type: Block title
 #: documentation/content/en/books/handbook/basics/_index.adoc:353
@@ -1537,7 +1537,7 @@ msgstr ""
 #. type: Block title
 #: documentation/content/en/books/handbook/basics/_index.adoc:562
 #, no-wrap
-msgid "Changing Your Password"
+msgid "Changing The Password"
 msgstr "Смена собственного пароля"
 
 #. type: delimited block . 4
@@ -1874,7 +1874,8 @@ msgid ""
 msgstr ""
 "В этом разделе рассматриваются традиционные права доступа UNIX(R), "
 "используемые в FreeBSD. Для более детального управления доступом к файловой "
-"системе обратитесь к crossref:security[fs-acl,Списки контроля доступа]."
+"системе обратитесь к разделу crossref:security[fs-acl,Списки контроля "
+"доступа]."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/basics/_index.adoc:737
@@ -2620,7 +2621,7 @@ msgid ""
 "`nosuid` wrapper may be able to circumvent it."
 msgstr ""
 "Опция `nosuid` в man:mount[8] приведёт к тихому отказу таких бинарных файлов "
-"без уведомления пользователя. Эта опция не полностью надежна, так как "
+"без уведомления пользователя. Эта опция не полностью надёжна, так как "
 "обёртка `nosuid` может её обойти."
 
 #. type: Plain text
@@ -2766,9 +2767,9 @@ msgid ""
 "directories, such as `/tmp`, by users who do not own the file.  To utilize "
 "this permission, add the `t` mode to the file:"
 msgstr ""
-"Когда `sticky bit` установлен на директории, он разрешает удаление файлов "
+"Когда `sticky bit` установлен на каталоге, он разрешает удаление файлов "
 "только владельцу файла. Это полезно для предотвращения удаления файлов в "
-"общедоступных директориях, таких как `/tmp`, пользователями, не являющимися "
+"общедоступных каталогах, таких как `/tmp`, пользователями, не являющимися "
 "владельцами файла. Чтобы использовать этот режим доступа, добавьте режим `t` "
 "к файлу:"
 
@@ -2841,7 +2842,7 @@ msgid ""
 "onto a parent file system (usually the root file system).  This is further "
 "described in crossref:basics[disk-organization, Disk Organization].  "
 "Standard mount points include `/usr/`, `/var/`, `/tmp/`, `/mnt/`, and `/"
-"cdrom/`.  These directories are usually referenced to entries in `/etc/"
+"media/`.  These directories are usually referenced to entries in `/etc/"
 "fstab`.  This file is a table of various file systems and mount points and "
 "is read by the system.  Most of the file systems in `/etc/fstab` are mounted "
 "automatically at boot time from the script man:rc[8] unless their entry "
@@ -2850,14 +2851,15 @@ msgid ""
 msgstr ""
 "Точка монтирования — это каталог, в который можно подключить дополнительные "
 "файловые системы к родительской файловой системе (обычно корневой файловой "
-"системе). Это подробно описано в разделе crossref:basics[disk-organization,"
-"Организация дисков]. Стандартные точки монтирования включают `/usr/`, `/var/"
-"`, `/tmp/`, `/mnt/` и `/cdrom/`. Эти каталоги обычно связаны с записями в "
-"файле `/etc/fstab`. Этот файл представляет собой таблицу различных файловых "
-"систем и точек монтирования, которая читается системой. Большинство файловых "
-"систем в `/etc/fstab` автоматически монтируются при загрузке с помощью "
-"скрипта man:rc[8], если их запись не содержит параметра `noauto`. "
-"Подробности можно найти в разделе crossref:basics[disks-fstab,Файл fstab]."
+"системе). Это подробно описано в разделе crossref:basics[disk-"
+"organization,Организация дисков]. Стандартные точки монтирования включают `/"
+"usr/`, `/var/`, `/tmp/`, `/mnt/` и `/media/`. Эти каталоги обычно связаны с "
+"записями в файле `/etc/fstab`. Этот файл представляет собой таблицу "
+"различных файловых систем и точек монтирования, которая читается системой. "
+"Большинство файловых систем в `/etc/fstab` автоматически монтируются при "
+"загрузке с помощью скрипта man:rc[8], если их запись не содержит параметра "
+"`noauto`. Подробности можно найти в разделе crossref:basics[disks-fstab,Файл "
+"fstab]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/basics/_index.adoc:1087
@@ -3025,7 +3027,9 @@ msgstr "`/mnt/`"
 #: documentation/content/en/books/handbook/basics/_index.adoc:1129
 #, no-wrap
 msgid "Empty directory commonly used by system administrators as a temporary mount point."
-msgstr "Пустая директория, обычно используемая системными администраторами в качестве временной точки монтирования."
+msgstr ""
+"Пустой каталог, обычно используемый системными администраторами в качестве "
+"временной точки монтирования."
 
 #. type: Table
 #: documentation/content/en/books/handbook/basics/_index.adoc:1130
@@ -3539,14 +3543,14 @@ msgstr "Преимущество единой файловой системы"
 #. type: Plain text
 #: documentation/content/en/books/handbook/basics/_index.adoc:1261
 msgid ""
-"File systems are a fixed size. If you create a file system when you install "
-"FreeBSD and give it a specific size, you may later discover that you need to "
-"make the partition bigger. This is not easily accomplished without backing "
-"up, recreating the file system with the new size, and then restoring the "
-"backed up data."
+"File systems are a fixed size. When creating a file system during the "
+"FreeBSD installation and giving it a specific size, it may be that one wants "
+"to make the partition bigger. This is not easily accomplished without "
+"backing up, recreating the file system with the new size, and then restoring "
+"the backed up data."
 msgstr ""
-"Файловые системы имеют фиксированный размер. Если вы создали файловую "
-"систему при установке FreeBSD и задали ей определённый размер, позже может "
+"Файловые системы имеют фиксированный размер. Если файловая система создаётся "
+"при установке FreeBSD и ей задаётся определённый размер, позже может "
 "оказаться, что раздел нужно увеличить. Это нелегко сделать без резервного "
 "копирования, пересоздания файловой системы с новым размером и последующего "
 "восстановления данных из резервной копии."
@@ -3638,16 +3642,16 @@ msgstr ""
 #: documentation/content/en/books/handbook/basics/_index.adoc:1297
 msgid ""
 "FreeBSD also uses disk space for _swap space_ to provide _virtual memory_.  "
-"This allows your computer to behave as though it has much more memory than "
-"it actually does.  When FreeBSD runs out of memory, it moves some of the "
-"data that is not currently being used to the swap space, and moves it back "
-"in (moving something else out) when it needs it.  This is called _paging_."
+"This allows the computer to behave as though it has much more memory than it "
+"actually does.  When FreeBSD runs out of memory, it moves some of the data "
+"that is not currently being used to the swap space, and moves it back in "
+"(moving something else out) when it needs it.  This is called _paging_."
 msgstr ""
-"FreeBSD также использует место на диске для _раздела подкачки_ (_swap "
-"space_), чтобы обеспечить работу _виртуальной памяти_. Это позволяет "
-"компьютеру вести себя так, как будто у него больше памяти, чем есть на самом "
-"деле. Когда FreeBSD исчерпывает доступную память, она перемещает часть "
-"данных, которые в данный момент не используются, в раздел подкачки, а затем "
+"FreeBSD также использует место на диске для _раздела подкачки_ (_swap space_)"
+", чтобы обеспечить работу _виртуальной памяти_. Это позволяет компьютеру "
+"вести себя так, как будто у него больше памяти, чем есть на самом деле. "
+"Когда FreeBSD исчерпывает доступную память, она перемещает часть данных, "
+"которые в данный момент не используются, в раздел подкачки, а затем "
 "возвращает их обратно (перемещая что-то другое), когда они нужны. Этот "
 "процесс называется _подкачкой_ (_paging_)."
 
@@ -4627,8 +4631,8 @@ msgid ""
 "indicates how much data was read from the memory cache instead of from disk."
 msgstr ""
 "Вывод разделён на две части. Заголовок (первые пять или шесть строк) "
-"показывает PID последнего запущенного процесса, среднюю загрузку системы ("
-"которая отражает, насколько система занята), время работы системы (время с "
+"показывает PID последнего запущенного процесса, среднюю загрузку системы "
+"(которая отражает, насколько система занята), время работы системы (время с "
 "последней перезагрузки) и текущее время. Остальные данные в заголовке "
 "относятся к количеству запущенных процессов, объёму используемой оперативной "
 "памяти и файла подкачки (свопа), а также времени, которое система проводит в "
@@ -4874,7 +4878,7 @@ msgstr ""
 "окружении оболочки. Это окружение может быть прочитано любой программой, "
 "запущенной оболочкой, и поэтому содержит множество настроек программ. В "
 "crossref:basics[shell-env-vars,Распространенные переменные окружения] "
-"приведен список распространенных переменных окружения и их значений. "
+"приведен список распространённых переменных окружения и их значений. "
 "Обратите внимание, что имена переменных окружения всегда записываются в "
 "верхнем регистре."
 
@@ -5132,7 +5136,7 @@ msgstr "% chsh -s /usr/local/bin/bash\n"
 #. type: Plain text
 #: documentation/content/en/books/handbook/basics/_index.adoc:1777
 msgid ""
-"Enter your password at the prompt and press kbd:[Return] to change your "
+"Enter the password at the prompt and press kbd:[Return] to change the "
 "shell.  Log off and log in again to start using the new shell."
 msgstr ""
 "Введите пароль в командной строке и нажмите kbd:[Return], чтобы изменить "
