--- a/documentation/content/ru/books/handbook/bibliography/_index.adoc
+++ b/documentation/content/ru/books/handbook/bibliography/_index.adoc
@@ -82,7 +82,7 @@ endif::[]
 * Simon Garfinkel, Daniel Weise, Steven Strassmann. _The UNIX-HATERS Handbook_. IDG Books Worldwide, Inc., 1994 год. ISBN 1-56884-203-1. Книга снята с печати, но доступна http://www.simson.net/ref/ugh.pdf[онлайн].
 * Don Libes, Sandy Ressler _Life with UNIX_ - специальное издание. Prentice-Hall, Inc., 1989 год. ISBN 0-13-536657-7
 * _Генеалогическое древо BSD_. https://cgit.freebsd.org/src/tree/share/misc/bsd-family-tree[https://cgit.freebsd.org/src/tree/share/misc/bsd-family-tree] или link:file://localhost/usr/share/misc/bsd-family-tree[/usr/share/misc/bsd-family-tree] на машине с FreeBSD.
-* _Сетевая библиотека технических отчетов по компьютерным наукам_.
+* _Сетевая библиотека технических отчётов по компьютерным наукам_.
 * _Старые выпуски BSD от группы исследования компьютерных систем (CSRG)_. http://www.mckusick.com/csrg/[http://www.mckusick.com/csrg/]: Набор из 4 дисков включает все версии BSD от 1BSD до 4.4BSD и 4.4BSD-Lite2 (но, к сожалению, не 2.11BSD). На последнем диске также находятся окончательные исходные тексты вместе с файлами SCCS.
 * Керниган, Брайан _Unix: История и мемуары_. Kindle Direct Publishing, 2020 год. ISBN 978-169597855-3
 
@@ -91,4 +91,4 @@ endif::[]
 
 * https://www.admin-magazin.de/[Admin Magazin] (на немецком языке), издательство Medialinx AG. ISSN: 2190-1066
 * https://www.bsdnow.tv/[BSD Now - Video Podcast], издано Jupiter Broadcasting LLC
-* https://freebsdfoundation.org/our-work/journal/[FreeBSD Journal], издаваемый S&W Publishing при спонсорской поддержке The FreeBSD Foundation. ISBN: 978-0-615-88479-0
+* https://freebsdfoundation.org/our-work/journal/[FreeBSD Journal], издаваемый S&W Publishing при спонсорской поддержке Фонда FreeBSD. ISBN: 978-0-615-88479-0
