--- a/documentation/content/ru/books/handbook/bibliography/_index.po
+++ b/documentation/content/ru/books/handbook/bibliography/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-07-24 21:10+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookbibliography_index/ru/>\n"
@@ -253,7 +253,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/bibliography/_index.adoc:87
 msgid "_Networked Computer Science Technical Reports Library_."
-msgstr "_Сетевая библиотека технических отчетов по компьютерным наукам_."
+msgstr "_Сетевая библиотека технических отчётов по компьютерным наукам_."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/bibliography/_index.adoc:88
@@ -311,5 +311,5 @@ msgid ""
 "978-0-615-88479-0"
 msgstr ""
 "https://freebsdfoundation.org/our-work/journal/[FreeBSD Journal], издаваемый "
-"S&W Publishing при спонсорской поддержке The FreeBSD Foundation. ISBN: "
+"S&W Publishing при спонсорской поддержке Фонда FreeBSD. ISBN: "
 "978-0-615-88479-0"
