--- a/documentation/content/ru/books/handbook/boot/_index.adoc
+++ b/documentation/content/ru/books/handbook/boot/_index.adoc
@@ -56,7 +56,7 @@ endif::[]
 
 Эта глава подробно описывает доступные параметры конфигурации. В ней показано, как настроить процесс загрузки FreeBSD, включая все этапы до момента, когда ядро FreeBSD запустится, определит устройства и запустит man:init[8]. Это происходит, когда цвет текста загрузочных сообщений меняется с ярко-белого на серый.
 
-Прочитав эту главу, вы узнаете:
+Прочитайте эту главу, чтобы узнать:
 
 * Компоненты загрузочной системы FreeBSD и их взаимодействие.
 * Параметры, которые можно передать компонентам в процессе загрузки FreeBSD для управления процессом загрузки.
@@ -284,7 +284,7 @@ boot-conf
 |Более подробный вывод во время загрузки ядра.
 |===
 
-После завершения загрузки ядро передает управление пользовательскому процессу man:init[8], который находится в [.filename]#/sbin/init#, или программе, указанной в переменной `init_path` в `loader`. Это последний этап процесса загрузки.
+После завершения загрузки ядро передаёт управление пользовательскому процессу man:init[8], который находится в [.filename]#/sbin/init#, или программе, указанной в переменной `init_path` в `loader`. Это последний этап процесса загрузки.
 
 Последовательность загрузки гарантирует, что файловые системы, доступные в системе, находятся в согласованном состоянии. Если файловая система UFS не согласована и `fsck` не может исправить несоответствия, init переводит систему в однопользовательский режим, чтобы администратор системы мог устранить проблему вручную. В противном случае система загружается в многопользовательский режим.
 
@@ -321,7 +321,7 @@ console none                            unknown off insecure
 
 ====
 
-`insecure` консоль означает, что физическая безопасность консоли считается ненадежной, поэтому только тот, кто знает пароль `root`, может использовать однопользовательский режим.
+`insecure` консоль означает, что физическая безопасность консоли считается ненадёжной, поэтому только тот, кто знает пароль `root`, может использовать однопользовательский режим.
 
 [[boot-multiuser]]
 ==== Многопользовательский режим
