--- a/documentation/content/ru/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/ru/books/handbook/bsdinstall/_index.adoc
@@ -62,7 +62,7 @@ FreeBSD поддерживает различные архитектуры, вк
 
 Остальная часть этой главы описывает третий случай, объясняя, как установить FreeBSD с использованием текстовой программы установки под названием `bsdinstall`. Между установщиком и тем, что показано здесь, могут быть незначительные различия, поэтому используйте эту главу как общее руководство, а не как точную инструкцию.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Как получить образы FreeBSD и создать установочные носители FreeBSD.
 * Как запустить bsdinstall.
@@ -879,7 +879,7 @@ image::bsdinstall-hardening.png["Меню, показывающее различ
 [[bsdinstall-addusers]]
 === Добавление пользователей
 
-Следующее меню предлагает создать хотя бы одну учетную запись пользователя. Рекомендуется входить в систему под учетной записью пользователя, а не как `root`. При входе под `root` практически отсутствуют ограничения или защита от возможных действий. Вход под обычным пользователем безопаснее и надежнее.
+Следующее меню предлагает создать хотя бы одну учетную запись пользователя. Рекомендуется входить в систему под учетной записью пользователя, а не как `root`. При входе под `root` практически отсутствуют ограничения или защита от возможных действий. Вход под обычным пользователем безопаснее и надёжнее.
 
 Выберите btn:[Да], чтобы добавить новых пользователей.
 
@@ -1002,7 +1002,7 @@ The key's randomart image is:
 Starting sshd.
 ....
 
-Обратитесь к crossref:security[openssh,"OpenSSH"] для получения дополнительной информации об отпечатках и SSH.
+Обратитесь к разделу crossref:security[openssh,"OpenSSH"] для получения дополнительной информации об отпечатках и SSH.
 
 FreeBSD не устанавливает графическое окружение по умолчанию. Дополнительную информацию об установке и настройке графического оконного менеджера можно найти в crossref:x11[x11,The X Window System].
 
