--- a/documentation/content/ru/books/handbook/bsdinstall/_index.po
+++ b/documentation/content/ru/books/handbook/bsdinstall/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-14 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookbsdinstall_index/ru/>\n"
@@ -116,8 +116,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:68
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:70
@@ -189,13 +189,14 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:90
 msgid ""
-"Consider using crossref:virtualization[virtualization,virtualization] if you "
-"want to use FreeBSD on a system that already has another operating system "
+"Consider using crossref:virtualization[virtualization,virtualization] when "
+"wanting to use FreeBSD on a system that already has another operating system "
 "installed."
 msgstr ""
-"Рассмотрите возможность использования crossref:virtualization[virtualization,"
-"Виртуализации], если вы хотите использовать FreeBSD на системе, где уже "
-"установлена другая операционная система."
+"Рассмотрите возможность использования "
+"crossref:virtualization[virtualization,Виртуализации], если вы хотите "
+"использовать FreeBSD на системе, где уже установлена другая операционная "
+"система."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:93
@@ -563,8 +564,8 @@ msgstr ""
 msgid ""
 "After downloading one of the files (or both), calculate the _checksum_ for "
 "the image file and compare it with the one shown in the _checksum_ file.  "
-"Note that you need to compare the calculated _checksum_ against the correct "
-"file, as they correspond to two different algorithms: SHA256 and SHA512.  "
+"Note that comparing the calculated _checksum_ against the correct file is "
+"needed, as they correspond to two different algorithms: SHA256 and SHA512.  "
 "FreeBSD provides man:sha256[1] and man:sha512[1] that can be used for "
 "calculating the _checksum_.  Other operating systems have similar programs."
 msgstr ""
@@ -902,9 +903,9 @@ msgid ""
 "`Cons`: Allow to continue the installation by `video`, `serial`, `Dual "
 "(serial primary)` or `Dual (Video primary)`"
 msgstr ""
-"`Cons`: Позволяет продолжить установку через `видео`, `последовательный порт`"
-", `двухконсольную конфигурацию (основная консоль — последовательный порт)` "
-"или `двухконсольную конфигурацию (основная консоль — видео)`"
+"`Cons`: Позволяет продолжить установку через `видео`, `последовательный "
+"порт`, `двухконсольную конфигурацию (основная консоль — последовательный "
+"порт)` или `двухконсольную конфигурацию (основная консоль — видео)`"
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:313
@@ -1024,8 +1025,8 @@ msgstr ""
 "продолжения загрузки FreeBSD. Появится серия сообщений загрузки, пока "
 "FreeBSD выполняет обнаружение аппаратных устройств и загружает программу "
 "установки. После завершения загрузки будет отображено приветственное меню, "
-"показанное на рисунке crossref:bsdinstall[bsdinstall-choose-"
-"mode,Приветственное меню]."
+"показанное на рисунке crossref:bsdinstall[bsdinstall-choose-mode,"
+"Приветственное меню]."
 
 #. type: Block title
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:338
@@ -1385,14 +1386,14 @@ msgid ""
 "the process, remember to follow the instructions in crossref:"
 "bsdinstall[bsdinstall-config-network-dev, Configuring Network Interfaces]."
 msgstr ""
-"Меню, показанное на рисунке crossref:bsdinstall[bsdinstall-netinstall-"
-"notify,Установка из сети], появляется только при установке с `-bootonly.iso` "
-"или `-mini-memstick.img`, так как эти носители не содержат копий файлов "
-"установки. Поскольку файлы установки должны быть получены через сетевое "
-"соединение, это меню указывает на необходимость предварительной настройки "
-"сетевого интерфейса. Если это меню появляется на любом этапе процесса, не "
-"забудьте следовать инструкциям из  раздела crossref:bsdinstall[bsdinstall-"
-"config-network-dev,Настройка сетевых интерфейсов]."
+"Меню, показанное на рисунке crossref:bsdinstall[bsdinstall-netinstall-notify,"
+"Установка из сети], появляется только при установке с `-bootonly.iso` или `-"
+"mini-memstick.img`, так как эти носители не содержат копий файлов установки. "
+"Поскольку файлы установки должны быть получены через сетевое соединение, это "
+"меню указывает на необходимость предварительной настройки сетевого "
+"интерфейса. Если это меню появляется на любом этапе процесса, не забудьте "
+"следовать инструкциям из  раздела crossref:bsdinstall[bsdinstall-config-"
+"network-dev,Настройка сетевых интерфейсов]."
 
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:446
@@ -1505,13 +1506,13 @@ msgstr "Проектирование разметки разделов"
 msgid ""
 "The default partition layout for file systems includes one file system for "
 "the entire system.  When using `UFS` it may be worth considering the use of "
-"multiple file systems if you have sufficient disk space or multiple disks.  "
-"When laying out file systems, remember that hard drives transfer data faster "
-"from the outer tracks to the inner.  Thus, smaller and heavier-accessed file "
-"systems should be closer to the outside of the drive, while larger "
-"partitions like `/usr` should be placed toward the inner parts of the disk.  "
-"It is a good idea to create partitions in an order similar to: `/`, swap, `/"
-"var`, and `/usr`."
+"multiple file systems with sufficient disk space or multiple disks "
+"available.  When laying out file systems, remember that hard drives transfer "
+"data faster from the outer tracks to the inner.  Thus, smaller and heavier-"
+"accessed file systems should be closer to the outside of the drive, while "
+"larger partitions like `/usr` should be placed toward the inner parts of the "
+"disk.  It is a good idea to create partitions in an order similar to: `/`, "
+"swap, `/var`, and `/usr`."
 msgstr ""
 "По умолчанию схема разметки разделов для файловых систем включает одну "
 "файловую систему для всей системы. При использовании `UFS` может быть "
@@ -1852,8 +1853,8 @@ msgid ""
 "To continue with the installation process, go to crossref:"
 "bsdinstall[bsdinstall-fetching-distribution, Fetching Distribution Files]."
 msgstr ""
-"Для продолжения процесса установки перейдите к разделу crossref:bsdinstall"
-"[bsdinstall-fetching-distribution, Загрузка файлов дистрибутива]."
+"Для продолжения процесса установки перейдите к разделу crossref:"
+"bsdinstall[bsdinstall-fetching-distribution, Загрузка файлов дистрибутива]."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:568
@@ -3743,7 +3744,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:1049
 msgid ""
 "`ntpd` - The Network Time Protocol (NTP) daemon for automatic clock "
-"synchronization. Enable this service if you wish to synchronise your system "
+"synchronization. Enable this service when wanting to synchronise the system "
 "clock with a remote time server or pool."
 msgstr ""
 "`ntpd` — демон протокола сетевого времени (NTP) для автоматической "
@@ -3947,7 +3948,7 @@ msgstr ""
 "Следующее меню предлагает создать хотя бы одну учетную запись пользователя. "
 "Рекомендуется входить в систему под учетной записью пользователя, а не как "
 "`root`. При входе под `root` практически отсутствуют ограничения или защита "
-"от возможных действий. Вход под обычным пользователем безопаснее и надежнее."
+"от возможных действий. Вход под обычным пользователем безопаснее и надёжнее."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:1087
@@ -4316,8 +4317,10 @@ msgstr "Ручная настройка"
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:1154
 #, no-wrap
-msgid "Menu showing that the installation has finished. And asking if you want to open a shell to make manual changes."
-msgstr "Меню, показывающее, что установка завершена. И спрашивающее, хотите ли вы открыть оболочку для внесения изменений вручную."
+msgid "Menu showing that the installation has finished. And asking if a shell to make manual changes should open."
+msgstr ""
+"Меню, показывающее, что установка завершена. И спрашивающее, хотите ли вы "
+"открыть оболочку для внесения изменений вручную."
 
 #. type: Target for macro image
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:1154
@@ -4508,7 +4511,7 @@ msgid ""
 "Refer to crossref:security[openssh,\"OpenSSH\"] for more information about "
 "fingerprints and SSH."
 msgstr ""
-"Обратитесь к crossref:security[openssh,\"OpenSSH\"] для получения "
+"Обратитесь к разделу crossref:security[openssh,\"OpenSSH\"] для получения "
 "дополнительной информации об отпечатках и SSH."
 
 #. type: Plain text
