--- a/documentation/content/ru/books/handbook/config/_index.adoc
+++ b/documentation/content/ru/books/handbook/config/_index.adoc
@@ -54,11 +54,11 @@ endif::[]
 
 Одним из важных аспектов FreeBSD является правильная настройка системы. В этой главе описывается процесс настройки FreeBSD, включая некоторые параметры, которые можно задать для тонкой настройки системы FreeBSD.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Понимать основы UNIX(R) и FreeBSD (crossref:basics[basics,Основы FreeBSD]).
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Как использовать различные конфигурационные файлы в [.filename]#/etc#.
 * Основы настройки [.filename]#rc.conf# и скриптов запуска в [.filename]#/usr/local/etc/rc.d#.
@@ -481,7 +481,7 @@ Starting background file system checks in 60 seconds.
 [[cron-periodic]]
 == Cron и Periodic
 
-Планирование задач на определенный день или время — очень распространенная задача в FreeBSD. Инструмент, отвечающий за выполнение этой задачи, — это man:cron[8].
+Планирование задач на определенный день или время — очень распространённая задача в FreeBSD. Инструмент, отвечающий за выполнение этой задачи, — это man:cron[8].
 
 В дополнение к задачам, которые пользователь может запланировать с помощью man:cron[8], FreeBSD выполняет фоновые задачи, управляемые man:periodic[8].
 
@@ -1094,7 +1094,7 @@ Logging to FILE /var/log/messages
 
 ==== Безопасность
 
-Как и в случае с любой сетевой службой, перед внедрением сервера журналирования следует учитывать требования безопасности. Журналы могут содержать конфиденциальные данные о службах, включенных на локальном хосте, учетных записях пользователей и конфигурации. Данные, передаваемые по сети от клиента к серверу, не шифруются и не защищаются паролем. Если требуется шифрование, можно использовать package:security/stunnel[], который передает данные журналирования через зашифрованный туннель.
+Как и в случае с любой сетевой службой, перед внедрением сервера журналирования следует учитывать требования безопасности. Журналы могут содержать конфиденциальные данные о службах, включенных на локальном хосте, учетных записях пользователей и конфигурации. Данные, передаваемые по сети от клиента к серверу, не шифруются и не защищаются паролем. Если требуется шифрование, можно использовать package:security/stunnel[], который передаёт данные журналирования через зашифрованный туннель.
 
 Локальная безопасность также является важным вопросом. Журналы не шифруются ни во время использования, ни после ротации. Локальные пользователи могут получить доступ к файлам журналов для сбора дополнительной информации о конфигурации системы. Установка правильных разрешений для файлов журналов крайне важна. Встроенный ротатор журналов newsyslog поддерживает установку разрешений для вновь создаваемых и ротируемых файлов журналов. Установка режима `600` для файлов журналов должна предотвратить нежелательный доступ со стороны локальных пользователей. Дополнительную информацию можно найти в man:newsyslog.conf[5].
 
@@ -1420,7 +1420,7 @@ hw.acpi.lid_switch_state=S3
 
 Иногда системе FreeBSD требуется больше места в подкачке. В этом разделе описаны два способа увеличения пространства подкачки: добавление раздела подкачки к существующему разделу или новому жесткому диску и создание файла подкачки в существующей файловой системе.
 
-Для получения информации о том, как зашифровать пространство подкачки, какие существуют варианты и почему это следует делать, обратитесь к crossref:disks[swap-encrypting,"Шифрование подкачки"].
+Для получения информации о том, как зашифровать пространство подкачки, какие существуют варианты и почему это следует делать, обратитесь к разделу crossref:disks[swap-encrypting,"Шифрование раздела подкачки"].
 
 [[new-drive-swap]]
 === Раздел подкачки на новом жестком диске или существующем разделе
