--- a/documentation/content/ru/books/handbook/dtrace/_index.po
+++ b/documentation/content/ru/books/handbook/dtrace/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-08-19 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookdtrace_index/ru/>\n"
@@ -111,8 +111,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:69
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:71
@@ -135,8 +135,8 @@ msgstr "Как включить и использовать DTrace в FreeBSD."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:75
-msgid "Before reading this chapter, you should:"
-msgstr "Прежде чем читать эту главу, вы должны:"
+msgid "Before reading this chapter:"
+msgstr "Прежде чем читать эту главу, необходимо:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:77
