--- a/documentation/content/ru/books/handbook/eresources/_index.adoc
+++ b/documentation/content/ru/books/handbook/eresources/_index.adoc
@@ -64,7 +64,7 @@ endif::[]
 * link:https://forums.FreeBSD.org/[Форумы FreeBSD] предоставляют веб-форум для обсуждения вопросов, связанных с FreeBSD, и технических дискуссий.
 * Ссылка link:https://wiki.FreeBSD.org/[FreeBSD Wiki] содержит различную информацию, которая ещё не вошла в Руководство.
 * Портал link:https://docs.FreeBSD.org/[документации] предлагает гораздо больше, чем просто Руководство FreeBSD, здесь доступно более сорока книг и статей.
-* link:https://freebsdfoundation.org/our-work/journal/browser-based-edition/[FreeBSD Journal] — это бесплатный профессионально редактируемый технический журнал, выпускаемый раз в два месяца организацией link:https://freebsdfoundation.org[The FreeBSD Foundation].
+* link:https://freebsdfoundation.org/our-work/journal/browser-based-edition/[FreeBSD Journal] — это бесплатный профессионально редактируемый технический журнал, выпускаемый раз в два месяца link:https://freebsdfoundation.org[Фондом FreeBSD].
 * Канал link:http://www.youtube.com/bsdconferences[BSDConferences на YouTube] содержит коллекцию высококачественных видео с конференций BSD со всего мира. Это отличный способ увидеть выступления ключевых разработчиков о новых работах в FreeBSD.
 * link:https://www.freebsd.org/status/[Отчёты о состоянии FreeBSD] выпускаются раз в три месяца и отслеживают прогресс в разработке FreeBSD.
 * Вот ссылка на группу в Reddit, посвящённую FreeBSD: link:https://www.reddit.com/r/freebsd/[r/freebsd].
@@ -86,15 +86,15 @@ endif::[]
 Для проверки возможностей списка рассылки FreeBSD направляйте сообщения в {freebsd-test}. Пожалуйста, не отправляйте тестовые сообщения в другие списки.
 ====
 
-Если вы не уверены, в какой список отправить вопрос, обратитесь к extref:{freebsd-questions-article}[Как получить наилучшие результаты из списка рассылки FreeBSD-questions].
+Если вы не уверены, в какой список отправить вопрос, обратитесь к разделу extref:{freebsd-questions-article}[Как получить наилучшие результаты из списка рассылки FreeBSD-questions].
 
 Перед отправкой сообщения в любой список, пожалуйста:
 
 * Узнайте, как лучше всего использовать списки рассылки, например, как помочь избежать часто повторяющихся обсуждений, прочитав документ extref:{mailing-list-faq}[Часто задаваемые вопросы о списках рассылки] (FAQ)
-* поищите в архивах, чтобы убедиться, что кто-то уже не публиковал то, что вы собираетесь написать.
+* поищите в архивах, чтобы убедиться, что кто-то уже не публиковал тоже самое.
 
 Интерфейсы поиска в архивах включают:
- 
+
 - https://lists.freebsd.org/search[] (FreeBSD, экспериментальный интерфейс)
 - https://www.freebsd.org/search/[] (DuckDuckGo)
 
