--- a/documentation/content/ru/books/handbook/eresources/_index.po
+++ b/documentation/content/ru/books/handbook/eresources/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-06-12 17:10+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookeresources_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/eresources/_index.adoc:1
 #, no-wrap
 msgid "FreeBSD additional resources on internet like websites, mailing lists, mirrors, etc"
-msgstr ""
-"Дополнительные ресурсы FreeBSD в интернете, такие как веб-сайты, списки "
-"рассылки, зеркала и так далее"
+msgstr "Дополнительные ресурсы FreeBSD в интернете, такие как веб-сайты, списки рассылки, зеркала и так далее"
 
 #. type: YAML Front Matter: part
 #: documentation/content/en/books/handbook/eresources/_index.adoc:1
@@ -71,9 +69,9 @@ msgid ""
 "The most important points of contact are outlined below.  The link:https://"
 "wiki.freebsd.org/Community[Community wiki area] may be more up-to-date."
 msgstr ""
-"Ниже приведены наиболее важные точки взаимодействия. Раздел link:https://wiki"
-".freebsd.org/Community[Сообщества на вики] может содержать более актуальную "
-"информацию."
+"Ниже приведены наиболее важные точки взаимодействия. Раздел link:https://"
+"wiki.freebsd.org/Community[Сообщества на вики] может содержать более "
+"актуальную информацию."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:62
@@ -127,10 +125,10 @@ msgid ""
 "technical magazine released by link:https://freebsdfoundation.org[The "
 "FreeBSD Foundation]."
 msgstr ""
-"link:https://freebsdfoundation.org/our-work/journal/browser-based-edition/["
-"FreeBSD Journal] — это бесплатный профессионально редактируемый технический "
-"журнал, выпускаемый раз в два месяца организацией "
-"link:https://freebsdfoundation.org[The FreeBSD Foundation]."
+"link:https://freebsdfoundation.org/our-work/journal/browser-based-edition/"
+"[FreeBSD Journal] — это бесплатный профессионально редактируемый технический "
+"журнал, выпускаемый раз в два месяца link:https://freebsdfoundation."
+"org[Фондом FreeBSD]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:71
@@ -166,12 +164,12 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:74
 msgid ""
-"link:https://superuser.com/questions/tagged/freebsd[Super User] and "
-"link:https://serverfault.com/questions/tagged/freebsd[Server Fault], the "
-"Stack Exchange services for system administrators."
+"link:https://superuser.com/questions/tagged/freebsd[Super User] and link:"
+"https://serverfault.com/questions/tagged/freebsd[Server Fault], the Stack "
+"Exchange services for system administrators."
 msgstr ""
-"link:https://superuser.com/questions/tagged/freebsd[Super User] и "
-"link:https://serverfault.com/questions/tagged/freebsd[Server Fault], сервисы "
+"link:https://superuser.com/questions/tagged/freebsd[Super User] и link:"
+"https://serverfault.com/questions/tagged/freebsd[Server Fault], сервисы "
 "Stack Exchange для системных администраторов."
 
 #. type: Plain text
@@ -249,9 +247,9 @@ msgid ""
 "questions-article}[How to get best results from the FreeBSD-questions "
 "mailing list]."
 msgstr ""
-"Если вы не уверены, в какой список отправить вопрос, обратитесь к extref"
-":{freebsd-questions-article}[Как получить наилучшие результаты из списка "
-"рассылки FreeBSD-questions]."
+"Если вы не уверены, в какой список отправить вопрос, обратитесь к разделу "
+"extref:{freebsd-questions-article}[Как получить наилучшие результаты из "
+"списка рассылки FreeBSD-questions]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:97
@@ -272,11 +270,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:100
 msgid ""
-"search the archives, to tell whether someone else has already posted what "
-"you intend to post."
+"search the archives, to tell whether someone else has already posted the "
+"same."
 msgstr ""
-"поищите в архивах, чтобы убедиться, что кто-то уже не публиковал то, что вы "
-"собираетесь написать."
+"поищите в архивах, чтобы убедиться, что кто-то уже не публиковал тоже самое."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:102
@@ -333,8 +330,8 @@ msgid ""
 "The FreeBSD public mailing lists can be consulted link:{mailing-lists-url}"
 "[here]."
 msgstr ""
-"Списки публичных рассылок FreeBSD можно найти link:{mailing-lists-"
-"url}[здесь]."
+"Списки публичных рассылок FreeBSD можно найти link:{mailing-lists-url}"
+"[здесь]."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/eresources/_index.adoc:119
@@ -369,23 +366,22 @@ msgstr "Основные правила списков"
 msgid ""
 "_All_ FreeBSD mailing lists have certain basic rules which must be adhered "
 "to by anyone using them.  Failure to comply with these guidelines will "
-"result in two (2) written warnings from the FreeBSD Postmaster "
-"mailto:postmaster@FreeBSD.org[postmaster@FreeBSD.org], after which, on a "
-"third offense, the poster will removed from all FreeBSD mailing lists and "
-"filtered from further posting to them.  We regret that such rules and "
-"measures are necessary at all, but today's Internet is a pretty harsh "
-"environment, it would seem, and many fail to appreciate just how fragile "
-"some of its mechanisms are."
+"result in two (2) written warnings from the FreeBSD Postmaster mailto:"
+"postmaster@FreeBSD.org[postmaster@FreeBSD.org], after which, on a third "
+"offense, the poster will removed from all FreeBSD mailing lists and filtered "
+"from further posting to them.  We regret that such rules and measures are "
+"necessary at all, but today's Internet is a pretty harsh environment, it "
+"would seem, and many fail to appreciate just how fragile some of its "
+"mechanisms are."
 msgstr ""
 "_Все_ списки рассылки FreeBSD имеют определенные основные правила, которые "
 "должны соблюдаться всеми участниками. Несоблюдение этих правил приведет к "
-"двум (2) письменным предупреждениям от постмастера FreeBSD "
-"mailto:postmaster@FreeBSD.org[postmaster@FreeBSD.org], после чего, при "
-"третьем нарушении, отправитель будет удален из всех списков рассылки FreeBSD "
-"и заблокирован для дальнейших отправок. Мы сожалеем, что такие правила и "
-"меры вообще необходимы, но сегодняшний Интернет, кажется, довольно суровая "
-"среда, и многие не осознают, насколько хрупкими могут быть некоторые его "
-"механизмы."
+"двум (2) письменным предупреждениям от постмастера FreeBSD mailto:"
+"postmaster@FreeBSD.org[postmaster@FreeBSD.org], после чего, при третьем "
+"нарушении, отправитель будет удален из всех списков рассылки FreeBSD и "
+"заблокирован для дальнейших отправок. Мы сожалеем, что такие правила и меры "
+"вообще необходимы, но сегодняшний Интернет, кажется, довольно суровая среда, "
+"и многие не осознают, насколько хрупкими могут быть некоторые его механизмы."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:134
@@ -611,7 +607,8 @@ msgstr "Новостные группы, специфичные для BSD"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/eresources/_index.adoc:184
-msgid "link:news:comp.unix.bsd.freebsd.announce[comp.unix.bsd.freebsd.announce]"
+msgid ""
+"link:news:comp.unix.bsd.freebsd.announce[comp.unix.bsd.freebsd.announce]"
 msgstr ""
 "link:news:comp.unix.bsd.freebsd.announce[comp.unix.bsd.freebsd.announce]"
 
