--- a/documentation/content/ru/books/handbook/firewalls/_index.po
+++ b/documentation/content/ru/books/handbook/firewalls/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-09-26 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookfirewalls_index/ru/>\n"
@@ -139,8 +139,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:75
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:77
@@ -169,8 +169,8 @@ msgstr "Как использовать и настроить межсетево
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:83
-msgid "Before reading this chapter, you should:"
-msgstr "Прежде чем читать эту главу, вы должны:"
+msgid "Before reading this chapter:"
+msgstr "Прежде чем читать эту главу, необходимо:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:85
@@ -735,7 +735,7 @@ msgstr "states ]`"
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:270
 #, no-wrap
 msgid "Report on the filter rules, NAT rules, or state table."
-msgstr "Отчет о правилах фильтрации, правилах NAT или таблице состояний."
+msgstr "Отчёт о правилах фильтрации, правилах NAT или таблице состояний."
 
 #. type: Table
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:271
@@ -902,7 +902,7 @@ msgid ""
 "to pass it back."
 msgstr ""
 "Хотя UDP считается протоколом без сохранения состояния, PF способен "
-"отслеживать некоторую информацию о состоянии. Например, когда передается UDP-"
+"отслеживать некоторую информацию о состоянии. Например, когда передаётся UDP-"
 "запрос к серверу имен с вопросом о доменном имени, PF будет ожидать ответ, "
 "чтобы пропустить его обратно."
 
@@ -1641,9 +1641,9 @@ msgid ""
 msgstr ""
 "Протоколы Интернета разработаны так, чтобы быть независимыми от устройств, и "
 "одним из следствий этой независимости является то, что оптимальный размер "
-"пакета для данного соединения не всегда может быть надежно предсказан. "
-"Основное ограничение на размер пакета — это _Maximum Transmission Unit_ "
-"(MTU), который устанавливает верхний предел размера пакета для интерфейса. "
+"пакета для данного соединения не всегда может быть надёжно предсказан. "
+"Основное ограничение на размер пакета — это _Maximum Transmission Unit_ (MTU)"
+", который устанавливает верхний предел размера пакета для интерфейса. "
 "Введите `ifconfig`, чтобы просмотреть MTU для сетевых интерфейсов системы."
 
 #. type: Plain text
@@ -3045,8 +3045,8 @@ msgid ""
 "advisable that the default ruleset is edited for logging.  In addition, log "
 "rotation may be desired if the logs are stored in a separate file."
 msgstr ""
-"В журнал будут записываться только правила межсетевого экрана с опцией `log`"
-". Правила по умолчанию не включают эту опцию, и её необходимо добавить "
+"В журнал будут записываться только правила межсетевого экрана с опцией "
+"`log`. Правила по умолчанию не включают эту опцию, и её необходимо добавить "
 "вручную. Поэтому рекомендуется отредактировать набор правил по умолчанию для "
 "ведения журнала. Кроме того, может потребоваться ротация журналов, если они "
 "сохраняются в отдельный файл."
@@ -5138,8 +5138,8 @@ msgstr ""
 "где `options IPFILTER` включает поддержку IPFILTER, `options IPFILTER_LOG` "
 "включает журналирование IPF с использованием псевдоустройства [."
 "filename]#ipl# для записи пакетов для каждого правила, содержащего ключевое "
-"слово `log`, `IPFILTER_LOOKUP` включает пулы IP для ускорения поиска IP, а `"
-"options IPFILTER_DEFAULT_BLOCK` изменяет поведение по умолчанию так, что "
+"слово `log`, `IPFILTER_LOOKUP` включает пулы IP для ускорения поиска IP, а "
+"`options IPFILTER_DEFAULT_BLOCK` изменяет поведение по умолчанию так, что "
 "любой пакет, не соответствующий правилу `pass` межсетевого экрана, "
 "блокируется."
 
@@ -5154,8 +5154,8 @@ msgid ""
 msgstr ""
 "Для настройки системы на включение IPF при загрузке добавьте следующие "
 "записи в [.filename]#/etc/rc.conf#. Эти записи также включат журналирование "
-"и политику `default pass all`. Чтобы изменить политику по умолчанию на `"
-"block all` без компиляции пользовательского ядра, не забудьте добавить "
+"и политику `default pass all`. Чтобы изменить политику по умолчанию на "
+"`block all` без компиляции пользовательского ядра, не забудьте добавить "
 "правило `block all` в конец набора правил."
 
 #. type: delimited block . 4
@@ -6201,7 +6201,7 @@ msgid ""
 msgstr ""
 "В IPF, когда пакет прибывает на межсетевой экран из локальной сети с "
 "публичным адресом назначения, он сначала проходит через исходящие правила "
-"набора правил межсетевого экрана. Затем пакет передается в набор правил NAT, "
+"набора правил межсетевого экрана. Затем пакет передаётся в набор правил NAT, "
 "который читается сверху вниз, и первое совпадающее правило применяется. IPF "
 "проверяет каждое правило NAT на соответствие имени интерфейса и исходному IP-"
 "адресу пакета. Когда имя интерфейса пакета совпадает с правилом NAT, "
