--- a/documentation/content/ru/books/handbook/geom/_index.adoc
+++ b/documentation/content/ru/books/handbook/geom/_index.adoc
@@ -56,14 +56,14 @@ endif::[]
 
 В этой главе рассматривается использование дисков в рамках системы GEOM в FreeBSD. Это включает основные утилиты управления RAID, которые используют данную систему для настройки. Данная глава не является исчерпывающим руководством по конфигурациям RAID и рассматривает только поддерживаемые GEOM классификации RAID.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Какой тип поддержки RAID доступен через GEOM.
 * Как использовать базовые утилиты для настройки, обслуживания и управления различными уровнями RAID.
 * Как зеркалировать, чередовать, шифровать и удалённо подключать дисковые устройства с помощью GEOM.
 * Как устранять неполадки с дисками, подключенными к системе GEOM.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Понимание того, как FreeBSD работает с дисковыми устройствами (crossref:disks[disks,Хранение данных]).
 * Знать, как настроить и установить новый ядро (crossref:kernelconfig[kernelconfig,Настройка ядра FreeBSD]).
@@ -622,9 +622,9 @@ Enter full pathname of shell or RETURN for /bin/sh:
 Ход выполнения можно отслеживать с помощью `gmirror status`, который показывает диски, находящиеся в процессе синхронизации, и процент завершения. Во время повторной синхронизации статус будет `DEGRADED`, а по завершении процесса изменится на `COMPLETE`.
 
 [[geom-raid3]]
-== RAID3 - чередование на уровне байтов с выделенной четностью
+== RAID3 - чередование на уровне байтов с выделенной чётностью
 
-RAID3 — это метод объединения нескольких дисков в один том с выделенным диском четности. В системе RAID3 данные разбиваются на байты, которые записываются на все диски массива, за исключением одного диска, выполняющего роль выделенного диска четности. Это означает, что операции чтения в RAID3 обращаются ко всем дискам массива. Производительность может быть повышена за счет использования нескольких контроллеров дисков. Массив RAID3 обеспечивает отказоустойчивость на уровне одного диска, а его емкость составляет 1 - 1/n от общей емкости всех дисков массива, где n — количество жестких дисков в массиве. Такая конфигурация в основном подходит для хранения данных большого объема, таких как мультимедийные файлы.
+RAID3 — это метод объединения нескольких дисков в один том с выделенным диском чётности. В системе RAID3 данные разбиваются на байты, которые записываются на все диски массива, за исключением одного диска, выполняющего роль выделенного диска чётности. Это означает, что операции чтения в RAID3 обращаются ко всем дискам массива. Производительность может быть повышена за счет использования нескольких контроллеров дисков. Массив RAID3 обеспечивает отказоустойчивость на уровне одного диска, а его емкость составляет 1 - 1/n от общей емкости всех дисков массива, где n — количество жестких дисков в массиве. Такая конфигурация в основном подходит для хранения данных большого объема, таких как мультимедийные файлы.
 
 Для создания массива RAID3 требуется как минимум 3 физических жестких диска. Каждый диск должен быть одинакового размера, так как запросы ввода-вывода чередуются для чтения или записи на несколько дисков параллельно. Кроме того, из-за особенностей RAID3 количество дисков должно быть равно 3, 5, 9, 17 и так далее, то есть соответствовать формуле 2^n + 1.
 
@@ -661,7 +661,7 @@ RAID3 — это метод объединения нескольких диск
 # mkdir /multimedia
 ....
 
-. Определите имена устройств для дисков, которые будут добавлены в массив, и создайте новое устройство RAID3. Последнее указанное устройство будет использоваться в качестве выделенного диска четности. В этом примере используются три неразделенных ATA-диска: [.filename]#ada1# и [.filename]#ada2# для данных, а [.filename]#ada3# для четности.
+. Определите имена устройств для дисков, которые будут добавлены в массив, и создайте новое устройство RAID3. Последнее указанное устройство будет использоваться в качестве выделенного диска чётности. В этом примере используются три неразделенных ATA-диска: [.filename]#ada1# и [.filename]#ada2# для данных, а [.filename]#ada3# для чётности.
 +
 [source, shell]
 ....
@@ -852,7 +852,7 @@ raid/r0  DEGRADED  ada0 (ACTIVE (ACTIVE))
                    ada1 (ACTIVE (REBUILD 28%))
 ....
 
-Некоторые типы массивов, такие как `RAID0` или `CONCAT`, могут не отображаться в отчете о состоянии при выходе дисков из строя. Чтобы увидеть эти частично неработоспособные массивы, добавьте `-ga`:
+Некоторые типы массивов, такие как `RAID0` или `CONCAT`, могут не отображаться в отчёте о состоянии при выходе дисков из строя. Чтобы увидеть эти частично неработоспособные массивы, добавьте `-ga`:
 
 [source, shell]
 ....
