--- a/documentation/content/ru/books/handbook/glossary.adoc
+++ b/documentation/content/ru/books/handbook/glossary.adoc
@@ -297,6 +297,7 @@ ELF::
 ESP::
 См. crossref:glossary[esp-glossary,Encapsulated Security Payload].
 
+[[esp-glossary]]
 Encapsulated Security Payload::
 {empty}
 
@@ -654,7 +655,7 @@ Operating System::
 
 [[obe-glossary]]
 Overtaken By Events::
-Указывает на предложенное изменение (например, отчет о проблеме или запрос функции), которое больше не актуально или не применимо из-за таких факторов, как последующие изменения в FreeBSD, изменения в сетевых стандартах, устаревание затронутого оборудования и т. д.
+Указывает на предложенное изменение (например, отчёт о проблеме или запрос функции), которое больше не актуально или не применимо из-за таких факторов, как последующие изменения в FreeBSD, изменения в сетевых стандартах, устаревание затронутого оборудования и т. д.
 
 [discrete]
 == P
@@ -775,7 +776,7 @@ PRIME::
 
 [[pr-glossary]]
 Problem Report::
-Описание проблемы, обнаруженной в исходном коде FreeBSD или документации. См. extref:{problem-reports}[Написание отчетов о проблемах FreeBSD].
+Описание проблемы, обнаруженной в исходном коде FreeBSD или документации. См. extref:{problem-reports}[Написание отчётов о проблемах FreeBSD].
 
 [[pid-glossary]]
 Process ID::
@@ -974,7 +975,7 @@ Time Stamp Counter::
 
 [[tcp-glossary]]
 Transmission Control Protocol::
-Протокол, который работает поверх (например) IP-протокола и гарантирует надежную и упорядоченную доставку пакетов.
+Протокол, который работает поверх (например) IP-протокола и гарантирует надёжную и упорядоченную доставку пакетов.
 
 [[tcpip-glossary]]
 Transmission Control Protocol/Internet Protocol::
