--- a/documentation/content/ru/books/handbook/jails/_index.adoc
+++ b/documentation/content/ru/books/handbook/jails/_index.adoc
@@ -52,7 +52,7 @@ endif::[]
 [[jails-synopsis]]
 == Обзор
 
-Поскольку администрирование системы — сложная задача, было разработано множество инструментов, чтобы облегчить жизнь администратору. Эти инструменты часто улучшают способы установки, настройки и обслуживания систем. Один из инструментов, который можно использовать для повышения безопасности системы FreeBSD, — это _клетки (jails)_. Клетки доступны начиная с FreeBSD 4.X и продолжают совершенствоваться в плане полезности, производительности, надежности и безопасности.
+Поскольку администрирование системы — сложная задача, было разработано множество инструментов, чтобы облегчить жизнь администратору. Эти инструменты часто улучшают способы установки, настройки и обслуживания систем. Один из инструментов, который можно использовать для повышения безопасности системы FreeBSD, — это _клетки (jails)_. Клетки доступны начиная с FreeBSD 4.X и продолжают совершенствоваться в плане полезности, производительности, надёжности и безопасности.
 
 Клетки расширяют концепцию man:chroot[2], которая используется для изменения корневого каталога для набора процессов. Это создаёт безопасное окружение, изолированное от остальной системы. Процессы, созданные в окружении chroot, не могут обращаться к файлам или ресурсам за его пределами. По этой причине компрометация службы, работающей в окружении chroot, не должна позволить злоумышленнику скомпрометировать всю систему.
 
@@ -201,7 +201,7 @@ man:netgraph[4] — это универсальная инфраструктур
 
 Некоторые администраторы используют [.filename]#/jail#, другие — [.filename]#/usr/jail#, а третьи — [.filename]#/usr/local/jails#. В этой главе будет использоваться [.filename]#/usr/local/jails#.
 
-Помимо каталога [.filename]#/usr/local/jails# будут созданы другие директории:
+Помимо каталога [.filename]#/usr/local/jails# будут созданы другие каталоги:
 
 * [.filename]#media# будет содержать сжатые файлы загруженных пользовательских окружений.
 * [.filename]#templates# будет содержать шаблоны при использовании тонких клеток.
@@ -239,7 +239,7 @@ man:netgraph[4] — это универсальная инфраструктур
 
 Первый вариант — добавить запись для каждой клетки в файл [.filename]#/etc/jail.conf#. Другой вариант — создать отдельный файл для каждой клетки в каталоге [.filename]#/etc/jail.conf.d/#.
 
-В случае, если на хостовой системе мало клеток, записи для каждого клетки можно добавить в файл [.filename]#/etc/jail.conf#. Если на хостовой системе много клеток, рекомендуется создать отдельный конфигурационный файл для каждой клетки в директории [.filename]#/etc/jail.conf.d/#.
+В случае, если на хостовой системе мало клеток, записи для каждого клетки можно добавить в файл [.filename]#/etc/jail.conf#. Если на хостовой системе много клеток, рекомендуется создать отдельный конфигурационный файл для каждой клетки в каталоге [.filename]#/etc/jail.conf.d/#.
 
 Файлы в [.filename]#/etc/jail.conf.d/# должны иметь расширение `.conf` и должны быть подключены в [.filename]#/etc/jail.conf#:
 
@@ -297,25 +297,25 @@ jailname { <.>
 [[creating-classic-jail]]
 === Создание классической клетки
 
-В принципе, для клетки требуется только имя хоста, корневая директория, IP-адрес и пользовательское пространство.
+В принципе, для клетки требуется только имя хоста, корневой каталог, IP-адрес и пользовательское пространство.
 
 Пользовательское окружение для клетки можно получить с официальных серверов загрузки FreeBSD.
 
 Выполните следующую команду, чтобы загрузить пользовательское окружение:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/14.2-RELEASE/base.txz -o /usr/local/jails/media/14.2-RELEASE-base.txz
+# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/{betarel-current}-RELEASE/base.txz -o /usr/local/jails/media/{betarel-current}-RELEASE-base.txz
 ....
 
 После завершения загрузки необходимо извлечь содержимое в каталог клетки.
 
 Выполните следующие команды, чтобы извлечь пользовательское окружение в каталог клетки:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
 # mkdir -p /usr/local/jails/containers/classic
-# tar -xf /usr/local/jails/media/14.2-RELEASE-base.txz -C /usr/local/jails/containers/classic --unlink
+# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/containers/classic --unlink
 ....
 
 С извлечённой пользовательской средой в каталоге клетки потребуется скопировать файлы часового пояса и DNS-сервера:
@@ -385,56 +385,56 @@ classic {
 
 Для создания набора данных для шаблона выполните следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs create -p zroot/jails/templates/14.2-RELEASE
+# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE
 ....
 
 Затем выполните следующую команду для загрузки пользовательской среды:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/14.2-RELEASE/base.txz -o /usr/local/jails/media/14.2-RELEASE-base.txz
+# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/{betarel-current}-RELEASE/base.txz -o /usr/local/jails/media/{betarel-current}-RELEASE-base.txz
 ....
 
-После завершения загрузки необходимо извлечь содержимое в директорию шаблона, выполнив следующую команду:
+После завершения загрузки необходимо извлечь содержимое в каталог шаблона, выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# tar -xf /usr/local/jails/media/14.2-RELEASE-base.txz -C /usr/local/jails/templates/14.2-RELEASE --unlink
+# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/templates/{betarel-current}-RELEASE --unlink
 ....
 
 Когда пользовательская среда записана в каталог шаблонов, необходимо скопировать файлы часового пояса и DNS-сервера в каталог шаблона, выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# cp /etc/resolv.conf /usr/local/jails/templates/14.2-RELEASE/etc/resolv.conf
-# cp /etc/localtime /usr/local/jails/templates/14.2-RELEASE/etc/localtime
+# cp /etc/resolv.conf /usr/local/jails/templates/{betarel-current}-RELEASE/etc/resolv.conf
+# cp /etc/localtime /usr/local/jails/templates/{betarel-current}-RELEASE/etc/localtime
 ....
 
 Следующее, что нужно сделать, — обновиться до последнего уровня исправлений, выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# freebsd-update -b /usr/local/jails/templates/14.2-RELEASE/ fetch install
+# freebsd-update -b /usr/local/jails/templates/{betarel-current}-RELEASE/ fetch install
 ....
 
 После завершения обновления шаблон готов.
 
 Для создания снимка OpenZFS из шаблона выполните следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs snapshot zroot/jails/templates/14.2-RELEASE@base
+# zfs snapshot zroot/jails/templates/{betarel-current}-RELEASE@base
 ....
 
 После создания снимка OpenZFS можно создавать бесконечное количество клеток с помощью функции клонирования OpenZFS.
 
 Для создания тонкой клетки с именем `thinjail` выполните следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs clone zroot/jails/templates/14.2-RELEASE@base zroot/jails/containers/thinjail
+# zfs clone zroot/jails/templates/{betarel-current}-RELEASE@base zroot/jails/containers/thinjail
 ....
 
 Последним шагом является настройка клетки. Необходимо добавить запись в конфигурационный файл [.filename]#/etc/jail.conf# или в [.filename]#jail.conf.d# с параметрами клетки.
@@ -480,83 +480,83 @@ thinjail {
 
 Первым шагом является создание набора данных для сохранения шаблона, выполните следующую команду, если используется OpenZFS:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs create -p zroot/jails/templates/14.2-RELEASE-base
+# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE-base
 ....
 
 Или эту, если используется UFS:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# mkdir /usr/local/jails/templates/14.2-RELEASE-base
+# mkdir /usr/local/jails/templates/{betarel-current}-RELEASE-base
 ....
 
 Затем выполните следующую команду для загрузки пользовательской среды:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/14.2-RELEASE/base.txz -o /usr/local/jails/media/14.2-RELEASE-base.txz
+# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/{betarel-current}-RELEASE/base.txz -o /usr/local/jails/media/{betarel-current}-RELEASE-base.txz
 ....
 
-После завершения загрузки необходимо извлечь содержимое в директорию шаблона, выполнив следующую команду:
+После завершения загрузки необходимо извлечь содержимое в каталог шаблона, выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# tar -xf /usr/local/jails/media/14.2-RELEASE-base.txz -C /usr/local/jails/templates/14.2-RELEASE-base --unlink
+# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/templates/{betarel-current}-RELEASE-base --unlink
 ....
 
 Когда пользовательская среда записана в каталог шаблонов, необходимо скопировать файлы часового пояса и DNS-сервера в каталог шаблона, выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# cp /etc/resolv.conf /usr/local/jails/templates/14.2-RELEASE-base/etc/resolv.conf
-# cp /etc/localtime /usr/local/jails/templates/14.2-RELEASE-base/etc/localtime
+# cp /etc/resolv.conf /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc/resolv.conf
+# cp /etc/localtime /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc/localtime
 ....
 
 После перемещения файлов в шаблон следующим шагом будет обновление до последнего уровня исправлений с помощью выполнения следующей команды:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# freebsd-update -b /usr/local/jails/templates/14.2-RELEASE-base/ fetch install
+# freebsd-update -b /usr/local/jails/templates/{betarel-current}-RELEASE-base/ fetch install
 ....
 
 В дополнение к базовому шаблону также необходимо создать каталог, где будет располагаться `skeleton`. Некоторые каталоги будут скопированы из шаблона в `skeleton`.
 
 Выполните следующую команду, чтобы создать набор данных для `skeleton` в случае использования OpenZFS:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs create -p zroot/jails/templates/14.2-RELEASE-skeleton
+# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE-skeleton
 ....
 
 Или эту в случае использования UFS:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# mkdir /usr/local/jails/templates/14.2-RELEASE-skeleton
+# mkdir /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton
 ....
 
 Затем создайте `skeleton`-каталоги. `Skeleton`-каталоги будут содержать локальные каталоги для клеток.
 
 Выполните следующие команды для создания каталогов:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# mkdir -p /usr/local/jails/templates/14.2-RELEASE-skeleton/home
-# mkdir -p /usr/local/jails/templates/14.2-RELEASE-skeleton/usr
-# mv /usr/local/jails/templates/14.2-RELEASE-base/etc /usr/local/jails/templates/14.2-RELEASE-skeleton/etc
-# mv /usr/local/jails/templates/14.2-RELEASE-base/usr/local /usr/local/jails/templates/14.2-RELEASE-skeleton/usr/local
-# mv /usr/local/jails/templates/14.2-RELEASE-base/tmp /usr/local/jails/templates/14.2-RELEASE-skeleton/tmp
-# mv /usr/local/jails/templates/14.2-RELEASE-base/var /usr/local/jails/templates/14.2-RELEASE-skeleton/var
-# mv /usr/local/jails/templates/14.2-RELEASE-base/root /usr/local/jails/templates/14.2-RELEASE-skeleton/root
+# mkdir -p /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/home
+# mkdir -p /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/usr
+# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/etc
+# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/usr/local /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/usr/local
+# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/tmp /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/tmp
+# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/var /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/var
+# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/root /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/root
 ....
 
 Следующий шаг — создать символьные ссылки на `skeleton`, выполнив следующие команды:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# cd /usr/local/jails/templates/14.2-RELEASE-base/
+# cd /usr/local/jails/templates/{betarel-current}-RELEASE-base/
 # mkdir skeleton
 # ln -s skeleton/etc etc
 # ln -s skeleton/home home
@@ -570,17 +570,17 @@ thinjail {
 
 В случае использования OpenZFS, снимки OpenZFS могут быть использованы для простого создания необходимого количества клеток с помощью выполнения следующих команд:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# zfs snapshot zroot/jails/templates/14.2-RELEASE-skeleton@base
-# zfs clone zroot/jails/templates/14.2-RELEASE-skeleton@base zroot/jails/containers/thinjail
+# zfs snapshot zroot/jails/templates/{betarel-current}-RELEASE-skeleton@base
+# zfs clone zroot/jails/templates/{betarel-current}-RELEASE-skeleton@base zroot/jails/containers/thinjail
 ....
 
 В случае использования UFS можно использовать программу man:cp[1], выполнив следующую команду:
 
-[source, shell]
+[source, shell, subs=attributes]
 ....
-# cp -R /usr/local/jails/templates/14.2-RELEASE-skeleton /usr/local/jails/containers/thinjail
+# cp -R /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton /usr/local/jails/containers/thinjail
 ....
 
 Затем создайте каталог, в котором будут смонтированы базовый шаблон и skeleton:
@@ -620,9 +620,9 @@ thinjail {
 
 Затем создайте файл [.filename]#/usr/local/jails/thinjail-nullfs-base.fstab# следующего содержания:
 
-[.programlisting]
+[.programlisting, subs=attributes]
 ....
-/usr/local/jails/templates/14.2-RELEASE-base  /usr/local/jails/thinjail-nullfs-base/ nullfs   ro          0 0
+/usr/local/jails/templates/{betarel-current}-RELEASE-base  /usr/local/jails/thinjail-nullfs-base/ nullfs   ro          0 0
 /usr/local/jails/containers/thinjail     /usr/local/jails/thinjail-nullfs-base/skeleton nullfs  rw  0 0
 ....
 
