--- a/documentation/content/ru/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/ru/books/handbook/kernelconfig/_index.adoc
@@ -54,7 +54,7 @@ endif::[]
 
 Ядро — это основа операционной системы FreeBSD. Оно отвечает за управление памятью, обеспечение контроля безопасности, работу с сетью, доступ к дискам и многое другое. Хотя большая часть FreeBSD динамически настраивается, некоторые пользователи могут захотеть настроить и скомпилировать собственное ядро.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Когда следует собирать собственный ядро.
 * Как провести инвентаризацию оборудования.
@@ -169,7 +169,7 @@ ath_hal(4)               - Atheros Hardware Access Layer (HAL)
 
 [.filename]#MYKERNEL# теперь можно настроить с помощью любого текстового редактора, поддерживающего `ASCII`. Редактор по умолчанию — vi, но для новичков также установлен более простой редактор под названием ee.
 
-Формат файла конфигурации ядра прост. Каждая строка содержит ключевое слово, представляющее устройство или подсистему, аргумент и краткое описание. Любой текст после `+#+` считается комментарием и игнорируется. Чтобы удалить поддержку устройства или подсистемы в ядре, поставьте `+#+` в начале строки, соответствующей этому устройству или подсистеме. Не добавляйте и не удаляйте `+#+` для строк, которые вы не понимаете.
+Формат файла конфигурации ядра прост. Каждая строка содержит ключевое слово, представляющее устройство или подсистему, аргумент и краткое описание. Любой текст после `+#+` считается комментарием и игнорируется. Чтобы удалить поддержку устройства или подсистемы в ядре, поставьте `+#+` в начале строки, соответствующей этому устройству или подсистеме. Не добавляйте и не удаляйте `+#+` для строк, которые не понятны.
 
 [WARNING]
 ====
