--- a/documentation/content/ru/books/handbook/kernelconfig/_index.po
+++ b/documentation/content/ru/books/handbook/kernelconfig/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookkernelconfig_index/ru/>\n"
@@ -22,10 +22,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:1
 #, no-wrap
 msgid "This chapter covers how to configure the FreeBSD Kernel. When to build a custom kernel, how to take a hardware inventory, how to customize a kernel configuration file, etc"
-msgstr ""
-"Эта глава рассказывает о настройке ядра FreeBSD. Когда стоит собирать "
-"собственное ядро, как провести инвентаризацию оборудования, как настроить "
-"конфигурационный файл ядра и т. д."
+msgstr "Эта глава рассказывает о настройке ядра FreeBSD. Когда стоит собирать собственное ядро, как провести инвентаризацию оборудования, как настроить конфигурационный файл ядра и т. д."
 
 #. type: YAML Front Matter: part
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:1
@@ -67,8 +64,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:60
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:62
@@ -172,10 +169,10 @@ msgid ""
 msgstr ""
 "Сборка собственного ядра часто является своего рода обрядом посвящения для "
 "опытных пользователей BSD. Этот процесс, хотя и отнимает много времени, "
-"может принести пользу системе FreeBSD. В отличие от ядра [.filename]#GENERIC#"
-", которое должно поддерживать широкий спектр оборудования, собственное ядро "
-"можно сократить до поддержки только аппаратного обеспечения данного "
-"компьютера. Это дает ряд преимуществ, таких как:"
+"может принести пользу системе FreeBSD. В отличие от ядра [."
+"filename]#GENERIC#, которое должно поддерживать широкий спектр оборудования, "
+"собственное ядро можно сократить до поддержки только аппаратного обеспечения "
+"данного компьютера. Это дает ряд преимуществ, таких как:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:90
@@ -189,8 +186,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:91
 msgid ""
-"Lower memory usage. A custom kernel often uses less memory than the "
-"[.filename]#GENERIC# kernel by omitting unused features and device drivers. "
+"Lower memory usage. A custom kernel often uses less memory than the [."
+"filename]#GENERIC# kernel by omitting unused features and device drivers. "
 "This is important because the kernel code remains resident in physical "
 "memory at all times, preventing that memory from being used by applications. "
 "For this reason, a custom kernel is useful on a system with a small amount "
@@ -262,8 +259,7 @@ msgid ""
 "Alternatively, to load the driver as a module at boot time, place the\n"
 "following line in man:loader.conf[5]:\n"
 msgstr ""
-"В качестве альтернативы, для загрузки драйвера в виде модуля при старте "
-"системы,\n"
+"В качестве альтернативы, для загрузки драйвера в виде модуля при старте системы,\n"
 "поместите следующую строку в man:loader.conf[5]:\n"
 
 #. type: delimited block . 4
@@ -287,8 +283,8 @@ msgid ""
 "In some cases, there is no associated module in [.filename]#/boot/kernel#.  "
 "This is mostly true for certain subsystems."
 msgstr ""
-"В некоторых случаях связанный модуль отсутствует в [.filename]#/boot/kernel#"
-". Это в основном относится к определенным подсистемам."
+"В некоторых случаях связанный модуль отсутствует в [.filename]#/boot/"
+"kernel#. Это в основном относится к определенным подсистемам."
 
 #. type: Title ==
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:121
@@ -386,8 +382,7 @@ msgid ""
 "    subclass   = ethernet\n"
 msgstr ""
 "% pciconf -lv\n"
-"ath0@pci0:3:0:0:        class=0x020000 card=0x058a1014 chip=0x1014168c "
-"rev=0x01 hdr=0x00\n"
+"ath0@pci0:3:0:0:        class=0x020000 card=0x058a1014 chip=0x1014168c rev=0x01 hdr=0x00\n"
 "    vendor     = 'Atheros Communications Inc.'\n"
 "    device     = 'AR5212 Atheros AR5212 802.11abg wireless'\n"
 "    class      = network\n"
@@ -467,13 +462,13 @@ msgstr ""
 msgid ""
 "Once source is installed, review the contents of [.filename]#/usr/src/sys#.  "
 "This directory contains a number of subdirectories, including those which "
-"represent the following supported architectures: [.filename]#amd64#, "
-"[.filename]#i386#, [.filename]#powerpc#, and [.filename]#sparc64#.  "
-"Everything inside a particular architecture's directory deals with that "
-"architecture only and the rest of the code is machine independent code "
-"common to all platforms.  Each supported architecture has a "
-"[.filename]#conf# subdirectory which contains the [.filename]#GENERIC# "
-"kernel configuration file for that architecture."
+"represent the following supported architectures: [.filename]#amd64#, [."
+"filename]#i386#, [.filename]#powerpc#, and [.filename]#sparc64#.  Everything "
+"inside a particular architecture's directory deals with that architecture "
+"only and the rest of the code is machine independent code common to all "
+"platforms.  Each supported architecture has a [.filename]#conf# subdirectory "
+"which contains the [.filename]#GENERIC# kernel configuration file for that "
+"architecture."
 msgstr ""
 "После установки исходного кода ознакомьтесь с содержимым каталога [."
 "filename]#/usr/src/sys#. Этот каталог содержит несколько подкаталогов, "
@@ -481,8 +476,8 @@ msgstr ""
 "filename]#amd64#, [.filename]#i386#, [.filename]#powerpc# и [."
 "filename]#sparc64#. Всё содержимое каталога конкретной архитектуры относится "
 "только к этой архитектуре, а остальной код является машинонезависимым и "
-"общим для всех платформ. Каждая поддерживаемая архитектура имеет подкаталог ["
-".filename]#conf#, который содержит файл конфигурации ядра [."
+"общим для всех платформ. Каждая поддерживаемая архитектура имеет подкаталог "
+"[.filename]#conf#, который содержит файл конфигурации ядра [."
 "filename]#GENERIC# для данной архитектуры."
 
 #. type: Plain text
@@ -532,14 +527,14 @@ msgid ""
 "description.  Any text after a `+#+` is considered a comment and ignored.  "
 "To remove kernel support for a device or subsystem, put a `+#+` at the "
 "beginning of the line representing that device or subsystem.  Do not add or "
-"remove a `+#+` for any line that you do not understand."
+"remove a `+#+` for any line that is not understand."
 msgstr ""
 "Формат файла конфигурации ядра прост. Каждая строка содержит ключевое слово, "
 "представляющее устройство или подсистему, аргумент и краткое описание. Любой "
 "текст после `+#+` считается комментарием и игнорируется. Чтобы удалить "
 "поддержку устройства или подсистемы в ядре, поставьте `+#+` в начале строки, "
 "соответствующей этому устройству или подсистеме. Не добавляйте и не удаляйте "
-"`+#+` для строк, которые вы не понимаете."
+"`+#+` для строк, которые не понятны."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:214
@@ -750,8 +745,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/kernelconfig/_index.adoc:301
 msgid ""
 "By default, when a custom kernel is compiled, all kernel modules are "
-"rebuilt.  To update a kernel faster or to build only custom modules, edit "
-"[.filename]#/etc/make.conf# before starting to build the kernel."
+"rebuilt.  To update a kernel faster or to build only custom modules, edit [."
+"filename]#/etc/make.conf# before starting to build the kernel."
 msgstr ""
 "По умолчанию при компиляции собственного ядра все модули ядра "
 "пересобираются. Чтобы ускорить обновление ядра или собрать только "
@@ -881,8 +876,8 @@ msgstr ""
 msgid ""
 "After booting with a good kernel, check over the configuration file and try "
 "to build it again.  One helpful resource is [.filename]#/var/log/messages# "
-"which records the kernel messages from every successful boot.  Also, "
-"man:dmesg[8] will print the kernel messages from the current boot."
+"which records the kernel messages from every successful boot.  Also, man:"
+"dmesg[8] will print the kernel messages from the current boot."
 msgstr ""
 "После загрузки с исправным ядром проверьте конфигурационный файл и "
 "попробуйте собрать его снова. Полезным ресурсом может быть [.filename]#/var/"
