--- a/documentation/content/ru/books/handbook/l10n/_index.adoc
+++ b/documentation/content/ru/books/handbook/l10n/_index.adoc
@@ -56,7 +56,9 @@ FreeBSD — это распределённый проект с пользова
 
 Термин "internationalization" был сокращён до i18n, где число 18 обозначает количество букв между первой и последней буквами слова "internationalization". L10n использует ту же схему сокращения, но от слова "localization". Методы, протоколы и приложения i18n/L10n позволяют пользователям работать на предпочитаемых ими языках.
 
-Эта глава рассказывает о возможностях интернационализации и локализации в FreeBSD. Прочитав эту главу, вы узнаете:
+Эта глава рассказывает о возможностях интернационализации и локализации в FreeBSD.
+
+Прочитайте эту главу, чтобы узнать:
 
 * Как формируются названия локалей.
 * Как установить локаль для входной оболочки.
@@ -65,7 +67,7 @@ FreeBSD — это распределённый проект с пользова
 * Как найти приложения, соответствующие стандарту i18n.
 * Где найти дополнительную информацию по настройке конкретных языков.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Знать, как crossref:ports[ports,устанавливать дополнительные сторонние приложения].
 
