--- a/documentation/content/ru/books/handbook/linuxemu/_index.adoc
+++ b/documentation/content/ru/books/handbook/linuxemu/_index.adoc
@@ -54,11 +54,11 @@ endif::[]
 
 FreeBSD предоставляет *опциональную* двоичную совместимость с Linux(R), часто называемую Linuxulator, что позволяет пользователям устанавливать и запускать неизменённые Linux-бинарники. Это доступно для архитектур x86 (как 32, так и 64 бит) и AArch64. Некоторые специфичные для Linux функции операционной системы пока не поддерживаются; в основном это касается функциональности, связанной с оборудованием или управлением системой, такой как cgroups или пространства имён.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Знать, как установить crossref:ports[ports,дополнительное стороннее программное обеспечение].
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Как включить двоичную совместимость с Linux в системе FreeBSD.
 * Как установить дополнительные общие библиотеки Linux.
@@ -115,7 +115,7 @@ dr-xr-xr-x   1 root  wheel    0 Apr 11 21:03 sys
 Если требуется только запустить какое-либо программное обеспечение, уже включённое в дерево портов, его можно установить через менеджер пакетов, и man:pkg[8] автоматически настроит необходимую пользовательскую среду Linux.
 
 Например, чтобы установить Sublime Text 4 вместе со всеми необходимыми библиотеками Linux, выполните следующую команду:
- 
+
 [source, shell]
 ....
 # pkg install linux-sublime-text4
@@ -234,11 +234,11 @@ drwxr-xr-x  16 root  wheel   17 Apr 11 21:10 var
 
 [.programlisting]
 ....
-I: Retrieving InRelease 
+I: Retrieving InRelease
 I: Checking Release signature
 I: Valid Release signature (key id F6ECB3762474EDA9D21B7022871920D1991BC93C)
-I: Retrieving Packages 
-I: Validating Packages 
+I: Retrieving Packages
+I: Validating Packages
 I: Resolving dependencies of required packages...
 I: Resolving dependencies of base packages...
 I: Checking component main on http://archive.ubuntu.com/ubuntu...
@@ -297,7 +297,7 @@ linsysfs        /compat/ubuntu/sys      linsysfs        rw,late                 
 
 [.programlisting]
 ....
-Linux 3.17.0 x86_64
+Linux 5.15.0 x86_64
 ....
 
 Оказавшись в chroot, система ведет себя как при обычной установке Ubuntu. Хотя systemd не работает, команда man:service[8] функционирует в обычном режиме.
@@ -310,10 +310,10 @@ Linux 3.17.0 x86_64
 
 [.programlisting]
 ....
-deb http://archive.ubuntu.com/ubuntu focal main universe restricted multiverse
-deb http://security.ubuntu.com/ubuntu/ focal-security universe multiverse restricted main
-deb http://archive.ubuntu.com/ubuntu focal-backports universe multiverse restricted main
-deb http://archive.ubuntu.com/ubuntu focal-updates universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy main universe restricted multiverse
+deb http://security.ubuntu.com/ubuntu/ jammy-security universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy-backports universe multiverse restricted main
+deb http://archive.ubuntu.com/ubuntu jammy-updates universe multiverse restricted main
 ....
 
 Для arm64 можно использовать следующий пример:
