--- a/documentation/content/ru/books/handbook/mail/_index.adoc
+++ b/documentation/content/ru/books/handbook/mail/_index.adoc
@@ -190,7 +190,7 @@ username@example.org|mail.example.org:password
 [[sendmail]]
 == Sendmail
 
-Sendmail - это старейший и многофункциональный агент пересылки почты (MTA) с долгой историей в UNIX(R) и UNIX-подобных системах. Он входил в базовую систему FreeBSD вплоть до версии 13, предоставляя надежные возможности транспортировки почты, широкие варианты настройки и поддержку сложной маршрутизации и фильтрации.
+Sendmail - это старейший и многофункциональный агент пересылки почты (MTA) с долгой историей в UNIX(R) и UNIX-подобных системах. Он входил в базовую систему FreeBSD вплоть до версии 13, предоставляя надёжные возможности транспортировки почты, широкие варианты настройки и поддержку сложной маршрутизации и фильтрации.
 
 [[configuring-sendmail]]
 === Файлы конфигурации
@@ -709,7 +709,7 @@ customer1.org		MX	10	mail.myhost.com
 Существует множество случаев, когда требуется отправлять почту только через релейный сервер (SMTP-ретранслятор). Некоторые примеры:
 
 * Компьютер представляет собой настольную машину, которой необходимо использовать программы, такие как man:mail[1], с использованием почтового ретранслятора интернет-провайдера.
-* Компьютер является сервером, который не обрабатывает почту локально, а передает всю почту релейному серверу для обработки.
+* Компьютер является сервером, который не обрабатывает почту локально, а передаёт всю почту релейному серверу для обработки.
 
 Хотя любая MTA способна выполнить эту конкретную задачу, правильная настройка полнофункциональной MTA только для обработки пересылки почты может быть сложной. Такие программы, как Sendmail и Postfix, являются избыточными для такого использования.
 
