--- a/documentation/content/ru/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/ru/books/handbook/mirrors/_index.adoc
@@ -52,7 +52,7 @@ endif::[]
 [[mirrors]]
 == Зеркала
 
-Официальные зеркала проекта FreeBSD состоят из множества машин, управляемых администраторами кластера проекта, и используют GeoDNS для направления пользователей к ближайшему доступному зеркалу. Текущие местоположения: Австралия, Бразилия, Япония (две площадки), Малайзия, Южная Африка, Швеция, Тайвань, Соединённые Штаты Америки (Калифорния, Иллинойс — две площадки, Нью-Джерси и Вашингтон).
+Официальные зеркала проекта FreeBSD состоят из множества машин, управляемых администраторами кластера проекта, и используют GeoDNS для направления пользователей к ближайшему доступному зеркалу. Текущие местоположения: Австралия, Бразилия, Япония (две площадки), Малайзия, Южная Африка, Швеция, Тайвань, Соединённые Штаты Америки (Калифорния — две площадки, Иллинойс — две площадки, Нью-Джерси и Вашингтон).
 
 Официальный сервис зеркал:
 
@@ -256,10 +256,6 @@ http://ftp-archive.FreeBSD.org не входит в инфраструктуру
 | link:http://ftp.si.FreeBSD.org/pub/FreeBSD[http] link:http://ftp.si.FreeBSD.org/pub/FreeBSD[http_v6] link:ftp://ftp.si.FreeBSD.org/pub/FreeBSD[ftp] link:ftp://ftp.si.FreeBSD.org/pub/FreeBSD[ftp_v6]
 
 | ЮАР icon:envelope[link=mailto:{mirrors-south-africa-email}, title="mirror contact"]
-| ftp.za.FreeBSD.org
-| link:https://ftp.za.FreeBSD.org/pub/FreeBSD[https] link:https://ftp.za.FreeBSD.org/pub/FreeBSD[https_v6] link:rsync://ftp.za.FreeBSD.org[rsync] link:rsync://ftp.za.FreeBSD.org[rsync_v6]
-
-| 
 | ftp2.za.FreeBSD.org
 | link:http://ftp2.za.FreeBSD.org/pub/FreeBSD[http] link:http://ftp2.za.FreeBSD.org/pub/FreeBSD[http_v6] link:ftp://ftp2.za.FreeBSD.org/pub/FreeBSD[ftp_v6]
 
@@ -338,7 +334,7 @@ Git можно установить из Коллекции портов или 
 [[git-usage]]
 === Запуск Git
 
-Чтобы получить чистую копию исходников в локальную директорию, используйте `git clone`. Эта директория с файлами называется _рабочим деревом_.
+Чтобы получить чистую копию исходников в локальный каталог, используйте `git clone`. Этот каталог с файлами называется _рабочим деревом_.
 
 Git использует URL-адреса для указания репозитория. Существует три разных репозитория: `src` для исходного кода системы FreeBSD, `doc` для документации и `ports` для коллекции портов FreeBSD. Все три доступны по двум разным протоколам: HTTPS и SSH. Например, URL-адрес `https://git.FreeBSD.org/src.git` указывает на основную ветку репозитория `src`, используя протокол `https`.
 
