--- a/documentation/content/ru/books/handbook/multimedia/_index.adoc
+++ b/documentation/content/ru/books/handbook/multimedia/_index.adoc
@@ -52,7 +52,7 @@ endif::[]
 [[multimedia-synopsis]]
 == Обзор
 
-Глава о мультимедиа предоставляет обзор поддержки мультимедиа в FreeBSD. Мультимедийные приложения и технологии стали неотъемлемой частью современных вычислений, и FreeBSD обеспечивает надежную и стабильную поддержку широкого спектра мультимедийного оборудования и программного обеспечения. В этой главе рассматриваются различные мультимедийные компоненты, такие как аудио, видео и обработка изображений. Также обсуждаются различные медиаформаты и кодеки, а также инструменты и приложения для создания и воспроизведения мультимедиа. Дополнительно глава охватывает настройку мультимедийной системы, устранение неполадок и оптимизацию. Будь вы энтузиастом мультимедиа или профессиональным создателем контента, FreeBSD предлагает надежную платформу для мультимедийной работы. Эта глава призвана помочь максимально использовать мультимедийные возможности FreeBSD, предоставляя полезную информацию и практические примеры для начала работы.
+Глава о мультимедиа предоставляет обзор поддержки мультимедиа в FreeBSD. Мультимедийные приложения и технологии стали неотъемлемой частью современных вычислений, и FreeBSD обеспечивает надёжную и стабильную поддержку широкого спектра мультимедийного оборудования и программного обеспечения. В этой главе рассматриваются различные мультимедийные компоненты, такие как аудио, видео и обработка изображений. Также обсуждаются различные медиаформаты и кодеки, а также инструменты и приложения для создания и воспроизведения мультимедиа. Дополнительно глава охватывает настройку мультимедийной системы, устранение неполадок и оптимизацию. FreeBSD предлагает надёжную платформу для мультимедийной работы и энтузиастам мультимедиа, и профессиональным создателям контента. Эта глава призвана помочь максимально использовать мультимедийные возможности FreeBSD, предоставляя полезную информацию и практические примеры для начала работы.
 
 [[sound-setup]]
 == Настройка звуковой карты
@@ -321,7 +321,7 @@ GNOME Music - это новое приложение для воспроизве
 [[audacious]]
 === Audacious
 
-Audacious — это аудиоплеер с открытым исходным кодом. Потомок XMMS, он воспроизводит музыку так, как вам нужно, не отнимая ресурсы компьютера у других задач.
+Audacious — это аудиоплеер с открытым исходным кодом. Потомок XMMS, он воспроизводит музыку так эффективно используя ресурсы компьютера.
 
 Для установки Audacious выполните:
 
@@ -549,7 +549,7 @@ FreeBSD в настоящее время поддерживает следующ
 | link:https://teams.live.com[]
 
 | Google Meet
-| Не работает
+| Работает
 | Работает
 | link:https://meet.google.com/[]
 
