--- a/documentation/content/ru/books/handbook/multimedia/_index.po
+++ b/documentation/content/ru/books/handbook/multimedia/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-14 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookmultimedia_index/ru/>\n"
@@ -59,22 +59,23 @@ msgid ""
 "It also discusses various media formats and codecs, as well as tools and "
 "applications for multimedia creation and playback.  Additionally, the "
 "chapter covers multimedia system configuration, troubleshooting, and "
-"optimization.  Whether you are a multimedia enthusiast or a professional "
-"content creator, FreeBSD offers a robust platform for multimedia work.  This "
-"chapter aims to help get the most out of FreeBSD's multimedia capabilities, "
-"providing useful information and practical examples to help get started."
+"optimization.  FreeBSD provides a robust platform for multimedia work, "
+"suitable for both multimedia enthusiasts and professional content creators.  "
+"This chapter aims to help get the most out of FreeBSD's multimedia "
+"capabilities, providing useful information and practical examples to help "
+"get started."
 msgstr ""
 "Глава о мультимедиа предоставляет обзор поддержки мультимедиа в FreeBSD. "
 "Мультимедийные приложения и технологии стали неотъемлемой частью современных "
-"вычислений, и FreeBSD обеспечивает надежную и стабильную поддержку широкого "
+"вычислений, и FreeBSD обеспечивает надёжную и стабильную поддержку широкого "
 "спектра мультимедийного оборудования и программного обеспечения. В этой "
 "главе рассматриваются различные мультимедийные компоненты, такие как аудио, "
 "видео и обработка изображений. Также обсуждаются различные медиаформаты и "
 "кодеки, а также инструменты и приложения для создания и воспроизведения "
 "мультимедиа. Дополнительно глава охватывает настройку мультимедийной "
-"системы, устранение неполадок и оптимизацию. Будь вы энтузиастом мультимедиа "
-"или профессиональным создателем контента, FreeBSD предлагает надежную "
-"платформу для мультимедийной работы. Эта глава призвана помочь максимально "
+"системы, устранение неполадок и оптимизацию. FreeBSD предлагает надёжную "
+"платформу для мультимедийной работы и энтузиастам мультимедиа, и "
+"профессиональным создателям контента. Эта глава призвана помочь максимально "
 "использовать мультимедийные возможности FreeBSD, предоставляя полезную "
 "информацию и практические примеры для начала работы."
 
@@ -751,13 +752,11 @@ msgstr "# pkg install gnome-music\n"
 #. type: Plain text
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:347
 msgid ""
-"Audacious is an open source audio player.  A descendant of XMMS, it plays "
-"your music how you want it, without stealing away your computer's resources "
-"from other tasks."
+"Audacious is an open source audio player.  As a descendant of XMMS, it "
+"provides music playback while maintaining efficient use of system resources."
 msgstr ""
 "Audacious — это аудиоплеер с открытым исходным кодом. Потомок XMMS, он "
-"воспроизводит музыку так, как вам нужно, не отнимая ресурсы компьютера у "
-"других задач."
+"воспроизводит музыку так эффективно используя ресурсы компьютера."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:349
@@ -1275,7 +1274,6 @@ msgstr "Microsoft Teams"
 
 #. type: Table
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:579
-#: documentation/content/en/books/handbook/multimedia/_index.adoc:584
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:594
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:599
 #, no-wrap
@@ -1284,6 +1282,7 @@ msgstr "Не работает"
 
 #. type: Table
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:580
+#: documentation/content/en/books/handbook/multimedia/_index.adoc:584
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:585
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:589
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:590
