--- a/documentation/content/ru/books/handbook/network-servers/_index.po
+++ b/documentation/content/ru/books/handbook/network-servers/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-20 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbooknetwork-servers_index/ru/>\n"
@@ -225,8 +225,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:100
 msgid ""
-"After saving your edits, configure inetd to start at system boot by editing "
-"[.filename]#/etc/rc.conf#:"
+"After saving the edits, configure inetd to start at system boot by editing [."
+"filename]#/etc/rc.conf#:"
 msgstr ""
 "После сохранения изменений настройте inetd для запуска при загрузке системы, "
 "отредактировав [.filename]#/etc/rc.conf#:"
@@ -240,7 +240,7 @@ msgstr "inetd_enable=\"YES\"\n"
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:107
 msgid ""
-"To start inetd now, so that it listens for the service you configured, type:"
+"To start inetd now, so that it listens for the configured service, type:"
 msgstr ""
 "Чтобы запустить inetd сейчас, чтобы он начал прослушивать настроенную "
 "службу, введите:"
@@ -745,7 +745,7 @@ msgstr ""
 msgid "NFS has many practical uses.  Some of the more common uses include:"
 msgstr ""
 "NFS имеет множество практических применений. Некоторые из наиболее "
-"распространенных вариантов использования включают:"
+"распространённых вариантов использования включают:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:279
@@ -922,17 +922,17 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:323
 msgid ""
-"This example shows how to export [.filename]#/cdrom# to three hosts named "
+"This example shows how to export [.filename]#/media# to three hosts named "
 "_alpha_, _bravo_, and _charlie_:"
 msgstr ""
-"В этом примере показано, как экспортировать [.filename]#/cdrom# на три хоста "
+"В этом примере показано, как экспортировать [.filename]#/media# на три хоста "
 "с именами _alpha_, _bravo_ и _charlie_:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:327
 #, no-wrap
-msgid "/cdrom -ro alpha bravo charlie\n"
-msgstr "/cdrom -ro alpha bravo charlie\n"
+msgid "/media -ro alpha bravo charlie\n"
+msgstr "/media -ro alpha bravo charlie\n"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:332
@@ -1182,7 +1182,7 @@ msgid ""
 "`client`, in the [.filename]#/mnt# directory."
 msgstr ""
 "Файлы и каталоги в [.filename]#/home# теперь будут доступны на `client`, в "
-"директории [.filename]#/mnt#."
+"каталоге [.filename]#/mnt#."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:440
@@ -3472,7 +3472,7 @@ msgid ""
 "In this example, the system is using the DES format for password hashing.  "
 "Other possible values include `blf` for Blowfish, `md5` for MD5, `sha256` "
 "and `sha512` for SHA-256 and SHA-512 respectively.  For more information and "
-"the up to date list of what is available on your system, consult the man:"
+"the up to date list of what is available on the system, consult the man:"
 "crypt[3] manpage."
 msgstr ""
 "В этом примере система использует формат DES для хеширования паролей. Другие "
@@ -3738,12 +3738,12 @@ msgid ""
 "with this command and follow the prompts:"
 msgstr ""
 "Следующий этап — настройка Центра Сертификации. Следующие команды должны "
-"быть выполнены из директории [.filename]#/usr/local/etc/openldap/private#. "
-"Это важно, так как права доступа к файлам должны быть строгими, и "
-"пользователи не должны иметь доступ к этим файлам. Более подробную "
-"информацию о сертификатах и их параметрах можно найти в crossref:"
-"security[openssl,\"OpenSSL\"]. Чтобы создать Центр Сертификации, начните с "
-"этой команды и следуйте инструкциям:"
+"быть выполнены из каталога [.filename]#/usr/local/etc/openldap/private#. Это "
+"важно, так как права доступа к файлам должны быть строгими, и пользователи "
+"не должны иметь доступ к этим файлам. Более подробную информацию о "
+"сертификатах и их параметрах можно найти в crossref:security[openssl,"
+"\"OpenSSL\"]. Чтобы создать Центр Сертификации, начните с этой команды и "
+"следуйте инструкциям:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:1350
@@ -4208,7 +4208,7 @@ msgid ""
 "in an empty directory.  It is recommended to create it as:"
 msgstr ""
 "После завершения настройки файл [.filename]#slapd.ldif# должен быть "
-"скопирован в пустую директорию. Рекомендуется создать её следующим образом:"
+"скопирован в пустой каталог. Рекомендуется создать его следующим образом:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:1545
@@ -4320,7 +4320,7 @@ msgid ""
 msgstr ""
 "И сертификат центра сертификации, и сертификат сервера теперь правильно "
 "распознаются в своих соответствующих ролях. Чтобы проверить это, выполните "
-"следующую команду из директории, где находится [.filename]#server.crt#:"
+"следующую команду из каталога, где находится [.filename]#server.crt#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:1609
@@ -5972,11 +5972,10 @@ msgstr ""
 "В прошлом поддержка SSL в Apache требовала дополнительного модуля под "
 "названием [.filename]#mod_ssl#. Сейчас это не так, и стандартная установка "
 "Apache включает SSL в веб-сервер. Пример настройки поддержки SSL-сайтов "
-"доступен в установленном файле [.filename]#httpd-ssl.conf# внутри директории "
-"[.filename]#/usr/local/etc/apache24/extra#. В этой же директории также "
-"находится пример файла с именем [.filename]#ssl.conf-sample#. Рекомендуется "
-"изучить оба файла для правильной настройки защищённых сайтов в веб-сервере "
-"Apache."
+"доступен в установленном файле [.filename]#httpd-ssl.conf# внутри каталога [."
+"filename]#/usr/local/etc/apache24/extra#. В этом же каталоге также находится "
+"пример файла с именем [.filename]#ssl.conf-sample#. Рекомендуется изучить "
+"оба файла для правильной настройки защищённых сайтов в веб-сервере Apache."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:2155
@@ -7275,7 +7274,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:2622
 msgid ""
 "ntpd communicates with its network peers using UDP packets.  Any firewalls "
-"between your machine and its NTP peers must be configured to allow UDP "
+"between the machine and its NTP peers must be configured to allow UDP "
 "packets in and out on port 123."
 msgstr ""
 "ntpd взаимодействует с сетевыми узлами с помощью UDP-пакетов. Любые "
@@ -7639,7 +7638,7 @@ msgstr "statsdir"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/network-servers/_index.adoc:2736
-msgid "To manually configure ntpd to run as user `ntpd` you must:"
+msgid "To manually configure ntpd to run as user `ntpd`:"
 msgstr ""
 "Для ручной настройки ntpd для запуска от пользователя `ntpd` необходимо:"
 
@@ -8086,8 +8085,8 @@ msgid ""
 "FreeBSD 10.0-RELEASE.  To use the iSCSI initiator available in older "
 "versions, refer to man:iscontrol[8]."
 msgstr ""
-"Описанный в этом разделе инициатор iSCSI поддерживается начиная с FreeBSD 10."
-"0-RELEASE. Для использования инициатора iSCSI, доступного в более старых "
+"Описанный в этом разделе инициатор iSCSI поддерживается начиная с FreeBSD "
+"10.0-RELEASE. Для использования инициатора iSCSI, доступного в более старых "
 "версиях, обратитесь к man:iscontrol[8]."
 
 #. type: Plain text
