--- a/documentation/content/ru/books/handbook/network/_index.adoc
+++ b/documentation/content/ru/books/handbook/network/_index.adoc
@@ -6,7 +6,7 @@ params:
 part: 'В начале'
 prev: books/handbook/wayland
 showBookMenu: 'true'
-tags: ["network", "ipv4", "ipv6", "wireless", "wpa_supplicant", "static ip", "dynamic ip"]
+tags: ["network", "ipv4", "ipv6", "wireless", "wpa_supplicant", "static ip", "dynamic ip", "WiFi"]
 title: 'Глава 7. Сеть'
 weight: 9
 ---
@@ -608,7 +608,7 @@ net.wlan.devices: iwm0
 [[basic-wireless-configuration]]
 === Базовая настройка беспроводной сети
 
-Эта секция предоставляет детальный пример настройки беспроводной сетевой карты. Чтобы узнать, какие беспроводные сетевые карты есть в системе, ознакомьтесь с разделом crossref:network[config-identify-network-adapter, Идентификация сетевых адаптеров].
+Эта секция предоставляет детальный пример настройки беспроводной сетевой карты. Чтобы узнать, какие беспроводные сетевые карты есть в системе, ознакомьтесь с разделом crossref:network[config-identify-network-adapter, Определение сетевых адаптеров].
 
 [source, shell]
 ....
@@ -749,7 +749,7 @@ network={
 
 === Использование проводного и беспроводного подключений одновременно
 
-Проводное соединение обеспечивает лучшую производительность и надежность, тогда как беспроводное соединение предоставляет гибкость и мобильность. Пользователи ноутбуков, как правило, хотят свободно переключаться между этими двумя типами соединений.
+Проводное соединение обеспечивает лучшую производительность и надёжность, тогда как беспроводное соединение предоставляет гибкость и мобильность. Пользователи ноутбуков, как правило, хотят свободно переключаться между этими двумя типами соединений.
 
 На FreeBSD можно объединить два или более сетевых интерфейса в режиме "отказоустойчивости". Такой тип конфигурации использует наиболее предпочтительное и доступное соединение из группы сетевых интерфейсов, а операционная система автоматически переключается при изменении состояния канала.
 
