--- a/documentation/content/ru/books/handbook/network/_index.po
+++ b/documentation/content/ru/books/handbook/network/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-09-23 04:45+0000\n"
+"PO-Revision-Date: 2025-11-17 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbooknetwork_index/ru/>\n"
@@ -1627,7 +1627,7 @@ msgstr ""
 "Эта секция предоставляет детальный пример настройки беспроводной сетевой "
 "карты. Чтобы узнать, какие беспроводные сетевые карты есть в системе, "
 "ознакомьтесь с разделом crossref:network[config-identify-network-adapter, "
-"Идентификация сетевых адаптеров]."
+"Определение сетевых адаптеров]."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/network/_index.adoc:649
@@ -1944,7 +1944,7 @@ msgid ""
 "wireless connection provides flexibility and mobility.  Laptop users "
 "typically want to roam seamlessly between the two types of connections."
 msgstr ""
-"Проводное соединение обеспечивает лучшую производительность и надежность, "
+"Проводное соединение обеспечивает лучшую производительность и надёжность, "
 "тогда как беспроводное соединение предоставляет гибкость и мобильность. "
 "Пользователи ноутбуков, как правило, хотят свободно переключаться между "
 "этими двумя типами соединений."
