--- a/documentation/content/ru/books/handbook/ppp-and-slip/_index.adoc
+++ b/documentation/content/ru/books/handbook/ppp-and-slip/_index.adoc
@@ -54,13 +54,13 @@ endif::[]
 
 FreeBSD поддерживает протокол Point-to-Point (PPP), который может использоваться для установки сетевого или интернет-соединения с помощью модема. В этой главе описывается, как настроить услуги связи на основе модема в FreeBSD.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Как настроить, использовать и устранять неполадки PPP-подключения.
 * Как настроить PPP over Ethernet (PPPoE).
 * Как настроить PPP over ATM (PPPoA).
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Знать основные термины и понятия сетевых технологий.
 * Понимать основы и назначение коммутируемого соединения и PPP.
@@ -250,7 +250,7 @@ Line 13:::
 Эта строка указывает имя пользователя PAP/CHAP. Вставьте правильное значение для _MyUserName_.
 
 Line 14:::
-Эта строка указывает пароль PAP/CHAP. Вставьте правильное значение вместо _MyPassword_. Возможно, вы захотите добавить дополнительную строку, например:
+Эта строка указывает пароль PAP/CHAP. Вставьте правильное значение вместо _MyPassword_. Дополнительная строка может быть добавлена, например:
 +
 [.programlisting]
 ....
@@ -575,7 +575,7 @@ PPP ON example>add default HISADDR
 
 Если соединение не может быть установлено, отключите аппаратный поток CTS/RTS с помощью `set ctsrts off`. Это в основном происходит при подключении к некоторым терминальным серверам с поддержкой PPP, где PPP зависает при попытке записи данных в линию связи и ожидает сигнала Clear To Send (CTS), который может никогда не поступить. При использовании этой опции включите `set accmap`, так как может потребоваться обойти аппаратную зависимость от передачи определённых символов от конца к концу, чаще всего XON/XOFF. Дополнительную информацию об этой опции и её использовании см. в man:ppp[8].
 
-Старый модем может потребовать `set parity even`. По умолчанию четность отключена, но она используется для проверки ошибок с значительным увеличением трафика на старых модемах.
+Старый модем может потребовать `set parity even`. По умолчанию чётность отключена, но она используется для проверки ошибок с значительным увеличением трафика на старых модемах.
 
 PPP может не вернуться в командный режим, что обычно является ошибкой согласования, когда ISP ожидает начала процесса согласования. В этом случае использование `~p` заставит ppp начать отправку информации о конфигурации.
 
@@ -624,13 +624,13 @@ nameserver y.y.y.y
 [.programlisting]
 ....
 default:
-  set log Phase tun command # you can add more detailed logging if you wish
+  set log Phase tun command # add more detailed logging when needed
   set ifaddr 10.0.0.1/0 10.0.0.2/0
 
 name_of_service_provider:
-  set device PPPoE:xl1 # replace xl1 with your Ethernet device
-  set authname YOURLOGINNAME
-  set authkey YOURPASSWORD
+  set device PPPoE:xl1 # replace xl1 with the Ethernet device
+  set authname THELOGINNAME
+  set authkey THEPASSWORD
   set dial
   set login
   add default HISADDR
@@ -649,7 +649,7 @@ name_of_service_provider:
 ....
 ppp_enable="YES"
 ppp_mode="ddial"
-ppp_nat="YES"	# if you want to enable nat for your local network, otherwise NO
+ppp_nat="YES"	# when needing to enable nat for the local network, otherwise NO
 ppp_profile="name_of_service_provider"
 ....
 
