--- a/documentation/content/ru/books/handbook/printing/_index.adoc
+++ b/documentation/content/ru/books/handbook/printing/_index.adoc
@@ -158,7 +158,7 @@ FreeBSD может взаимодействовать со всеми типам
 +
 Для последовательных портов, встроенных в материнскую плату, имя последовательного устройства — [.filename]#/dev/cuau0# или [.filename]#/dev/cuau1#. Также можно использовать последовательные адаптеры `USB`, которые будут отображаться как [.filename]#/dev/cuaU0#.
 +
-Несколько параметров связи должны быть известны для взаимодействия с последовательным принтером. Наиболее важные из них — это _скорость передачи_ или `BPS` (бит в секунду) и _четность_. Значения могут различаться, но обычно последовательные принтеры используют скорость 9600 и отсутствие проверки на четность.
+Несколько параметров связи должны быть известны для взаимодействия с последовательным принтером. Наиболее важные из них — это _скорость передачи_ или `BPS` (бит в секунду) и _чётность_. Значения могут различаться, но обычно последовательные принтеры используют скорость 9600 и отсутствие проверки на чётность.
 
 [[printing-connections-network]]
 Сеть::
@@ -173,7 +173,7 @@ FreeBSD может взаимодействовать со всеми типам
 [[printing-connections-summary]]
 === Краткое содержание
 
-Проводные сетевые подключения обычно проще всего настроить и обеспечивают наиболее быструю печать. Для прямого подключения к компьютеру предпочтительнее использовать `USB` из-за скорости и простоты. Параллельные подключения работают, но имеют ограничения по длине кабеля и скорости. Последовательные подключения сложнее настроить. Разводка кабелей различается в зависимости от модели, а параметры связи, такие как скорость передачи данных и биты четности, добавляют сложности. К счастью, последовательные принтеры встречаются редко.
+Проводные сетевые подключения обычно проще всего настроить и обеспечивают наиболее быструю печать. Для прямого подключения к компьютеру предпочтительнее использовать `USB` из-за скорости и простоты. Параллельные подключения работают, но имеют ограничения по длине кабеля и скорости. Последовательные подключения сложнее настроить. Разводка кабелей различается в зависимости от модели, а параметры связи, такие как скорость передачи данных и биты чётности, добавляют сложности. К счастью, последовательные принтеры встречаются редко.
 
 [[printing-pdls]]
 == Языки описания страниц
@@ -555,7 +555,7 @@ psprinter:\
 
 Документы, отправленные на `textprinter`, будут отформатированы фильтром [.filename]#/usr/local/libexec/enscript#, показанным в предыдущем примере. Опытные пользователи могут печатать PostScript(R) файлы на `psprinter`, где фильтрация не выполняется.
 
-Этот метод с несколькими очередями может быть использован для предоставления прямого доступа к различным функциям принтера. Принтер с дуплексом может использовать две очереди: одну для обычной односторонней печати и другую с фильтром, который отправляет последовательность команд для включения двусторонней печати, а затем передает входящий файл.
+Этот метод с несколькими очередями может быть использован для предоставления прямого доступа к различным функциям принтера. Принтер с дуплексом может использовать две очереди: одну для обычной односторонней печати и другую с фильтром, который отправляет последовательность команд для включения двусторонней печати, а затем передаёт входящий файл.
 
 [[printing-lpd-monitor]]
 === Мониторинг и управление печатью
