--- a/documentation/content/ru/books/handbook/usb-device-mode/_index.adoc
+++ b/documentation/content/ru/books/handbook/usb-device-mode/_index.adoc
@@ -62,7 +62,7 @@ endif::[]
 
 Обратите внимание, что в некоторых случаях, в зависимости от оборудования и операционной системы хоста, для того чтобы хост заметил изменение конфигурации, может потребоваться либо физическое отключение и повторное подключение, либо принудительное повторное сканирование шины USB способом, зависящим от системы. Если на хосте запущена FreeBSD, можно использовать man:usbconfig[8] `reset`. Это также необходимо сделать после загрузки [.filename]#usb_template.ko#, если USB-хост уже был подключен к разъему USBOTG.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Как настроить функциональность USB Device Mode в FreeBSD.
 * Как настроить виртуальный последовательный порт на FreeBSD.
@@ -187,7 +187,7 @@ hw.usb.template=1
 
 === Настройка USB-накопителя с использованием стартового скрипта cfumass
 
-Самый простой способ настроить USB-накопитель только для чтения — использовать скрипт [.filename]#cfumass#. Для этого скопируйте файлы, которые должны быть доступны на USB-хосте, в директорию `/var/cfumass` и добавьте следующую строку в [.filename]#/etc/rc.conf#:
+Самый простой способ настроить USB-накопитель только для чтения — использовать скрипт [.filename]#cfumass#. Для этого скопируйте файлы, которые должны быть доступны на USB-хосте, в каталог `/var/cfumass` и добавьте следующую строку в [.filename]#/etc/rc.conf#:
 
 [.programlisting]
 ....
