--- a/documentation/content/ru/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/ru/books/handbook/virtualization/_index.adoc
@@ -54,7 +54,7 @@ endif::[]
 
 Программное обеспечение виртуализации позволяет нескольким операционным системам работать одновременно на одном компьютере. Такие программные системы для ПК часто включают основную операционную систему, которая запускает ПО виртуализации и поддерживает произвольное количество гостевых операционных систем.
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
 * Разница между основной операционной системой и гостевой операционной системой.
 * Как установить FreeBSD на следующие платформы виртуализации:
@@ -65,9 +65,9 @@ endif::[]
 ** bhyve(FreeBSD)
 * Как настроить систему FreeBSD для достижения наилучшей производительности при виртуализации.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
-* Понимайте crossref:basics[basics,основы UNIX(R) и FreeBSD].
+* Понимать crossref:basics[basics,основы UNIX(R) и FreeBSD].
 * Знать, как crossref:bsdinstall[bsdinstall,установить FreeBSD].
 * Уметь настраивать сетевое соединение, как описано в crossref:advanced-networking[advanced-networking,разделе по расширенной настройке сети].
 * Знать, как crossref:ports[ports,установить дополнительное стороннее программное обеспечение].
@@ -384,7 +384,7 @@ vboxnet_enable="YES"
 
 [source, shell]
 ....
-# pw groupmod vboxusers -m yourusername
+# pw groupmod vboxusers -m username
 ....
 
 Настройки прав доступа по умолчанию для [.filename]#/dev/vboxnetctl# являются ограничительными и требуют изменения для работы мостового соединения:
@@ -421,7 +421,7 @@ perm    vboxnetctl 0660
 
 [source, shell]
 ....
-# pw groupmod operator -m yourusername
+# pw groupmod operator -m username
 ....
 
 Затем добавьте следующее в [.filename]#/etc/devfs.rules# или создайте этот файл, если он ещё не существует:
@@ -655,7 +655,7 @@ image::qemu-freebsd03.png["Когда QEMU захватит мышь"]
 
 [NOTE]
 ====
-QEMU поддерживает параметр ```-runas```. Для повышения безопасности добавьте параметр "-runas your_user_name" в приведённый выше скрипт. Подробности см. в man:qemu[1].
+QEMU поддерживает параметр ```-runas```. Для повышения безопасности добавьте параметр "-runas user_name" в приведённый выше скрипт. Подробности см. в man:qemu[1].
 ====
 
 Войдите снова как `root` и добавьте любые необходимые пакеты. Чтобы использовать систему X Window в гостевой системе, см. раздел «Использование системы X Window» ниже.
@@ -1708,7 +1708,7 @@ bhyve {
 
         exec.clean;
 
-        host.hostname = "your-hostname-here";
+        host.hostname = "the-hostname-here";
         vnet;
         vnet.interface = "jail${if}";
         path = "/jails/${name}";
@@ -1744,7 +1744,7 @@ bhyve {
 
         exec.clean;
 
-        host.hostname = "your-hostname-here";
+        host.hostname = "the-hostname-here";
         vnet;
         vnet.interface = "jail${if}";
         path = "/jails/${name}";
@@ -2004,7 +2004,7 @@ net.link.tap.up_on_open=1
 .Установка IP для устройства bridge
 [example]
 ====
-Для хоста с интерфейсом _igb0_, подключенным к сети с IP `10.10.10.1` и маской подсети `255.255.255.0`, следует использовать следующие команды:
+Для хоста с интерфейсом _igb0_, подключенным к сети с IP `10.10.10.1` и маской подсети `255.255.255.0`, используйте следующие команды:
 
 [source, shell]
 ....
