--- a/documentation/content/ru/books/handbook/wayland/_index.po
+++ b/documentation/content/ru/books/handbook/wayland/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-08-17 20:54+0100\n"
-"PO-Revision-Date: 2025-09-26 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-14 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookwayland_index/ru/>\n"
@@ -61,8 +61,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:59
-msgid "Before reading this chapter, you should:"
-msgstr "Прежде чем читать эту главу, вы должны:"
+msgid "Before reading this chapter:"
+msgstr "Прежде чем читать эту главу, необходимо:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:61
@@ -75,16 +75,16 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:63
 msgid ""
-"How to identify and configure crossref:x11[x-graphic-card-drivers,drivers "
-"for your graphics hardware]."
+"Know how to identify and configure crossref:x11[x-graphic-card-drivers,"
+"drivers for the graphics hardware]."
 msgstr ""
-"Как определить и настроить crossref:x11[x-graphic-card-drivers,драйверы для "
-"вашего графического оборудования]."
+"Знать, как определить и настроить crossref:x11[x-graphic-card-"
+"drivers,драйверы для вашего графического оборудования]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:65
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:67
@@ -132,8 +132,8 @@ msgstr ""
 "зависимость от X-сервера. X.org включает в себя как протокол X11, "
 "используемый для работы с удалёнными дисплеями, так и X-сервер, который "
 "принимает соединения и отображает окна. В случае с Wayland, композитор или "
-"оконный менеджер предоставляет сервер дисплеев вместо традиционного "
-"X-сервера."
+"оконный менеджер предоставляет сервер дисплеев вместо традиционного X-"
+"сервера."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:84
@@ -319,16 +319,16 @@ msgid ""
 msgstr ""
 "Сообщается, что пользователи ZFS могут столкнуться с проблемами при работе с "
 "некоторыми клиентами Wayland, так как им требуется доступ к "
-"`posix_fallocate()` в runtime-директории. Хотя автор не смог воспроизвести "
-"эту проблему на своей системе с ZFS, рекомендуемым решением является отказ "
-"от использования ZFS для runtime-директории и использование `tmpfs` для [."
+"`posix_fallocate()` в runtime-каталоге. Хотя автор не смог воспроизвести эту "
+"проблему на своей системе с ZFS, рекомендуемым решением является отказ от "
+"использования ZFS для runtime-каталога и использование `tmpfs` для [."
 "filename]#/var/run#. В этом случае файловая система `tmpfs` используется для "
-"[.filename]#/var/run# и монтируется командой `mount -t tmpfs tmpfs /var/"
-"run`, после чего это изменение можно сделать постоянным после перезагрузок "
-"через [.filename]#/etc/fstab#. Переменная окружения XDG_RUNTIME_DIR может "
-"быть настроена на использование [.filename]#/var/run/user/$UID#, чтобы "
-"избежать потенциальных проблем с ZFS. Учитывайте этот сценарий при изучении "
-"примеров конфигурации в следующих разделах."
+"[.filename]#/var/run# и монтируется командой `mount -t tmpfs tmpfs /var/run`"
+", после чего это изменение можно сделать постоянным после перезагрузок через "
+"[.filename]#/etc/fstab#. Переменная окружения XDG_RUNTIME_DIR может быть "
+"настроена на использование [.filename]#/var/run/user/$UID#, чтобы избежать "
+"потенциальных проблем с ZFS. Учитывайте этот сценарий при изучении примеров "
+"конфигурации в следующих разделах."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:155
@@ -413,8 +413,8 @@ msgstr ""
 "и `Terminal` XFCE-4, были протестированы и подтверждены для работы под "
 "композитором Wayfire. Конфигурация Wayfire относительно проста; она "
 "использует файл, который следует изучить перед внесением любых изменений. "
-"Для начала скопируйте пример файла в директорию конфигурации среды "
-"выполнения, а затем отредактируйте файл:"
+"Для начала скопируйте пример файла в каталог конфигурации среды выполнения, "
+"а затем отредактируйте файл:"
 
 #. type: delimited block - 4
 #: documentation/content/en/books/handbook/wayland/_index.adoc:186
@@ -919,13 +919,13 @@ msgstr ""
 msgid ""
 "Before starting the Sway installation, ensure that a graphics card (GPU) is "
 "installed and configured correctly.  Refer to the section crossref:x11[x-"
-"graphic-card-drivers,drivers for your graphics hardware] for guidance.  This "
+"graphic-card-drivers,drivers for the graphics hardware] for guidance.  This "
 "step is essential for the Sway compositor to function properly."
 msgstr ""
 "Перед установкой Sway убедитесь, что графическая карта (GPU) установлена и "
 "настроена правильно. Обратитесь к разделу crossref:x11[x-graphic-card-"
-"drivers,драйверы для вашего графического оборудования] для получения "
-"инструкций. Этот шаг необходим для корректной работы композитора Sway."
+"drivers,Драйверы видеокарт] для получения инструкций. Этот шаг необходим для "
+"корректной работы композитора Sway."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:384
@@ -980,7 +980,7 @@ msgid ""
 "# Logo key. Use Mod1 for Alt.\n"
 "input * xkb_rules evdev\n"
 "set $mod Mod4\n"
-"# Your preferred terminal emulator\n"
+"# The preferred terminal emulator\n"
 "set $term alacritty\n"
 "set $lock swaylock -f -c 000000\n"
 "output \"My Workstation\" mode 1366x768@60Hz position 1366 0\n"
@@ -994,7 +994,7 @@ msgstr ""
 "# Logo key. Use Mod1 for Alt.\n"
 "input * xkb_rules evdev\n"
 "set $mod Mod4\n"
-"# Your preferred terminal emulator\n"
+"# The preferred terminal emulator\n"
 "set $term alacritty\n"
 "set $lock swaylock -f -c 000000\n"
 "output \"My Workstation\" mode 1366x768@60Hz position 1366 0\n"
@@ -1002,7 +1002,8 @@ msgstr ""
 "### Idle configuration\n"
 "exec swayidle -w \\\n"
 "          timeout 300 'swaylock -f -c 000000' \\\n"
-"          timeout 600 'swaymsg \"output * dpms off\"' resume 'swaymsg \"output * dpms on\"' \\\n"
+"          timeout 600 'swaymsg \"output * dpms off\"' resume 'swaymsg "
+"\"output * dpms on\"' \\\n"
 "          before-sleep 'swaylock -f -c 000000'\n"
 
 #. type: Plain text
