--- a/documentation/content/ru/books/handbook/x11/_index.adoc
+++ b/documentation/content/ru/books/handbook/x11/_index.adoc
@@ -54,13 +54,13 @@ endif::[]
 
 crossref:bsdinstall[bsdinstall-synopsis,Установка] FreeBSD с помощью man:bsdinstall[8] не включает автоматическую установку графического интерфейса пользователя. В этой главе описано, как установить и настроить man:Xorg[1], который предоставляет открытую реализацию системы X Window (часто сокращается до X11), используемую для создания графической среды.
 
-Прежде чем читать эту главу, вы должны:
+Прежде чем читать эту главу, необходимо:
 
 * Знать, как устанавливать дополнительное стороннее программное обеспечение, как описано в crossref:ports[ports,Установка приложений: Пакеты и Порты].
 
-Прочитав эту главу, вы будете знать:
+Прочитайте эту главу, чтобы узнать:
 
-* Как выбрать и установить драйверы для вашего графического процессора (GPU).
+* Как выбрать и установить драйверы для графического процессора (GPU).
 * Различные компоненты X Window System и их взаимодействие.
 * Как установить и настроить сервер X.org.
 * Как установить и настроить шрифты в системе X Windows.
@@ -259,7 +259,7 @@ package:x11/nvidia-secondary-driver-390[]
 # sysrc kld_list+=nvidia-drm
 ....
 
-Это драйвер прямой визуализации crossref:glossary[glossary-kms,KMS].
+Это драйвер прямой визуализации crossref:glossary[kms-glossary,KMS].
 
 Kernel modesetting — это опция для установки графического режима в ядре. Включите её для последующих загрузок с помощью следующей настройки man:loader.conf[5]:
 
@@ -323,7 +323,7 @@ _**аннотация**: Для размещения crossref:desktop[desktop-sy
 [[x-config]]
 == Конфигурация X.org
 
-_**аннотация**: Если настройки по умолчанию для вашего монитора или устройств ввода вас не устраивают, в crossref:desktop[desktop-synopsis,рабочем окружении] включены графические интерфейсы для их настройки, либо их можно настроить вручную._
+_**аннотация**: Если настройки по умолчанию для монитора или устройств ввода не устраивают, в crossref:desktop[desktop-synopsis,рабочем окружении] включены графические интерфейсы для их настройки, либо их можно настроить вручную._
 
 Сервер X.org поддерживает большинство распространённых графических процессоров, мониторов и устройств ввода. Сначала попробуйте настройки по умолчанию. В этом подразделе представлен обзор их конфигурации.
 
@@ -576,14 +576,14 @@ EndSection
 
 Сервер Xorg[X.org] предоставляет библиотеку package:x11/libinput[], которая представляет собой кроссплатформенное решение для поддержки всех сенсорных, указывающих и клавиатурных устройств в рамках единой библиотеки. Если не указано иное, она загружается автоматически.
 
-Индивидуальные настройки устройств для man:libinput[4] можно настроить в графическом интерфейсе вашего crossref:desktop[desktop-synopsis,рабочего стола] или вручную с помощью package:x11/xinput[xinput] и package:x11/setxkbmap[setxkbmap].
+Индивидуальные настройки устройств для man:libinput[4] можно настроить в графическом интерфейсе crossref:desktop[desktop-synopsis,рабочего стола] или вручную с помощью package:x11/xinput[xinput] и package:x11/setxkbmap[setxkbmap].
 
 В качестве альтернативы, в пакете package:x11-drivers[] категории x11/xf86-input-[foo] доступны более старые, легковесные отдельные драйверы для конкретных устройств ввода. Этот подход требует ручной настройки сервера X.org. Оба метода описаны в данном подразделе.
 
 [[x-config-input-atmoic]]
 ==== Использование файла конфигурации атомарного ввода
 
-Устройства, поддерживаемые man:libinput[4], могут быть настроены с помощью графических утилит, включенных в ваш crossref:desktop[desktop-synopsis,рабочую среду], или вручную и атомарно во время выполнения с помощью package:x11/xinput[] и package:x11/setxkbmap[].
+Устройства, поддерживаемые man:libinput[4], могут быть настроены с помощью графических утилит, включенных в crossref:desktop[desktop-synopsis,рабочую среду], или вручную и атомарно во время выполнения с помощью package:x11/xinput[] и package:x11/setxkbmap[].
 
 Чтобы узнать, к каким устройствам в данный момент подключён man:libinput[4], запустите man:xinput[1] без аргументов:
 
@@ -614,7 +614,7 @@ $ xinput
 
 Для настройки клавиатуры обратитесь к man:setxkbmap[1].
 
-Удовлетворившись своей конфигурацией, просто добавьте строки в ваш скрипт инициализации X, например, в [.filename]#~/.Xsession# или [.filename]#~/.xinitrc#.
+Удовлетворившись своей конфигурацией, просто добавьте строки в скрипт инициализации X, например, в [.filename]#~/.Xsession# или [.filename]#~/.xinitrc#.
 
 [[x-config-input-file]]
 ==== Использование файлов конфигурации X.org
@@ -817,7 +817,7 @@ EndSection
 	</match>
 ....
 
-(это создает псевдонимы для других распространенных названий моноширинных шрифтов как `"mono"`), а затем добавляем:
+(это создает псевдонимы для других распространённых названий моноширинных шрифтов как `"mono"`), а затем добавляем:
 
 [.programlisting]
 ....
