--- a/documentation/content/ru/books/handbook/zfs/_index.po
+++ b/documentation/content/ru/books/handbook/zfs/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookzfs_index/ru/>\n"
@@ -79,12 +79,12 @@ msgid ""
 "attempt to automatically correct errors when ditto-, mirror-, or parity-"
 "blocks are available."
 msgstr ""
-"Целостность данных: Все данные включают crossref:zfs[zfs-term-checksum,"
-"контрольную сумму]. ZFS вычисляет контрольные суммы и записывает их вместе с "
-"данными. При последующем чтении этих данных ZFS пересчитывает контрольные "
-"суммы. Если контрольные суммы не совпадают, что означает обнаружение одной "
-"или нескольких ошибок данных, ZFS попытается автоматически исправить ошибки, "
-"если доступны двойные-, зеркальные- или блоки четности."
+"Целостность данных: Все данные включают crossref:zfs[zfs-term-"
+"checksum,контрольную сумму]. ZFS вычисляет контрольные суммы и записывает их "
+"вместе с данными. При последующем чтении этих данных ZFS пересчитывает "
+"контрольные суммы. Если контрольные суммы не совпадают, что означает "
+"обнаружение одной или нескольких ошибок данных, ZFS попытается автоматически "
+"исправить ошибки, если доступны двойные-, зеркальные- или блоки чётности."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/zfs/_index.adoc:60
@@ -736,7 +736,7 @@ msgid ""
 "created file systems to the nightly man:periodic[8] runs by adding this line "
 "to [.filename]#/etc/periodic.conf#:"
 msgstr ""
-"Настройка RAID-Z завершена. Для добавления ежедневных отчетов о состоянии "
+"Настройка RAID-Z завершена. Для добавления ежедневных отчётов о состоянии "
 "созданных файловых систем в ночные запуски man:periodic[8] добавьте "
 "следующую строку в [.filename]#/etc/periodic.conf#:"
 
@@ -4464,7 +4464,7 @@ msgstr ""
 "при выполнении стандартной команды `ls -a`. Несмотря на то, что каталог не "
 "виден, доступ к нему осуществляется как к обычному каталогу. Свойство "
 "`snapdir` определяет, будут ли эти скрытые каталоги отображаться в списке "
-"содержимого директории. Установка свойства в значение `visible` позволяет им "
+"содержимого каталога. Установка свойства в значение `visible` позволяет им "
 "появляться в выводе команды `ls` и других команд, работающих с содержимым "
 "каталогов."
 
@@ -4745,8 +4745,8 @@ msgid ""
 "dataset name (or to an entirely different name)."
 msgstr ""
 "После внесения изменений, таких как копирование [.filename]#loader.conf# в "
-"продвинутую клон-копию, например, старая директория в этом случае становится "
-"устаревшей. Вместо неё продвинутая клон-копия может её заменить. Для этого "
+"продвинутую клон-копию, например, старый каталог в этом случае становится "
+"устаревшим. Вместо него продвинутая клон-копия может его заменить. Для этого "
 "сначала выполните `zfs destroy` для старого набора данных, а затем `zfs "
 "rename` для клона, указав имя старого набора данных (или совершенно другое "
 "имя)."
@@ -6763,38 +6763,90 @@ msgid ""
 "* [[zfs-term-vdev-cache]] _Cache_ - Adding a cache vdev to a pool will add the\n"
 "  storage of the cache to the crossref:zfs[zfs-term-l2arc,L2ARC]. Mirroring cache devices is impossible. Since a cache device stores only new copies of existing data, there is no risk of data loss."
 msgstr ""
-"Пул состоит из одного или нескольких vdev, которые, в свою очередь, представляют собой отдельный диск или группу дисков, преобразованных в RAID. При использовании множества vdev ZFS распределяет данные между ними для повышения производительности и максимизации доступного пространства. Все vdev должны быть размером не менее 128 МБ.\n"
+"Пул состоит из одного или нескольких vdev, которые, в свою очередь, "
+"представляют собой отдельный диск или группу дисков, преобразованных в RAID. "
+"При использовании множества vdev ZFS распределяет данные между ними для "
+"повышения производительности и максимизации доступного пространства. Все "
+"vdev должны быть размером не менее 128 МБ.\n"
 "\n"
-"* [[zfs-term-vdev-disk]] _Диск_ — Самый базовый тип vdev — это стандартное блочное устройство. Это может быть целый диск (например, [.filename]#/dev/ada0# или [.filename]#/dev/da0#) или раздел ([.filename]#/dev/ada0p3#). В FreeBSD нет потери производительности при использовании раздела вместо целого диска. Это отличается от рекомендаций документации Solaris.\n"
+"* [[zfs-term-vdev-disk]] _Диск_ — Самый базовый тип vdev — это стандартное "
+"блочное устройство. Это может быть целый диск (например, [.filename]#/dev/"
+"ada0# или [.filename]#/dev/da0#) или раздел ([.filename]#/dev/ada0p3#). В "
+"FreeBSD нет потери производительности при использовании раздела вместо "
+"целого диска. Это отличается от рекомендаций документации Solaris.\n"
 "+\n"
 "[CAUTION]\n"
 "====\n"
-"Настоятельно не рекомендуется использовать целый диск в составе загружаемого пула, так как это может сделать пул незагружаемым.\n"
-"Аналогично, не следует использовать целый диск в составе зеркала (mirror) или RAID-Z vdev.\n"
-"Надежное определение размера неразмеченного диска во время загрузки невозможно, и нет места для размещения загрузочного кода.\n"
+"Настоятельно не рекомендуется использовать целый диск в составе загружаемого "
+"пула, так как это может сделать пул незагружаемым.\n"
+"Аналогично, не следует использовать целый диск в составе зеркала (mirror) "
+"или RAID-Z vdev.\n"
+"Надежное определение размера неразмеченного диска во время загрузки "
+"невозможно, и нет места для размещения загрузочного кода.\n"
 "====\n"
 "\n"
-"* [[zfs-term-vdev-file]] _Файл_ — Обычные файлы могут составлять пулы ZFS, что полезно для тестирования и экспериментов. Используйте полный путь к файлу в качестве пути к устройству в команде `zpool create`.\n"
-"* [[zfs-term-vdev-mirror]] _Зеркало (Mirror)_ - При создании зеркала укажите ключевое слово `mirror`, за которым следует список устройств-участников зеркала. Зеркало состоит из двух или более устройств, и все данные записываются на все устройства-участники. Зеркальный vdev будет хранить столько данных, сколько может поместиться на его самом маленьком устройстве. Зеркальный vdev может пережить отказ всех устройств, кроме одного, без потери данных.\n"
+"* [[zfs-term-vdev-file]] _Файл_ — Обычные файлы могут составлять пулы ZFS, "
+"что полезно для тестирования и экспериментов. Используйте полный путь к "
+"файлу в качестве пути к устройству в команде `zpool create`.\n"
+"* [[zfs-term-vdev-mirror]] _Зеркало (Mirror)_ - При создании зеркала укажите "
+"ключевое слово `mirror`, за которым следует список устройств-участников "
+"зеркала. Зеркало состоит из двух или более устройств, и все данные "
+"записываются на все устройства-участники. Зеркальный vdev будет хранить "
+"столько данных, сколько может поместиться на его самом маленьком устройстве. "
+"Зеркальный vdev может пережить отказ всех устройств, кроме одного, без "
+"потери данных.\n"
 "+\n"
 "[NOTE]\n"
 "====\n"
-"Чтобы в любой момент обновить обычный vdev с одним диском до зеркального vdev, используйте команду `zpool\n"
+"Чтобы в любой момент обновить обычный vdev с одним диском до зеркального "
+"vdev, используйте команду `zpool\n"
 "crossref:zfs[zfs-zpool-attach,attach]`.\n"
 "====\n"
 "\n"
-"* [[zfs-term-vdev-raidz]] _RAID-Z_ - ZFS использует RAID-Z — вариацию стандартного RAID-5, которая обеспечивает лучшее распределение четности и устраняет проблему \"записи дырки RAID-5\", когда данные и информация о четности становятся несогласованными после неожиданного перезапуска. ZFS поддерживает три уровня RAID-Z, которые обеспечивают разную степень избыточности в обмен на уменьшение доступного пространства. ZFS использует RAID-Z1, RAID-Z2 и RAID-Z3 в зависимости от количества устройств четности в массиве и количества дисков, которые могут отказать до того, как пул перестанет работать.\n"
+"* [[zfs-term-vdev-raidz]] _RAID-Z_ - ZFS использует RAID-Z — вариацию "
+"стандартного RAID-5, которая обеспечивает лучшее распределение чётности и "
+"устраняет проблему \"записи дырки RAID-5\", когда данные и информация о "
+"чётности становятся несогласованными после неожиданного перезапуска. ZFS "
+"поддерживает три уровня RAID-Z, которые обеспечивают разную степень "
+"избыточности в обмен на уменьшение доступного пространства. ZFS использует "
+"RAID-Z1, RAID-Z2 и RAID-Z3 в зависимости от количества устройств чётности в "
+"массиве и количества дисков, которые могут отказать до того, как пул "
+"перестанет работать.\n"
 "+\n"
-"В конфигурации RAID-Z1 с четырьмя дисками по 1 ТБ доступное пространство составляет 3 ТБ, и пул сможет продолжать работу в деградированном режиме при отказе одного диска. Если другой диск выйдет из строя до замены и восстановления отказавшего диска, это приведет к потере всех данных пула.\n"
+"В конфигурации RAID-Z1 с четырьмя дисками по 1 ТБ доступное пространство "
+"составляет 3 ТБ, и пул сможет продолжать работу в деградированном режиме при "
+"отказе одного диска. Если другой диск выйдет из строя до замены и "
+"восстановления отказавшего диска, это приведет к потере всех данных пула.\n"
 "+\n"
-"В конфигурации RAID-Z3 с восемью дисками по 1 ТБ том предоставит 5 ТБ доступного пространства и сможет работать при отказе трех дисков. Sun(TM) рекомендует использовать не более девяти дисков в одном vdev. Если конфигурация состоит из большего количества дисков, рекомендуется разделить их на отдельные vdev и распределить данные пула между ними.\n"
+"В конфигурации RAID-Z3 с восемью дисками по 1 ТБ том предоставит 5 ТБ "
+"доступного пространства и сможет работать при отказе трех дисков. Sun(TM) "
+"рекомендует использовать не более девяти дисков в одном vdev. Если "
+"конфигурация состоит из большего количества дисков, рекомендуется разделить "
+"их на отдельные vdev и распределить данные пула между ними.\n"
 "+\n"
-"Конфигурация из двух RAID-Z2 vdev, каждый из которых состоит из 8 дисков, создаст аналог массива RAID-60. Емкость RAID-Z группы примерно равна размеру самого маленького диска, умноженному на количество дисков без четности. Четыре диска по 1 ТБ в RAID-Z1 дают эффективный размер около 3 ТБ, а массив из восьми дисков по 1 ТБ в RAID-Z3 обеспечит 5 ТБ доступного пространства.\n"
-"* [[zfs-term-vdev-spare]] _Резервный (Spare)_ - ZFS имеет специальный псевдо-vdev для отслеживания доступных горячих резервов. Обратите внимание, что установленные горячие резервы не развертываются автоматически; их необходимо вручную настроить для замены отказавшего устройства с помощью команды `zfs replace`.\n"
-"* [[zfs-term-vdev-log]] _Журнал (Log)_ - Устройства журнала ZFS, также известные как журнал намерений ZFS (Intent Log)\n"
-"  (crossref:zfs[zfs-term-zil,ZIL]), перемещают журнал намерений с обычных устройств пула на выделенное устройство, обычно SSD. Наличие выделенного устройства журнала улучшает производительность приложений с большим объемом синхронных записей, таких как базы данных. Возможно зеркалирование устройств журнала, но RAID-Z не поддерживается. При записи на несколько устройств журнала нагрузка будут балансироваться между ними.\n"
-"* [[zfs-term-vdev-cache]] _Кэш (Cache)_ - Добавление кэширующих vdev к пулу увеличит\n"
-"  хранилище кэша в crossref:zfs[zfs-term-l2arc,L2ARC]. Зеркалирование устройств кэша невозможно. Поскольку устройство кэша хранит только новые копии существующих данных, риск потери данных отсутствует."
+"Конфигурация из двух RAID-Z2 vdev, каждый из которых состоит из 8 дисков, "
+"создаст аналог массива RAID-60. Емкость RAID-Z группы примерно равна размеру "
+"самого маленького диска, умноженному на количество дисков без чётности. "
+"Четыре диска по 1 ТБ в RAID-Z1 дают эффективный размер около 3 ТБ, а массив "
+"из восьми дисков по 1 ТБ в RAID-Z3 обеспечит 5 ТБ доступного пространства.\n"
+"* [[zfs-term-vdev-spare]] _Резервный (Spare)_ - ZFS имеет специальный псевдо-"
+"vdev для отслеживания доступных горячих резервов. Обратите внимание, что "
+"установленные горячие резервы не развертываются автоматически; их необходимо "
+"вручную настроить для замены отказавшего устройства с помощью команды `zfs "
+"replace`.\n"
+"* [[zfs-term-vdev-log]] _Журнал (Log)_ - Устройства журнала ZFS, также "
+"известные как журнал намерений ZFS (Intent Log)\n"
+"  (crossref:zfs[zfs-term-zil,ZIL]), перемещают журнал намерений с обычных "
+"устройств пула на выделенное устройство, обычно SSD. Наличие выделенного "
+"устройства журнала улучшает производительность приложений с большим объемом "
+"синхронных записей, таких как базы данных. Возможно зеркалирование устройств "
+"журнала, но RAID-Z не поддерживается. При записи на несколько устройств "
+"журнала нагрузка будут балансироваться между ними.\n"
+"* [[zfs-term-vdev-cache]] _Кэш (Cache)_ - Добавление кэширующих vdev к пулу "
+"увеличит\n"
+"  хранилище кэша в crossref:zfs[zfs-term-l2arc,L2ARC]. Зеркалирование "
+"устройств кэша невозможно. Поскольку устройство кэша хранит только новые "
+"копии существующих данных, риск потери данных отсутствует."
 
 #. type: Table
 #: documentation/content/en/books/handbook/zfs/_index.adoc:2833
@@ -7312,7 +7364,12 @@ msgstr "[[zfs-term-resilver]]Ресильверинг"
 #: documentation/content/en/books/handbook/zfs/_index.adoc:3012
 #, no-wrap
 msgid "When replacing a failed disk, ZFS must fill the new disk with the lost data. _Resilvering_ is the process of using the parity information distributed across the remaining drives to calculate and write the missing data to the new drive."
-msgstr "При замене вышедшего из строя диска ZFS необходимо заполнить новый диск утерянными данными. _Ресильверинг_ (resilvering — серебрение, восстановление зеркала) — это процесс использования информации о четности, распределенной по оставшимся дискам, для вычисления и записи отсутствующих данных на новый диск."
+msgstr ""
+"При замене вышедшего из строя диска ZFS необходимо заполнить новый диск "
+"утерянными данными. _Ресильверинг_ (resilvering — серебрение, восстановление "
+"зеркала) — это процесс использования информации о чётности, распределенной "
+"по оставшимся дискам, для вычисления и записи отсутствующих данных на новый "
+"диск."
 
 #. type: Table
 #: documentation/content/en/books/handbook/zfs/_index.adoc:3013
