--- a/documentation/content/ru/books/handbook/boot/_index.po
+++ b/documentation/content/ru/books/handbook/boot/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookboot_index/ru/>\n"
@@ -22,11 +22,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/boot/_index.adoc:1
 #, no-wrap
 msgid "An introduction to the FreeBSD Booting Process, demonstrates how to customize the FreeBSD boot process, including everything that happens until the FreeBSD kernel has started, probed for devices, and started init"
-msgstr ""
-"В этой главе описывается процесс загрузки FreeBSD и способы его настройки. "
-"Рассматриваются все этапы — от начальной загрузки до момента, когда ядро "
-"FreeBSD завершает инициализацию, определяет оборудование и запускает процесс "
-"init"
+msgstr "В этой главе описывается процесс загрузки FreeBSD и способы его настройки. Рассматриваются все этапы — от начальной загрузки до момента, когда ядро FreeBSD завершает инициализацию, определяет оборудование и запускает процесс init"
 
 #. type: YAML Front Matter: part
 #: documentation/content/en/books/handbook/boot/_index.adoc:1
@@ -80,14 +76,14 @@ msgid ""
 msgstr ""
 "Эта глава подробно описывает доступные параметры конфигурации. В ней "
 "показано, как настроить процесс загрузки FreeBSD, включая все этапы до "
-"момента, когда ядро FreeBSD запустится, определит устройства и запустит "
-"man:init[8]. Это происходит, когда цвет текста загрузочных сообщений "
-"меняется с ярко-белого на серый."
+"момента, когда ядро FreeBSD запустится, определит устройства и запустит man:"
+"init[8]. Это происходит, когда цвет текста загрузочных сообщений меняется с "
+"ярко-белого на серый."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/boot/_index.adoc:63
-msgid "After reading this chapter, you will recognize:"
-msgstr "Прочитав эту главу, вы узнаете:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/boot/_index.adoc:65
@@ -187,8 +183,8 @@ msgid ""
 "FreeBSD provides for booting from both the older MBR standard, and the newer "
 "GUID Partition Table (GPT).  GPT partitioning is often found on computers "
 "with the Unified Extensible Firmware Interface (UEFI).  However, FreeBSD can "
-"boot from GPT partitions even on machines with only a legacy BIOS with "
-"man:gptboot[8].  Work is under way to provide direct UEFI booting."
+"boot from GPT partitions even on machines with only a legacy BIOS with man:"
+"gptboot[8].  Work is under way to provide direct UEFI booting."
 msgstr ""
 "FreeBSD поддерживает загрузку как по старому стандарту MBR, так и по новому "
 "стандарту GUID Partition Table (GPT). Разметка GPT часто встречается на "
@@ -451,13 +447,13 @@ msgstr ""
 #: documentation/content/en/books/handbook/boot/_index.adoc:193
 msgid ""
 "To replace the installed [.filename]#boot1# and [.filename]#boot2#, use "
-"`bsdlabel`, where _diskslice_ is the disk and slice to boot from, such as "
-"[.filename]#ad0s1# for the first slice on the first IDE disk:"
+"`bsdlabel`, where _diskslice_ is the disk and slice to boot from, such as [."
+"filename]#ad0s1# for the first slice on the first IDE disk:"
 msgstr ""
 "Для замены установленных [.filename]#boot1# и [.filename]#boot2# используйте "
 "`bsdlabel`, где _diskslice_ — это диск и раздел, с которого производится "
-"загрузка, например [.filename]#ad0s1# для первого раздела на первом "
-"IDE-диске:"
+"загрузка, например [.filename]#ad0s1# для первого раздела на первом IDE-"
+"диске:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/boot/_index.adoc:197
@@ -529,8 +525,8 @@ msgid ""
 msgstr ""
 "Затем загрузчик прочитает [.filename]#/boot/loader.rc#, который по умолчанию "
 "загружает [.filename]#/boot/defaults/loader.conf#, где задаются разумные "
-"значения по умолчанию для переменных, а также читает [.filename]#/boot/loader"
-".conf# для локальных изменений этих переменных. После этого [."
+"значения по умолчанию для переменных, а также читает [.filename]#/boot/"
+"loader.conf# для локальных изменений этих переменных. После этого [."
 "filename]#loader.rc# действует в соответствии с этими переменными, загружая "
 "выбранные модули и ядро."
 
@@ -583,10 +579,7 @@ msgstr "autoboot _секунды_"
 #: documentation/content/en/books/handbook/boot/_index.adoc:234
 #, no-wrap
 msgid "Proceeds to boot the kernel if not interrupted within the time span given, in seconds. It displays a countdown, and the default time span is 10 seconds."
-msgstr ""
-"Продолжает загрузку ядра, если не прервано в течение указанного времени в "
-"секундах. Отображает обратный отсчет, а время по умолчанию составляет 10 "
-"секунд."
+msgstr "Продолжает загрузку ядра, если не прервано в течение указанного времени в секундах. Отображает обратный отсчет, а время по умолчанию составляет 10 секунд."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:235
@@ -598,12 +591,7 @@ msgstr "boot [`-options`] [`kernelname`]"
 #: documentation/content/en/books/handbook/boot/_index.adoc:237
 #, no-wrap
 msgid "Immediately proceeds to boot the kernel, with any specified options or kernel name. Providing a kernel name on the command-line is only applicable after an `unload` has been issued. Otherwise, the previously-loaded kernel will be used. If _kernelname_ is not qualified, it will be searched under _/boot/kernel_ and _/boot/modules_."
-msgstr ""
-"Немедленно переходит к загрузке ядра с любыми указанными параметрами или "
-"именем ядра. Указание имени ядра в командной строке применимо только после "
-"выполнения команды `unload`. В противном случае будет использовано ранее "
-"загруженное ядро. Если _kernelname_ не указан полностью, поиск будет "
-"выполнен в _/boot/kernel_ и _/boot/modules_."
+msgstr "Немедленно переходит к загрузке ядра с любыми указанными параметрами или именем ядра. Указание имени ядра в командной строке применимо только после выполнения команды `unload`. В противном случае будет использовано ранее загруженное ядро. Если _kernelname_ не указан полностью, поиск будет выполнен в _/boot/kernel_ и _/boot/modules_."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:238
@@ -615,10 +603,7 @@ msgstr "boot-conf"
 #: documentation/content/en/books/handbook/boot/_index.adoc:240
 #, no-wrap
 msgid "Goes through the same automatic configuration of modules based on specified variables, most commonly `kernel`. This only makes sense if `unload` is used first, before changing some variables."
-msgstr ""
-"Проходит ту же автоматическую настройку модулей на основе указанных "
-"переменных, чаще всего `kernel`. Имеет смысл только при использовании "
-"`unload` перед изменением некоторых переменных."
+msgstr "Проходит ту же автоматическую настройку модулей на основе указанных переменных, чаще всего `kernel`. Имеет смысл только при использовании `unload` перед изменением некоторых переменных."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:241
@@ -630,9 +615,7 @@ msgstr "help [`_тема_`]"
 #: documentation/content/en/books/handbook/boot/_index.adoc:243
 #, no-wrap
 msgid "Shows help messages read from [.filename]#/boot/loader.help#. If the topic given is `index`, the list of available topics is displayed."
-msgstr ""
-"Показывает справочные сообщения, прочитанные из файла [.filename]#/boot/"
-"loader.help#. Если указана тема `index`, отображается список доступных тем."
+msgstr "Показывает справочные сообщения, прочитанные из файла [.filename]#/boot/loader.help#. Если указана тема `index`, отображается список доступных тем."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:244
@@ -644,9 +627,7 @@ msgstr "include `_имяфайла_` ..."
 #: documentation/content/en/books/handbook/boot/_index.adoc:246
 #, no-wrap
 msgid "Reads the specified file and interprets it line by line. An error immediately stops the `include`."
-msgstr ""
-"Читает указанный файл и обрабатывает его построчно. Ошибка немедленно "
-"останавливает `include`."
+msgstr "Читает указанный файл и обрабатывает его построчно. Ошибка немедленно останавливает `include`."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:247
@@ -658,10 +639,7 @@ msgstr "load [-t ``_тип_``] `_имяфайла_`"
 #: documentation/content/en/books/handbook/boot/_index.adoc:249
 #, no-wrap
 msgid "Loads the kernel, kernel module, or file of the type given, with the specified filename. Any arguments after _filename_ are passed to the file. If _filename_ is not qualified, it will be searched under _/boot/kernel_ and _/boot/modules_."
-msgstr ""
-"Загружает ядро, модуль ядра или файл указанного типа с заданным именем. Все "
-"аргументы после _имяфайла_ передаются файлу. Если _имяфайла_ не указано "
-"полностью, файл будет искаться в _/boot/kernel_ и _/boot/modules_."
+msgstr "Загружает ядро, модуль ядра или файл указанного типа с заданным именем. Все аргументы после _имяфайла_ передаются файлу. Если _имяфайла_ не указано полностью, файл будет искаться в _/boot/kernel_ и _/boot/modules_."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:250
@@ -673,9 +651,7 @@ msgstr "ls [-l] [``_путь_``]"
 #: documentation/content/en/books/handbook/boot/_index.adoc:252
 #, no-wrap
 msgid "Displays a listing of files in the given path, or the root directory, if the path is not specified. If `-l` is specified, file sizes will also be shown."
-msgstr ""
-"Отображает список файлов в указанном пути или в корневом каталоге, если путь "
-"не указан. Если указан параметр `-l`, также будут показаны размеры файлов."
+msgstr "Отображает список файлов в указанном пути или в корневом каталоге, если путь не указан. Если указан параметр `-l`, также будут показаны размеры файлов."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:253
@@ -687,9 +663,7 @@ msgstr "lsdev [`-v`]"
 #: documentation/content/en/books/handbook/boot/_index.adoc:255
 #, no-wrap
 msgid "Lists all of the devices from which it may be possible to load modules. If `-v` is specified, more details are printed."
-msgstr ""
-"Перечисляет все устройства, с которых возможно загрузить модули. Если указан "
-"параметр `-v`, выводится более подробная информация."
+msgstr "Перечисляет все устройства, с которых возможно загрузить модули. Если указан параметр `-v`, выводится более подробная информация."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:256
@@ -701,9 +675,7 @@ msgstr "lsmod [`-v`]"
 #: documentation/content/en/books/handbook/boot/_index.adoc:258
 #, no-wrap
 msgid "Displays loaded modules. If `-v` is specified, more details are shown."
-msgstr ""
-"Отображает загруженные модули. Если указан параметр `-v`, выводится более "
-"подробная информация."
+msgstr "Отображает загруженные модули. Если указан параметр `-v`, выводится более подробная информация."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:259
@@ -715,8 +687,7 @@ msgstr "more `_имяфайла_`"
 #: documentation/content/en/books/handbook/boot/_index.adoc:261
 #, no-wrap
 msgid "Displays the files specified, with a pause at each `LINES` displayed."
-msgstr ""
-"Отображает указанные файлы с паузой после каждых `LINES` выведенных строк."
+msgstr "Отображает указанные файлы с паузой после каждых `LINES` выведенных строк."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:262
@@ -848,11 +819,11 @@ msgid ""
 "used boot flags.  Refer to man:boot[8] for more information on the other "
 "boot flags."
 msgstr ""
-"После загрузки ядра с помощью `loader` или `boot2`, который обходит `loader`"
-", оно проверяет флаги загрузки и при необходимости корректирует свое "
-"поведение. В crossref:boot[boot-kernel,Взаимодействие ядра во время загрузки]"
-" приведены часто используемые флаги загрузки. Дополнительную информацию о "
-"других флагах загрузки можно найти в man:boot[8]."
+"После загрузки ядра с помощью `loader` или `boot2`, который обходит "
+"`loader`, оно проверяет флаги загрузки и при необходимости корректирует свое "
+"поведение. В crossref:boot[boot-kernel,Взаимодействие ядра во время "
+"загрузки] приведены часто используемые флаги загрузки. Дополнительную "
+"информацию о других флагах загрузки можно найти в man:boot[8]."
 
 #. type: Block title
 #: documentation/content/en/books/handbook/boot/_index.adoc:314
@@ -876,9 +847,7 @@ msgstr "`-a`"
 #: documentation/content/en/books/handbook/boot/_index.adoc:323
 #, no-wrap
 msgid "During kernel initialization, ask for the device to mount as the root file system."
-msgstr ""
-"Во время инициализации ядра запросить устройство для монтирования в качестве "
-"корневой файловой системы."
+msgstr "Во время инициализации ядра запросить устройство для монтирования в качестве корневой файловой системы."
 
 #. type: Table
 #: documentation/content/en/books/handbook/boot/_index.adoc:324
@@ -924,7 +893,7 @@ msgid ""
 "path specified in the `init_path` variable in `loader`.  This is the last "
 "stage of the boot process."
 msgstr ""
-"После завершения загрузки ядро передает управление пользовательскому "
+"После завершения загрузки ядро передаёт управление пользовательскому "
 "процессу man:init[8], который находится в [.filename]#/sbin/init#, или "
 "программе, указанной в переменной `init_path` в `loader`. Это последний этап "
 "процесса загрузки."
@@ -1042,8 +1011,7 @@ msgid ""
 msgstr ""
 "# name  getty                           type    status          comments\n"
 "#\n"
-"# If console is marked \"insecure\", then init will ask for the root "
-"password\n"
+"# If console is marked \"insecure\", then init will ask for the root password\n"
 "# when going to single-user mode.\n"
 "console none                            unknown off insecure\n"
 
@@ -1055,7 +1023,7 @@ msgid ""
 "use single-user mode."
 msgstr ""
 "`insecure` консоль означает, что физическая безопасность консоли считается "
-"ненадежной, поэтому только тот, кто знает пароль `root`, может использовать "
+"ненадёжной, поэтому только тот, кто знает пароль `root`, может использовать "
 "однопользовательский режим."
 
 #. type: Title ====
@@ -1080,12 +1048,12 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/boot/_index.adoc:391
 msgid ""
-"The resource configuration system reads in configuration defaults from "
-"[.filename]#/etc/defaults/rc.conf# and system-specific details from "
-"[.filename]#/etc/rc.conf#.  It then proceeds to mount the system file "
-"systems listed in [.filename]#/etc/fstab#.  It starts up networking "
-"services, miscellaneous system daemons, then the startup scripts of locally "
-"installed packages."
+"The resource configuration system reads in configuration defaults from [."
+"filename]#/etc/defaults/rc.conf# and system-specific details from [."
+"filename]#/etc/rc.conf#.  It then proceeds to mount the system file systems "
+"listed in [.filename]#/etc/fstab#.  It starts up networking services, "
+"miscellaneous system daemons, then the startup scripts of locally installed "
+"packages."
 msgstr ""
 "Система конфигурации ресурсов загружает настройки по умолчанию из [."
 "filename]#/etc/defaults/rc.conf# и специфичные для системы параметры из [."
@@ -1111,15 +1079,15 @@ msgstr "Подсказки устройств"
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/boot/_index.adoc:400
 msgid ""
-"During initial system startup, the boot man:loader[8] reads "
-"man:device.hints[5].  This file stores kernel boot information known as "
-"variables, sometimes referred to as \"device hints\".  These \"device "
-"hints\" are used by device drivers for device configuration."
+"During initial system startup, the boot man:loader[8] reads man:device."
+"hints[5].  This file stores kernel boot information known as variables, "
+"sometimes referred to as \"device hints\".  These \"device hints\" are used "
+"by device drivers for device configuration."
 msgstr ""
-"Во время начальной загрузки системы загрузчик man:loader[8] читает файл "
-"man:device.hints[5]. Этот файл хранит информацию о загрузке ядра, известную "
-"как переменные, иногда называемые \"подсказками устройств\" (\"device hints\""
-"). Эти \"подсказки устройств\" используются драйверами устройств для их "
+"Во время начальной загрузки системы загрузчик man:loader[8] читает файл man:"
+"device.hints[5]. Этот файл хранит информацию о загрузке ядра, известную как "
+"переменные, иногда называемые \"подсказками устройств\" (\"device hints\"). "
+"Эти \"подсказки устройств\" используются драйверами устройств для их "
 "конфигурации."
 
 #. type: delimited block = 4
@@ -1260,17 +1228,17 @@ msgid ""
 "To power down a FreeBSD machine on architectures and systems that support "
 "power management, use `shutdown -p now` to turn the power off immediately.  "
 "To reboot a FreeBSD system, use `shutdown -r now`.  One must be `root` or a "
-"member of `operator` in order to run man:shutdown[8].  One can also use "
-"man:halt[8] and man:reboot[8].  Refer to their manual pages and to "
-"man:shutdown[8] for more information."
+"member of `operator` in order to run man:shutdown[8].  One can also use man:"
+"halt[8] and man:reboot[8].  Refer to their manual pages and to man:"
+"shutdown[8] for more information."
 msgstr ""
 "Для выключения питания машины FreeBSD на архитектурах и системах, "
 "поддерживающих управление питанием, используйте `shutdown -p now`, чтобы "
-"немедленно отключить питание. Для перезагрузки системы FreeBSD используйте `"
-"shutdown -r now`. Для выполнения man:shutdown[8] необходимо быть `root` или "
-"членом группы `operator`. Также можно использовать man:halt[8] и "
-"man:reboot[8]. Дополнительную информацию см. на их справочных страницах и в "
-"man:shutdown[8]."
+"немедленно отключить питание. Для перезагрузки системы FreeBSD используйте "
+"`shutdown -r now`. Для выполнения man:shutdown[8] необходимо быть `root` или "
+"членом группы `operator`. Также можно использовать man:halt[8] и man:"
+"reboot[8]. Дополнительную информацию см. на их справочных страницах и в man:"
+"shutdown[8]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/boot/_index.adoc:450
