--- a/documentation/content/ru/books/handbook/introduction.po
+++ b/documentation/content/ru/books/handbook/introduction.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
-"PO-Revision-Date: 2025-07-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-09 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookintroduction/ru/>\n"
@@ -34,11 +34,11 @@ msgid ""
 "should send email to the {freebsd-doc}."
 msgstr ""
 "Добро пожаловать в FreeBSD! Данное руководство охватывает установку и "
-"повседневное использование FreeBSD {rel143-current}-RELEASE и "
-"{rel135-current}-RELEASE. Эта книга стала результатом постоянной работы "
-"многих участников. Некоторые разделы могут быть устаревшими. Все желающие "
-"помочь в обновлении и расширении данного документа могут написать на "
-"электронную почту {freebsd-doc}."
+"повседневное использование FreeBSD {rel143-current}-RELEASE и {rel135-"
+"current}-RELEASE. Эта книга стала результатом постоянной работы многих "
+"участников. Некоторые разделы могут быть устаревшими. Все желающие помочь в "
+"обновлении и расширении данного документа могут написать на электронную "
+"почту {freebsd-doc}."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/introduction.adoc:12
@@ -47,15 +47,14 @@ msgid ""
 "org/[FreeBSD web site].  Previous versions can be obtained from https://docs."
 "FreeBSD.org/doc/[https://docs.FreeBSD.org/doc/].  The book can be downloaded "
 "in a variety of formats and compression options from the https://download."
-"freebsd.org/doc/[FreeBSD download server] or one of the numerous link:./"
-"mirrors#mirrors[mirror sites].  Searches can be performed on the handbook "
-"and other documents on the link:https://www.FreeBSD.org/search/[search page]."
+"freebsd.org/doc/[FreeBSD download server] or one of the numerous link:"
+"#mirrors[mirror sites].  Searches can be performed on the handbook and other "
+"documents on the link:https://www.FreeBSD.org/search/[search page]."
 msgstr ""
-"Последняя версия данного руководства доступна на  https://www.FreeBSD.org/"
+"Последняя версия данного руководства доступна на https://www.FreeBSD.org/"
 "[веб-сайте FreeBSD]. Предыдущие версии можно получить по адресу https://docs."
 "FreeBSD.org/doc/[https://docs.FreeBSD.org/doc/]. Книгу можно загрузить в "
-"различных форматах и вариантах сжатия с https://download.freebsd.org/doc/"
-"[сервера загрузок FreeBSD] или одного из link:./"
-"mirrors#mirrors[многочисленных зеркал]. Поиск по данному руководству и "
-"другим документам доступен на https://www.FreeBSD.org/search/[странице "
-"поиска]."
+"различных форматах и вариантах сжатия с https://download.freebsd.org/doc/["
+"сервера загрузок FreeBSD] или одного из crossref:mirrors["
+"mirrors,многочисленных зеркал]. Поиск по данному руководству и другим "
+"документам доступен на https://www.FreeBSD.org/search/[странице поиска]."
