--- a/documentation/content/ru/books/handbook/linuxemu/_index.po
+++ b/documentation/content/ru/books/handbook/linuxemu/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-23 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbooklinuxemu_index/ru/>\n"
@@ -22,10 +22,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:1
 #, no-wrap
 msgid "FreeBSD provides binary compatibility with Linux, allowing users to install and run most Linux binaries on a FreeBSD system without having to first modify the binary"
-msgstr ""
-"FreeBSD обеспечивает двоичную совместимость с Linux, позволяя пользователям "
-"устанавливать и запускать большинство двоичных исполняемых файлов Linux в "
-"системе FreeBSD без необходимости предварительного изменения двоичного файла"
+msgstr "FreeBSD обеспечивает двоичную совместимость с Linux, позволяя пользователям устанавливать и запускать большинство двоичных исполняемых файлов Linux в системе FreeBSD без необходимости предварительного изменения двоичного файла"
 
 #. type: YAML Front Matter: part
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:1
@@ -71,8 +68,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:60
-msgid "Before reading this chapter, you should:"
-msgstr "Прежде чем читать эту главу, вы должны:"
+msgid "Before reading this chapter:"
+msgstr "Прежде чем читать эту главу, необходимо:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:62
@@ -84,8 +81,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:64
-msgid "After reading this chapter, you will know:"
-msgstr "Прочитав эту главу, вы будете знать:"
+msgid "Read this chapter to learn:"
+msgstr "Прочитайте эту главу, чтобы узнать:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:66
@@ -333,9 +330,9 @@ msgstr "Базовая система CentOS из пакетов FreeBSD"
 msgid ""
 "package:emulators/linux_base-c7[] has been deprecated following the "
 "deprecation of the upstream project.  This means package:emulators/"
-"linux_base-c7[] will not receive security updates.  The use of "
-"crossref:linuxemu[linuxemu-rockylinux, the Rocky Linux Base System] is "
-"recommended unless 32-bit compatibility is needed."
+"linux_base-c7[] will not receive security updates.  The use of crossref:"
+"linuxemu[linuxemu-rockylinux, the Rocky Linux Base System] is recommended "
+"unless 32-bit compatibility is needed."
 msgstr ""
 "Пакет package:emulators/linux_base-c7[] устарел после прекращения поддержки "
 "вышестоящего проекта. Это означает, что package:emulators/linux_base-c7[] "
@@ -418,9 +415,9 @@ msgstr "Debian / Ubuntu Базовая система с debootstrap"
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:221
 msgid ""
-"An alternative way of providing Linux shared libraries is by using "
-"package:sysutils/debootstrap[].  This has the advantage of providing a full "
-"Debian or Ubuntu distribution."
+"An alternative way of providing Linux shared libraries is by using package:"
+"sysutils/debootstrap[].  This has the advantage of providing a full Debian "
+"or Ubuntu distribution."
 msgstr ""
 "Альтернативный способ предоставления общих библиотек Linux — использование "
 "package:sysutils/debootstrap[]. Это имеет преимущество в виде предоставления "
@@ -445,13 +442,13 @@ msgid ""
 "ubuntu#:"
 msgstr ""
 "Для работы man:debootstrap[8] требуется включённый man:linux[4] ABI. После "
-"его активации выполните следующую команду для установки Ubuntu или Debian в ["
-".filename]#/compat/ubuntu#:"
+"его активации выполните следующую команду для установки Ubuntu или Debian в "
+"[.filename]#/compat/ubuntu#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:235
 #, no-wrap
-msgid "# debootstrap focal /compat/ubuntu\n"
+msgid "# debootstrap jammy /compat/ubuntu\n"
 msgstr "# debootstrap focal /compat/ubuntu\n"
 
 #. type: delimited block = 4
@@ -471,11 +468,11 @@ msgstr ""
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:262
 #, no-wrap
 msgid ""
-"I: Retrieving InRelease \n"
+"I: Retrieving InRelease\n"
 "I: Checking Release signature\n"
 "I: Valid Release signature (key id F6ECB3762474EDA9D21B7022871920D1991BC93C)\n"
-"I: Retrieving Packages \n"
-"I: Validating Packages \n"
+"I: Retrieving Packages\n"
+"I: Validating Packages\n"
 "I: Resolving dependencies of required packages...\n"
 "I: Resolving dependencies of base packages...\n"
 "I: Checking component main on http://archive.ubuntu.com/ubuntu...\n"
@@ -487,12 +484,12 @@ msgid ""
 "I: Configuring ca-certificates...\n"
 "I: Base system installed successfully.\n"
 msgstr ""
-"I: Retrieving InRelease \n"
+"I: Retrieving InRelease\n"
 "I: Checking Release signature\n"
 "I: Valid Release signature (key id F6ECB3762474EDA9D21B7022871920D1991BC93C)"
 "\n"
-"I: Retrieving Packages \n"
-"I: Validating Packages \n"
+"I: Retrieving Packages\n"
+"I: Validating Packages\n"
 "I: Resolving dependencies of required packages...\n"
 "I: Resolving dependencies of base packages...\n"
 "I: Checking component main on http://archive.ubuntu.com/ubuntu...\n"
@@ -518,8 +515,8 @@ msgid ""
 msgstr ""
 "Если содержимое домашнего каталога должно быть общим и необходимо иметь "
 "возможность запускать приложения X11, [.filename]#/home# и [.filename]#/tmp# "
-"следует подключить в области совместимости linux с использованием "
-"man:nullfs[5] для loopback (обратной петли)."
+"следует подключить в области совместимости linux с использованием man:"
+"nullfs[5] для loopback (обратной петли)."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:271
@@ -539,22 +536,14 @@ msgid ""
 "/tmp            /compat/ubuntu/tmp      nullfs          rw,late                      0       0\n"
 "/home           /compat/ubuntu/home     nullfs          rw,late                      0       0\n"
 msgstr ""
-"# Device        Mountpoint              FStype          "
-"Options                      Dump    Pass#\n"
-"devfs           /compat/ubuntu/dev      devfs           "
-"rw,late                      0       0\n"
-"tmpfs           /compat/ubuntu/dev/shm  tmpfs           "
-"rw,late,size=1g,mode=1777    0       0\n"
-"fdescfs         /compat/ubuntu/dev/fd   fdescfs         "
-"rw,late,linrdlnk             0       0\n"
-"linprocfs       /compat/ubuntu/proc     linprocfs       "
-"rw,late                      0       0\n"
-"linsysfs        /compat/ubuntu/sys      linsysfs        "
-"rw,late                      0       0\n"
-"/tmp            /compat/ubuntu/tmp      nullfs          "
-"rw,late                      0       0\n"
-"/home           /compat/ubuntu/home     nullfs          "
-"rw,late                      0       0\n"
+"# Device        Mountpoint              FStype          Options                      Dump    Pass#\n"
+"devfs           /compat/ubuntu/dev      devfs           rw,late                      0       0\n"
+"tmpfs           /compat/ubuntu/dev/shm  tmpfs           rw,late,size=1g,mode=1777    0       0\n"
+"fdescfs         /compat/ubuntu/dev/fd   fdescfs         rw,late,linrdlnk             0       0\n"
+"linprocfs       /compat/ubuntu/proc     linprocfs       rw,late                      0       0\n"
+"linsysfs        /compat/ubuntu/sys      linsysfs        rw,late                      0       0\n"
+"/tmp            /compat/ubuntu/tmp      nullfs          rw,late                      0       0\n"
+"/home           /compat/ubuntu/home     nullfs          rw,late                      0       0\n"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:285
@@ -594,8 +583,8 @@ msgstr "# uname -s -r -m\n"
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:311
 #, no-wrap
-msgid "Linux 3.17.0 x86_64\n"
-msgstr "Linux 3.17.0 x86_64\n"
+msgid "Linux 5.15.0 x86_64\n"
+msgstr "Linux 5.15.0 x86_64\n"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:315
@@ -611,8 +600,8 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:319
 msgid ""
-"To add the package repositories missing from defaults edit the file "
-"[.filename]#/compat/ubuntu/etc/apt/sources.list#."
+"To add the package repositories missing from defaults edit the file [."
+"filename]#/compat/ubuntu/etc/apt/sources.list#."
 msgstr ""
 "Чтобы добавить отсутствующие репозитории пакетов по умолчанию, "
 "отредактируйте файл [.filename]#/compat/ubuntu/etc/apt/sources.list#."
@@ -626,18 +615,18 @@ msgstr "Для amd64 можно использовать следующий пр
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:328
 #, no-wrap
 msgid ""
-"deb http://archive.ubuntu.com/ubuntu focal main universe restricted multiverse\n"
-"deb http://security.ubuntu.com/ubuntu/ focal-security universe multiverse restricted main\n"
-"deb http://archive.ubuntu.com/ubuntu focal-backports universe multiverse restricted main\n"
-"deb http://archive.ubuntu.com/ubuntu focal-updates universe multiverse restricted main\n"
+"deb http://archive.ubuntu.com/ubuntu jammy main universe restricted multiverse\n"
+"deb http://security.ubuntu.com/ubuntu/ jammy-security universe multiverse restricted main\n"
+"deb http://archive.ubuntu.com/ubuntu jammy-backports universe multiverse restricted main\n"
+"deb http://archive.ubuntu.com/ubuntu jammy-updates universe multiverse restricted main\n"
 msgstr ""
-"deb http://archive.ubuntu.com/ubuntu focal main universe restricted "
+"deb http://archive.ubuntu.com/ubuntu jammy main universe restricted "
 "multiverse\n"
-"deb http://security.ubuntu.com/ubuntu/ focal-security universe multiverse "
+"deb http://security.ubuntu.com/ubuntu/ jammy-security universe multiverse "
 "restricted main\n"
-"deb http://archive.ubuntu.com/ubuntu focal-backports universe multiverse "
+"deb http://archive.ubuntu.com/ubuntu jammy-backports universe multiverse "
 "restricted main\n"
-"deb http://archive.ubuntu.com/ubuntu focal-updates universe multiverse "
+"deb http://archive.ubuntu.com/ubuntu jammy-updates universe multiverse "
 "restricted main\n"
 
 #. type: Plain text
@@ -649,9 +638,7 @@ msgstr "Для arm64 можно использовать следующий пр
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:335
 #, no-wrap
 msgid "deb http://ports.ubuntu.com/ubuntu-ports bionic main universe restricted multiverse\n"
-msgstr ""
-"deb http://ports.ubuntu.com/ubuntu-ports bionic main universe restricted "
-"multiverse\n"
+msgstr "deb http://ports.ubuntu.com/ubuntu-ports bionic main universe restricted multiverse\n"
 
 #. type: Title ==
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:339
@@ -664,8 +651,8 @@ msgstr "Сложные темы"
 msgid ""
 "A list of all Linux-related man:sysctl[8] knobs can be found in man:linux[4]."
 msgstr ""
-"Список всех параметров man:sysctl[8], связанных с Linux, можно найти в "
-"man:linux[4]."
+"Список всех параметров man:sysctl[8], связанных с Linux, можно найти в man:"
+"linux[4]."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:344
@@ -708,16 +695,11 @@ msgid ""
 "linprocfs  /compat/linux/proc     linprocfs  rw,late                    0  0\n"
 "linsysfs   /compat/linux/sys      linsysfs   rw,late                    0  0\n"
 msgstr ""
-"devfs      /compat/linux/dev      devfs      rw,late                    0  "
-"0\n"
-"tmpfs      /compat/linux/dev/shm  tmpfs      rw,late,size=1g,mode=1777  0  "
-"0\n"
-"fdescfs    /compat/linux/dev/fd   fdescfs    rw,late,linrdlnk           0  "
-"0\n"
-"linprocfs  /compat/linux/proc     linprocfs  rw,late                    0  "
-"0\n"
-"linsysfs   /compat/linux/sys      linsysfs   rw,late                    0  "
-"0\n"
+"devfs      /compat/linux/dev      devfs      rw,late                    0  0\n"
+"tmpfs      /compat/linux/dev/shm  tmpfs      rw,late,size=1g,mode=1777  0  0\n"
+"fdescfs    /compat/linux/dev/fd   fdescfs    rw,late,linrdlnk           0  0\n"
+"linprocfs  /compat/linux/proc     linprocfs  rw,late                    0  0\n"
+"linsysfs   /compat/linux/sys      linsysfs   rw,late                    0  0\n"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:364
@@ -881,8 +863,8 @@ msgid ""
 msgstr ""
 "Поскольку существующая библиотека устарела всего на одну или две версии в "
 "последней цифре, программа должна по-прежнему работать с немного более "
-"старой версией. Однако можно безопасно заменить существующий [.filename]#libc"
-".so# на более новую версию:"
+"старой версией. Однако можно безопасно заменить существующий [."
+"filename]#libc.so# на более новую версию:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:434
@@ -925,9 +907,9 @@ msgid ""
 msgstr ""
 "Ядро FreeBSD использует несколько методов для определения, является ли "
 "запускаемый двоичный файл Linux-программой: оно проверяет бренд в заголовке "
-"ELF-файла, ищет известные пути к ELF-интерпретаторам и проверяет ELF-заметки;"
-" наконец, по умолчанию небрендированные ELF-исполняемые файлы в любом случае "
-"считаются Linux-программами."
+"ELF-файла, ищет известные пути к ELF-интерпретаторам и проверяет ELF-"
+"заметки; наконец, по умолчанию небрендированные ELF-исполняемые файлы в "
+"любом случае считаются Linux-программами."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:444
@@ -978,9 +960,9 @@ msgstr "Установка приложения на основе Linux RPM"
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:469
 msgid ""
-"To install a Linux RPM-based application, first install the "
-"package:archivers/rpm4[] package or port.  Once installed, `root` can use "
-"this command to install a [.filename]#.rpm#:"
+"To install a Linux RPM-based application, first install the package:"
+"archivers/rpm4[] package or port.  Once installed, `root` can use this "
+"command to install a [.filename]#.rpm#:"
 msgstr ""
 "Для установки приложения на основе RPM в Linux сначала установите пакет "
 "package:archivers/rpm4[] или порт. После установки пользователь `root` может "
