--- a/documentation/content/ru/books/handbook/printing/_index.po
+++ b/documentation/content/ru/books/handbook/printing/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookprinting_index/ru/>\n"
@@ -353,9 +353,9 @@ msgid ""
 msgstr ""
 "Несколько параметров связи должны быть известны для взаимодействия с "
 "последовательным принтером. Наиболее важные из них — это _скорость передачи_ "
-"или `BPS` (бит в секунду) и _четность_. Значения могут различаться, но "
+"или `BPS` (бит в секунду) и _чётность_. Значения могут различаться, но "
 "обычно последовательные принтеры используют скорость 9600 и отсутствие "
-"проверки на четность."
+"проверки на чётность."
 
 #. type: Labeled list
 #: documentation/content/en/books/handbook/printing/_index.adoc:186
@@ -427,7 +427,7 @@ msgstr ""
 "подключения работают, но имеют ограничения по длине кабеля и скорости. "
 "Последовательные подключения сложнее настроить. Разводка кабелей различается "
 "в зависимости от модели, а параметры связи, такие как скорость передачи "
-"данных и биты четности, добавляют сложности. К счастью, последовательные "
+"данных и биты чётности, добавляют сложности. К счастью, последовательные "
 "принтеры встречаются редко."
 
 #. type: Title ==
@@ -1484,7 +1484,7 @@ msgstr ""
 "прямого доступа к различным функциям принтера. Принтер с дуплексом может "
 "использовать две очереди: одну для обычной односторонней печати и другую с "
 "фильтром, который отправляет последовательность команд для включения "
-"двусторонней печати, а затем передает входящий файл."
+"двусторонней печати, а затем передаёт входящий файл."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/printing/_index.adoc:655
