--- a/documentation/content/ru/books/handbook/wine/_index.po
+++ b/documentation/content/ru/books/handbook/wine/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-21 04:45+0000\n"
+"POT-Creation-Date: 2025-11-20 21:03+0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/bookshandbookwine_index/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/wine/_index.adoc:1
 #, no-wrap
 msgid "This chapter will describe how to install WINE on a FreeBSD system and how to configure WINE"
-msgstr ""
-"Эта глава описывает, как установить WINE в системе FreeBSD и как его "
-"настроить"
+msgstr "Эта глава описывает, как установить WINE в системе FreeBSD и как его настроить"
 
 #. type: YAML Front Matter: part
 #: documentation/content/en/books/handbook/wine/_index.adoc:1
@@ -97,16 +95,16 @@ msgid ""
 msgstr ""
 "Однако это не эмулятор в традиционном смысле. Многие из этих решений "
 "работают, создавая полностью отдельный компьютер с использованием "
-"программных процессов вместо аппаратного обеспечения. Виртуализация ("
-"например, предоставляемая портом `package:emulators/qemu[]`) работает именно "
-"так. Одно из преимуществ этого подхода — возможность установить полную "
-"версию соответствующей ОС в эмулятор. Это означает, что среда для приложений "
-"не будет отличаться от реальной машины, и высока вероятность, что всё будет "
-"работать. Недостаток этого подхода заключается в том, что программное "
-"обеспечение, имитирующее аппаратное, по своей природе медленнее реального "
-"оборудования. Компьютер, созданный программно (называемый _гостевым_), "
-"требует ресурсов от реальной машины (называемой _хостовой_) и удерживает эти "
-"ресурсы всё время своей работы."
+"программных процессов вместо аппаратного обеспечения. Виртуализация "
+"(например, предоставляемая портом `package:emulators/qemu[]`) работает "
+"именно так. Одно из преимуществ этого подхода — возможность установить "
+"полную версию соответствующей ОС в эмулятор. Это означает, что среда для "
+"приложений не будет отличаться от реальной машины, и высока вероятность, что "
+"всё будет работать. Недостаток этого подхода заключается в том, что "
+"программное обеспечение, имитирующее аппаратное, по своей природе медленнее "
+"реального оборудования. Компьютер, созданный программно (называемый "
+"_гостевым_), требует ресурсов от реальной машины (называемой _хостовой_) и "
+"удерживает эти ресурсы всё время своей работы."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:74
@@ -190,7 +188,7 @@ msgstr "Прежде чем читать эту главу, полезно:"
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:90
 msgid "Understand the crossref:basics[basics,basics of UNIX(R) and FreeBSD]."
-msgstr "Понимайте crossref:basics[basics,основы UNIX(R) и FreeBSD]."
+msgstr "Понимать crossref:basics[basics,основы UNIX(R) и FreeBSD]."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:91
@@ -299,8 +297,9 @@ msgid ""
 "FreeBSD applications for tasks such as running the Windows(R) executables, "
 "configuring the WINE sub-system, or compiling programs with WINE support."
 msgstr ""
-"Приложения FreeBSD для таких задач, как запуск исполняемых файлов Windows(R)"
-", настройка подсистемы WINE или компиляция программ с поддержкой WINE."
+"Приложения FreeBSD для таких задач, как запуск исполняемых файлов "
+"Windows(R), настройка подсистемы WINE или компиляция программ с поддержкой "
+"WINE."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:117
@@ -309,8 +308,8 @@ msgid ""
 "(for example [.filename]#/lib/wine/api-ms-core-memory-l1-1-1.dll.so#, which "
 "is part of the aforementioned memory interface)."
 msgstr ""
-"Большое количество библиотек, реализующих основные функции Windows(R) ("
-"например, [.filename]#/lib/wine/api-ms-core-memory-l1-1-1.dll.so#, которая "
+"Большое количество библиотек, реализующих основные функции Windows(R) "
+"(например, [.filename]#/lib/wine/api-ms-core-memory-l1-1-1.dll.so#, которая "
 "является частью упомянутого интерфейса памяти)."
 
 #. type: Plain text
@@ -333,7 +332,7 @@ msgid ""
 msgstr ""
 "Дополнительные ресурсы Windows(R), в частности шрифты (например, шрифт "
 "Tahoma, который хранится в [.filename]#share/wine/fonts/tahoma.ttf# в "
-"корневой директории установки)."
+"корневом каталоге установки)."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/wine/_index.adoc:121
@@ -395,8 +394,8 @@ msgid ""
 "Wiki]."
 msgstr ""
 "Эти методы подробно описаны на https://wiki.winehq.org/"
-"Wine_User%27s_Guide#Text_mode_programs_.28CUI:_Console_User_Interface.29["
-"вики WINE]."
+"Wine_User%27s_Guide#Text_mode_programs_.28CUI:_Console_User_Interface.29[вики "
+"WINE]."
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/wine/_index.adoc:135
@@ -460,10 +459,10 @@ msgid ""
 "for some time."
 msgstr ""
 "Хотя компания когда-то выпускала нативную версию своего решения CrossOver "
-"для FreeBSD, похоже, что она давно заброшена. Хотя некоторые ресурсы ("
-"например, https://www.codeweavers.com/compatibility/crossover/forum/freebsd["
-"выделенный форум]) всё ещё доступны, на них также давно не наблюдается "
-"активности."
+"для FreeBSD, похоже, что она давно заброшена. Хотя некоторые ресурсы "
+"(например, https://www.codeweavers.com/compatibility/crossover/forum/"
+"freebsd[выделенный форум]) всё ещё доступны, на них также давно не "
+"наблюдается активности."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:154
@@ -980,8 +979,8 @@ msgid ""
 "after install, check the MIME associate for this extension in the current "
 "desktop environment, graphical shell, or file manager."
 msgstr ""
-"В случае, если WINE не является приложением по умолчанию для файлов [."
-"filename]#.EXE# после установки, проверьте ассоциацию MIME для этого "
+"В случае, если WINE не является приложением по умолчанию для файлов "
+"[.filename]#.EXE# после установки, проверьте ассоциацию MIME для этого "
 "расширения в текущем окружении рабочего стола, графической оболочке или "
 "файловом менеджере."
 
@@ -1022,8 +1021,8 @@ msgid ""
 "brand new WINE installation will create the following structure when first "
 "launched by a user:"
 msgstr ""
-"Префикс WINE — это каталог, обычно расположенный в стандартном месте [."
-"filename]#$HOME/.wine#, хотя может находиться и в другом месте. Префикс "
+"Префикс WINE — это каталог, обычно расположенный в стандартном месте "
+"[.filename]#$HOME/.wine#, хотя может находиться и в другом месте. Префикс "
 "представляет собой набор конфигураций и вспомогательных файлов, используемых "
 "WINE для настройки и запуска среды Windows(R), необходимой для работы "
 "конкретного приложения. По умолчанию при первом запуске WINE пользователем "
@@ -1036,8 +1035,8 @@ msgid ""
 "[.filename]#file /usr/share/wine/wine.inf#. It is used by WINE to determine "
 "if a prefix is out of date, and automatically update it if needed."
 msgstr ""
-"[.filename]#.update-timestamp#: содержит дату последнего изменения файла [."
-"filename]#/usr/share/wine/wine.inf#. Используется WINE для определения "
+"[.filename]#.update-timestamp#: содержит дату последнего изменения файла "
+"[.filename]#/usr/share/wine/wine.inf#. Используется WINE для определения "
 "устаревания префикса и его автоматического обновления при необходимости."
 
 #. type: Plain text
@@ -1091,14 +1090,14 @@ msgid ""
 "[.filename]#drive_c#."
 msgstr ""
 "[.filename]#system.reg#: Этот файл реестра содержит информацию об установке "
-"Windows(R), которая в случае WINE представляет собой окружение в [."
-"filename]#drive_c#."
+"Windows(R), которая в случае WINE представляет собой окружение в "
+"[.filename]#drive_c#."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:349
 msgid ""
 "[.filename]#user.reg#: This Registry file contains the current user's "
-"personal configurations, made either by varous software or through the use "
+"personal configurations, made either by various software or through the use "
 "of the Registry Editor."
 msgstr ""
 "[.filename]#user.reg#: Этот файл реестра содержит персональные настройки "
@@ -1238,9 +1237,9 @@ msgid ""
 msgstr ""
 "Выбор на вкладке _Приложения (Applications)_ влияет на область изменений, "
 "вносимых на вкладках _Библиотеки (Libraries)_ и _Графика (Graphics)_, "
-"которые будут ограничены выбранным приложением. Подробнее см. раздел "
-"https://wiki.winehq.org/Wine_User%27s_Guide#Using_Winecfg[Использование "
-"Winecfg] в вики WINE."
+"которые будут ограничены выбранным приложением. Подробнее см. раздел https://"
+"wiki.winehq.org/Wine_User%27s_Guide#Using_Winecfg[Использование Winecfg] в "
+"вики WINE."
 
 #. type: Title ====
 #: documentation/content/en/books/handbook/wine/_index.adoc:389
@@ -1356,8 +1355,8 @@ msgid ""
 "The new override will appear in the _Existing overrides_ list, notice the "
 "_native, builtin_ designation in parentheses."
 msgstr ""
-"Новое переопределение появится в списке _Существующие переопределения ("
-"Existing overrides)_, обратите внимание на обозначение _native, builtin_ в "
+"Новое переопределение появится в списке _Существующие переопределения "
+"(Existing overrides)_, обратите внимание на обозначение _native, builtin_ в "
 "скобках."
 
 #. type: Plain text
@@ -1522,8 +1521,8 @@ msgid ""
 msgstr ""
 "Вкладка _Накопители (Drives)_ позволяет связывать каталоги в основной "
 "системе FreeBSD с буквами дисков в среде Windows(R). Значения по умолчанию "
-"на этой вкладке должны выглядеть знакомо, так как они отображают содержимое ["
-".filename]#dosdevices/# в текущем префиксе WINE. Изменения, сделанные через "
+"на этой вкладке должны выглядеть знакомо, так как они отображают содержимое "
+"[.filename]#dosdevices/# в текущем префиксе WINE. Изменения, сделанные через "
 "это диалоговое окно, отобразятся в [.filename]#dosdevices#, а правильно "
 "оформленные ссылки, созданные в этом каталоге, будут показаны на этой "
 "вкладке."
@@ -1534,8 +1533,8 @@ msgid ""
 "To create a new entry, such as for a CD-ROM (mounted at [.filename]#/mnt/"
 "cdrom#), take the following steps:"
 msgstr ""
-"Чтобы создать новую запись, например, для CD-ROM (монтированного в [."
-"filename]#/mnt/cdrom#), выполните следующие действия:"
+"Чтобы создать новую запись, например, для CD-ROM (монтированного в "
+"[.filename]#/mnt/cdrom#), выполните следующие действия:"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:459
@@ -1571,8 +1570,8 @@ msgid ""
 msgstr ""
 "По умолчанию WINE автоматически определяет тип связанного ресурса, но это "
 "можно переопределить вручную. Дополнительные сведения о расширенных "
-"настройках см. в https://wiki.winehq.org/Wine_User%27s_Guide#Drive_Settings["
-"соответствующем разделе вики WINE]."
+"настройках см. в https://wiki.winehq.org/"
+"Wine_User%27s_Guide#Drive_Settings[соответствующем разделе вики WINE]."
 
 #. type: Title ====
 #: documentation/content/en/books/handbook/wine/_index.adoc:467
@@ -1891,10 +1890,10 @@ msgid ""
 "are also non-gaming applications available for install through Mizutamari."
 msgstr ""
 "https://codeberg.org/Alexander88207/Mizutamari[Mizutamari] — это приложение, "
-"похожее на `winetricks`, хотя вдохновлено игровой системой https://lutris."
-"net/[Lutris] для Linux. Однако, в отличие от неё, Mizutamari ориентировано "
-"не только на игры: через него также можно установить и приложения неигрового "
-"характера."
+"похожее на `winetricks`, хотя вдохновлено игровой системой https://"
+"lutris.net/[Lutris] для Linux. Однако, в отличие от неё, Mizutamari "
+"ориентировано не только на игры: через него также можно установить и "
+"приложения неигрового характера."
 
 #. type: Title ====
 #: documentation/content/en/books/handbook/wine/_index.adoc:573
@@ -2243,8 +2242,8 @@ msgstr ""
 "собственный набор конфигураций, что потенциально хорошо. Однако выгодно "
 "устанавливать приложения, особенно крупные, такие как офисные пакеты или "
 "игры, только один раз. Две причины для этого: обслуживание (обновления ПО "
-"нужно применять только один раз) и эффективность использования хранилища ("
-"отсутствие дублирования файлов)."
+"нужно применять только один раз) и эффективность использования хранилища "
+"(отсутствие дублирования файлов)."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:690
@@ -2504,8 +2503,7 @@ msgid ""
 "# The WINDOWS_USERS may run WINDOWS programs as user windows without a password\n"
 "WINDOWS_USERS ALL = (windows) NOPASSWD: WINDOWS\n"
 msgstr ""
-"# The WINDOWS_USERS may run WINDOWS programs as user windows without a "
-"password\n"
+"# The WINDOWS_USERS may run WINDOWS programs as user windows without a password\n"
 "WINDOWS_USERS ALL = (windows) NOPASSWD: WINDOWS\n"
 
 #. type: Plain text
@@ -2651,9 +2649,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/wine/_index.adoc:813
 #, no-wrap
 msgid "Should the package:emulators/wine-devel[] Package/Port be Installed to Use the Development Version of WINE Instead of Stable?"
-msgstr ""
-"Нужно ли устанавливать пакет package:emulators/wine-devel[] для "
-"использования версии WINE для разработчиков вместо стабильной?"
+msgstr "Нужно ли устанавливать пакет package:emulators/wine-devel[] для использования версии WINE для разработчиков вместо стабильной?"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:817
@@ -2733,10 +2729,10 @@ msgid ""
 "[.filename]#.config/fontconfig/fonts.conf# will add anti-aliasing and make "
 "text more readable."
 msgstr ""
-"Согласно https://forums.freebsd.org/threads/make-wine-ui-fonts-look-good."
-"68273/[сообщению на FreeBSD Forums], добавление следующего в [.filename]#."
-"config/fontconfig/fonts.conf# включит сглаживание и улучшит читаемость "
-"текста."
+"Согласно https://forums.freebsd.org/threads/make-wine-ui-fonts-look-"
+"good.68273/[сообщению на FreeBSD Forums], добавление следующего в "
+"[.filename]#.config/fontconfig/fonts.conf# включит сглаживание и улучшит "
+"читаемость текста."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/wine/_index.adoc:844
@@ -2771,8 +2767,7 @@ msgstr ""
 "  <match target=\"font\">\n"
 "    <edit name=\"antialias\" mode=\"assign\"><bool>true</bool></edit>>\n"
 "    <edit name=\"hinting\" mode=\"assign\"><bool>true</bool></edit>>\n"
-"    <edit name=\"hintstyle\" mode=\"assign\""
-"><const>hintslight</const></edit>>\n"
+"    <edit name=\"hintstyle\" mode=\"assign\"><const>hintslight</const></edit>>\n"
 "    <edit name=\"rgba\" mode=\"assign\"><const>rgb</const></edit>>\n"
 "  </match>\n"
 "</fontconfig>\n"
@@ -2781,9 +2776,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/wine/_index.adoc:859
 #, no-wrap
 msgid "Does Having Windows(R) Installed Elsewhere on a System Help WINE Operate?"
-msgstr ""
-"Помогает ли наличие Windows(R), установленной в другом месте системы, работе "
-"WINE?"
+msgstr "Помогает ли наличие Windows(R), установленной в другом месте системы, работе WINE?"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:864
@@ -2823,10 +2816,10 @@ msgid ""
 "working (or not) on all supported platforms, although (as previously "
 "mentioned), solutions for one platform are often applicable to others."
 msgstr ""
-"Первым шагом в определении совместимости должен быть https://appdb.winehq."
-"org/[WINE AppDB]. Это сборник отчетов о работе (или неработоспособности) "
-"программ на всех поддерживаемых платформах, хотя (как упоминалось ранее) "
-"решения для одной платформы часто применимы и к другим."
+"Первым шагом в определении совместимости должен быть https://"
+"appdb.winehq.org/[WINE AppDB]. Это сборник отчётов о работе (или "
+"неработоспособности) программ на всех поддерживаемых платформах, хотя (как "
+"упоминалось ранее) решения для одной платформы часто применимы и к другим."
 
 #. type: Title ====
 #: documentation/content/en/books/handbook/wine/_index.adoc:875
@@ -2856,8 +2849,8 @@ msgid ""
 msgstr ""
 "Проект _dxvk_, представляющий собой попытку реализации DirectX с "
 "использованием совместимой с FreeBSD графической подсистемы Vulkan, является "
-"одним из таких. Хотя его основная цель — WINE на Linux, https://forums."
-"freebsd.org/threads/what-about-gaming-on-freebsd.723/page-9[некоторые "
+"одним из таких. Хотя его основная цель — WINE на Linux, https://"
+"forums.freebsd.org/threads/what-about-gaming-on-freebsd.723/page-9[некоторые "
 "пользователи FreeBSD сообщают] о компиляции и использовании dxvk."
 
 #. type: Plain text
@@ -2879,9 +2872,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/wine/_index.adoc:889
 #, no-wrap
 msgid "Is There Anywhere FreeBSD WINE Users Gather to Exchange Tips and Tricks?"
-msgstr ""
-"Есть ли место, где пользователи FreeBSD WINE собираются для обмена советами "
-"и хитростями?"
+msgstr "Есть ли место, где пользователи FreeBSD WINE собираются для обмена советами и хитростями?"
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:892
@@ -2908,8 +2899,8 @@ msgid ""
 "https://wiki.freebsd.org/IRC/Channels[FreeBSD IRC channels] including "
 "#freebsd (for general support), #freebsd-games, and others."
 msgstr ""
-"https://wiki.freebsd.org/IRC/Channels[Каналы FreeBSD в IRC], включая #"
-"freebsd (для общих вопросов поддержки), #freebsd-games и другие."
+"https://wiki.freebsd.org/IRC/Channels[Каналы FreeBSD в IRC], включая "
+"#freebsd (для общих вопросов поддержки), #freebsd-games и другие."
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/wine/_index.adoc:896
@@ -2970,6 +2961,15 @@ msgid ""
 "troubleshooting problems with the open source version of WINE."
 msgstr ""
 "Наконец, Codeweavers (разработчик коммерческой версии WINE) активно "
-"участвует в разработке основной версии. Часто ответы на вопросы в https://www"
-".codeweavers.com/support/forums[их форуме поддержки] могут помочь в решении "
-"проблем с открытой версией WINE."
+"участвует в разработке основной версии. Часто ответы на вопросы в https://"
+"www.codeweavers.com/support/forums[их форуме поддержки] могут помочь в "
+"решении проблем с открытой версией WINE."
+
+#~ msgid ""
+#~ "[.filename]#user.reg#: This Registry file contains the current user's "
+#~ "personal configurations, made either by varous software or through the "
+#~ "use of the Registry Editor."
+#~ msgstr ""
+#~ "[.filename]#user.reg#: Этот файл реестра содержит персональные настройки "
+#~ "текущего пользователя, созданные различным программным обеспечением или "
+#~ "через использование редактора реестра."
